--- a/pages/investidor/deposito-confirmacao.html
+++ b/pages/investidor/deposito-confirmacao.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Deposito Confirmado - CrowdInvest</title>
+  <title>Depósito Confirmado - CrowdInvest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -42,8 +42,8 @@
           <i class="bi bi-check-lg" style="font-size: 3rem; color: var(--success);"></i>
         </div>
 
-        <h1 style="color: var(--success); margin-bottom: 10px;">Deposito Confirmado!</h1>
-        <p class="text-muted mb-30">Seu deposito foi processado com sucesso</p>
+        <h1 style="color: var(--success); margin-bottom: 10px;">Depósito Confirmado!</h1>
+        <p class="text-muted mb-30">Seu depósito foi processado com sucesso</p>
 
         <!-- Detalhes -->
         <div style="background: var(--bg); padding: 25px; border-radius: var(--radius); margin-bottom: 30px; text-align: left;">
@@ -55,7 +55,7 @@
             <hr style="margin: 5px 0; border: none; border-top: 1px solid var(--border);">
             <div class="flex-between">
               <span class="text-muted">Protocolo:</span>
-              <strong>DEP-2026-00234</strong>
+              <strong>DEP-00234</strong>
             </div>
             <div class="flex-between">
               <span class="text-muted">Data/Hora:</span>
@@ -77,7 +77,7 @@
           </div>
         </div>
 
-        <!-- Acoes -->
+        <!-- Ações -->
         <div class="flex gap-10" style="justify-content: center; flex-wrap: wrap;">
           <a href="ofertas.html" class="btn btn-primary">
             <i class="bi bi-megaphone"></i> Ver Ofertas para Investir
@@ -91,32 +91,38 @@
 
         <!-- Info Adicional -->
         <div style="display: flex; flex-direction: column; gap: 10px; text-align: left; font-size: 0.875rem;">
-          <div class="flex gap-10">
+          <div class="header-user-info">
             <i class="bi bi-envelope" style="color: var(--primary);"></i>
             <span>Enviamos um comprovante para seu e-mail</span>
           </div>
-          <div class="flex gap-10">
+          <div class="header-user-info">
             <i class="bi bi-percent" style="color: var(--success);"></i>
-            <span>Seu saldo rende 100% do CDI enquanto nao investido</span>
+            <span>Seu saldo rende 100% do CDI enquanto não investido</span>
           </div>
-          <div class="flex gap-10">
+          <div class="header-user-info">
             <i class="bi bi-shield-check" style="color: var(--primary);"></i>
             <span>Recursos mantidos em conta escrow segregada</span>
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
