--- a/pages/investidor/investimento-detalhe.html
+++ b/pages/investidor/investimento-detalhe.html
@@ -10,13 +10,13 @@
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -40,7 +40,7 @@
         <div class="flex gap-10" style="align-items: center;">
           <a href="carteira.html" class="btn btn-outline btn-sm"><i class="bi bi-arrow-left"></i></a>
           <div>
-            <h1 class="page-title">TechStart Inovacao</h1>
+            <h1 class="page-title">TechStart Inovação</h1>
             <p class="text-muted">Detalhe do seu investimento</p>
           </div>
         </div>
@@ -55,7 +55,7 @@
             <h2 style="font-size: 2.5rem; margin-bottom: 15px;">R$ 5.000,00</h2>
             <div class="flex gap-20">
               <div>
-                <p style="opacity: 0.8; font-size: 0.875rem;">Participacao</p>
+                <p style="opacity: 0.8; font-size: 0.875rem;">Participação</p>
                 <strong>0,60%</strong>
               </div>
               <div>
@@ -64,7 +64,7 @@
               </div>
               <div>
                 <p style="opacity: 0.8; font-size: 0.875rem;">Protocolo</p>
-                <strong>INV-2026-00156</strong>
+                <strong>INV-00156</strong>
               </div>
             </div>
           </div>
@@ -88,7 +88,7 @@
               <strong>R$ 5.000,00</strong>
             </div>
             <div class="flex-between">
-              <span class="text-muted">Participacao (Equity):</span>
+              <span class="text-muted">Participação (Equity):</span>
               <strong>0,60%</strong>
             </div>
             <div class="flex-between">
@@ -101,15 +101,15 @@
             </div>
             <hr style="margin: 5px 0; border: none; border-top: 1px solid var(--border);">
             <div class="flex-between">
-              <span class="text-muted">Tipo de Titulo:</span>
-              <strong>Participacao Societaria</strong>
+              <span class="text-muted">Tipo de Título:</span>
+              <strong>Participação Societária</strong>
             </div>
             <div class="flex-between">
               <span class="text-muted">Valuation da Empresa:</span>
               <strong>R$ 3.333.333,33</strong>
             </div>
             <div class="flex-between">
-              <span class="text-muted">Prazo de Desistencia:</span>
+              <span class="text-muted">Prazo de Desistência:</span>
               <strong style="color: var(--text-muted);">Expirado (20/01/2026)</strong>
             </div>
           </div>
@@ -123,7 +123,7 @@
           <div style="display: flex; flex-direction: column; gap: 15px;">
             <div class="flex-between">
               <span class="text-muted">Razao Social:</span>
-              <strong>TechStart Inovacao LTDA</strong>
+              <strong>TechStart Inovação LTDA</strong>
             </div>
             <div class="flex-between">
               <span class="text-muted">CNPJ:</span>
@@ -134,13 +134,13 @@
               <strong>Tecnologia / SaaS</strong>
             </div>
             <div class="flex-between">
-              <span class="text-muted">Localizacao:</span>
-              <strong>Sao Paulo/SP</strong>
+              <span class="text-muted">Localização:</span>
+              <strong>São Paulo/SP</strong>
             </div>
             <hr style="margin: 5px 0; border: none; border-top: 1px solid var(--border);">
             <div class="flex-between">
               <span class="text-muted">Status da Oferta:</span>
-              <span class="badge badge-info">Em Captacao (75%)</span>
+              <span class="badge badge-info">Em Captação (75%)</span>
             </div>
             <div class="flex-between">
               <span class="text-muted">Total Captado:</span>
@@ -167,7 +167,7 @@
             <i class="bi bi-check-circle" style="color: var(--success); font-size: 1.25rem;"></i>
             <div>
               <strong>Tag-Along</strong>
-              <p class="text-muted" style="font-size: 0.875rem;">Direito de vender sua participacao junto aos fundadores em caso de venda da empresa</p>
+              <p class="text-muted" style="font-size: 0.875rem;">Direito de vender sua participação junto aos fundadores em caso de venda da empresa</p>
             </div>
           </div>
           <div class="flex gap-10" style="align-items: flex-start; padding: 15px; background: var(--bg); border-radius: var(--radius);">
@@ -180,15 +180,15 @@
           <div class="flex gap-10" style="align-items: flex-start; padding: 15px; background: var(--bg); border-radius: var(--radius);">
             <i class="bi bi-check-circle" style="color: var(--success); font-size: 1.25rem;"></i>
             <div>
-              <strong>Relatorios Trimestrais</strong>
-              <p class="text-muted" style="font-size: 0.875rem;">Receber atualizacoes periodicas sobre a empresa</p>
+              <strong>Relatórios Trimestrais</strong>
+              <p class="text-muted" style="font-size: 0.875rem;">Receber atualizações periodicas sobre a empresa</p>
             </div>
           </div>
           <div class="flex gap-10" style="align-items: flex-start; padding: 15px; background: var(--bg); border-radius: var(--radius);">
             <i class="bi bi-check-circle" style="color: var(--success); font-size: 1.25rem;"></i>
             <div>
-              <strong>Participacao nos Lucros</strong>
-              <p class="text-muted" style="font-size: 0.875rem;">Receber dividendos proporcionais a sua participacao</p>
+              <strong>Participação nos Lucros</strong>
+              <p class="text-muted" style="font-size: 0.875rem;">Receber dividendos proporcionais a sua participação</p>
             </div>
           </div>
         </div>
@@ -201,7 +201,11 @@
           <span class="badge badge-secondary">0 rendimentos</span>
         </div>
         <div class="alert alert-info">
-          <i class="bi bi-info-circle"></i> Voce ainda nao recebeu rendimentos desta empresa. Os dividendos serao distribuidos conforme politica da empresa apos o encerramento da captacao.
+          <i class="bi bi-info-circle"></i>
+          <div>
+            <strong>Sem rendimentos:</strong><br>
+            Você ainda não recebeu rendimentos desta empresa. Os dividendos serao distribuidos conforme política da empresa após o encerramento da captação.
+          </div>
         </div>
       </div>
 
@@ -216,7 +220,7 @@
               <i class="bi bi-file-earmark-pdf" style="font-size: 1.25rem; color: #dc3545;"></i>
               <div>
                 <strong>Comprovante de Investimento</strong>
-                <p class="text-muted" style="font-size: 0.75rem;">INV-2026-00156.pdf</p>
+                <p class="text-muted" style="font-size: 0.75rem;">INV-00156.pdf</p>
               </div>
             </div>
             <button class="btn btn-outline btn-sm" onclick="showModal('downloadingModal')"><i class="bi bi-download"></i></button>
@@ -226,7 +230,7 @@
               <i class="bi bi-file-earmark-pdf" style="font-size: 1.25rem; color: #dc3545;"></i>
               <div>
                 <strong>Termo de Investimento Assinado</strong>
-                <p class="text-muted" style="font-size: 0.75rem;">TERMO-2026-00156.pdf</p>
+                <p class="text-muted" style="font-size: 0.75rem;">TERMO-00156.pdf</p>
               </div>
             </div>
             <button class="btn btn-outline btn-sm" onclick="showModal('downloadingModal')"><i class="bi bi-download"></i></button>
@@ -244,10 +248,10 @@
         </div>
       </div>
 
-      <!-- Acoes -->
+      <!-- Ações -->
       <div class="card mt-20">
         <div class="card-header">
-          <h3 class="card-title"><i class="bi bi-gear"></i> Acoes</h3>
+          <h3 class="card-title"><i class="bi bi-gear"></i> Ações</h3>
         </div>
         <div class="flex gap-10" style="flex-wrap: wrap;">
           <a href="documentos.html" class="btn btn-outline">
@@ -261,13 +265,13 @@
           </a>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
@@ -279,7 +283,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Download Iniciado</h3>
-        <p class="text-muted">O arquivo esta sendo baixado para seu dispositivo.</p>
+        <p class="text-muted">O arquivo está sendo baixado para seu dispositivo.</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('downloadingModal')">OK</button>
       </div>
     </div>
@@ -298,5 +302,11 @@
   </div>
 
   <script src="../../js/app.js"></script>
+  
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
