--- a/pages/investidor/investir-sucesso.html
+++ b/pages/investidor/investir-sucesso.html
@@ -10,13 +10,13 @@
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -49,7 +49,7 @@
             <h4 style="margin-bottom: 15px;">Detalhes do Investimento</h4>
             <div class="flex-between" style="padding: 8px 0; border-bottom: 1px solid var(--border);">
               <span>Empresa:</span>
-              <strong>TechStart Inovacao</strong>
+              <strong>TechStart Inovação</strong>
             </div>
             <div class="flex-between" style="padding: 8px 0; border-bottom: 1px solid var(--border);">
               <span>Valor:</span>
@@ -64,30 +64,36 @@
               <strong>19/01/2026</strong>
             </div>
             <div class="flex-between" style="padding: 8px 0;">
-              <span>Numero:</span>
-              <strong>#INV-2026-00128</strong>
+              <span>Número:</span>
+              <strong>#INV-00128</strong>
             </div>
           </div>
 
           <!-- Withdrawal Period -->
           <div class="alert alert-warning">
-            <strong>Periodo de Desistencia</strong><br>
-            Voce tem ate <strong>24/01/2026</strong> (5 dias uteis) para desistir deste investimento sem custos, conforme RCVM 88/2022.
+            <i class="bi bi-exclamation-triangle"></i>
+            <div>
+              <strong>Período de Desistência:</strong><br>
+              Você tem até <strong>24/01/2026</strong> (5 dias úteis) para desistir deste investimento sem custos, conforme RCVM 88/2022.
+            </div>
           </div>
 
           <!-- Updated Limit -->
           <div class="alert alert-info">
-            <strong>Limite atualizado:</strong><br>
-            Investido em 2026: R$ 20.000 | Disponivel: R$ 0
+            <i class="bi bi-info-circle"></i>
+            <div>
+              <strong>Limite atualizado:</strong><br>
+              Investido em 2026: R$ 20.000 | Disponível: R$ 0
+            </div>
           </div>
 
           <!-- Next Steps -->
           <div style="text-align: left; margin: 20px 0;">
-            <h4 style="margin-bottom: 15px;">Proximos Passos:</h4>
+            <h4 style="margin-bottom: 15px;">Próximos Passos:</h4>
             <ul style="margin-left: 20px; color: var(--text-muted);">
-              <li style="margin-bottom: 10px;">Voce recebera um e-mail com a confirmacao</li>
+              <li style="margin-bottom: 10px;">Você receberá um e-mail com a confirmação</li>
               <li style="margin-bottom: 10px;">Acompanhe o andamento da oferta no seu painel</li>
-              <li style="margin-bottom: 10px;">Ao final da oferta, voce recebera os documentos de participacao</li>
+              <li style="margin-bottom: 10px;">Ao final da oferta, você receberá os documentos de participação</li>
             </ul>
           </div>
 
@@ -97,18 +103,24 @@
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
