--- a/pages/investidor/investir.html
+++ b/pages/investidor/investir.html
@@ -10,13 +10,13 @@
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -56,14 +56,14 @@
         </div>
 
         <div class="card">
-          <h2 style="margin-bottom: 20px;">Investir em TechStart Inovacao</h2>
+          <h2 style="margin-bottom: 20px;">Investir em TechStart Inovação</h2>
 
           <!-- Offer Summary -->
           <div style="background: var(--bg); padding: 20px; border-radius: var(--radius); margin-bottom: 30px;">
             <div class="grid-2" style="gap: 20px;">
               <div>
                 <p class="text-muted">Empresa</p>
-                <strong>TechStart Inovacao</strong>
+                <strong>TechStart Inovação</strong>
               </div>
               <div>
                 <p class="text-muted">Setor</p>
@@ -89,8 +89,8 @@
                 <input type="text" class="form-input" style="padding-left: 40px;" placeholder="0,00" value="5.000,00" id="investmentValue">
               </div>
               <div class="flex-between mt-20">
-                <span class="form-hint">Minimo: R$ 1.000</span>
-                <span class="form-hint">Maximo disponivel: R$ 5.000</span>
+                <span class="form-hint">Mínimo: R$ 1.000</span>
+                <span class="form-hint">Máximo disponível: R$ 5.000</span>
               </div>
             </div>
 
@@ -103,9 +103,12 @@
 
             <!-- Investor Limit -->
             <div class="alert alert-info">
-              <strong>Seu limite anual (RCVM 88):</strong> R$ 20.000,00<br>
-              <strong>Ja investido em 2026:</strong> R$ 15.000,00<br>
-              <strong>Disponivel:</strong> R$ 5.000,00
+              <i class="bi bi-info-circle"></i>
+              <div>
+                <strong>Seu limite anual (RCVM 88):</strong> R$ 20.000,00<br>
+                <strong>Já investido em 2026:</strong> R$ 15.000,00<br>
+                <strong>Disponível:</strong> R$ 5.000,00
+              </div>
             </div>
 
             <!-- Equity calculation -->
@@ -119,7 +122,7 @@
                 <strong style="color: var(--primary);">1,5%</strong>
               </div>
               <p class="text-muted" style="font-size: 0.75rem; margin-top: 10px;">
-                *O percentual final sera definido ao termino da oferta
+                *O percentual final será definido ao término da oferta
               </p>
             </div>
 
@@ -128,21 +131,31 @@
         </div>
 
         <div class="alert alert-warning">
-          <strong>Aviso de Risco:</strong> Investimentos em startups sao de alto risco. Voce pode perder todo o capital investido. Leia atentamente o material da oferta.
+          <i class="bi bi-exclamation-triangle"></i>
+          <div>
+            <strong>Aviso de Risco:</strong><br>
+            Investimentos em startups são de alto risco. Você pode perder todo o capital investido. Leia atentamente o material da oferta.
+          </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
