--- a/pages/investidor/meus-investimentos.html
+++ b/pages/investidor/meus-investimentos.html
@@ -9,5 +9,10 @@
 </head>
 <body class="theme-investidor">
   <p>Redirecionando para <a href="carteira.html">Minha Carteira</a>...</p>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
