--- a/pages/investidor/oferta-detalhe-cr.html
+++ b/pages/investidor/oferta-detalhe-cr.html
@@ -10,13 +10,13 @@
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -45,18 +45,18 @@
 
           <div class="card mt-20">
             <h3 style="margin-bottom: 20px;">Sobre a Emissao</h3>
-            <p class="text-muted">O CR SolarTech Energia e um titulo de renda fixa lastreado em recebiveis provenientes de contratos de fornecimento de energia solar fotovoltaica para empresas de grande porte, com prazo de 48 meses.</p>
+            <p class="text-muted">O CR SolarTech Energia e um título de renda fixa lastreado em recebiveis provenientes de contratos de fornecimento de energia solar fotovoltaica para empresas de grande porte, com prazo de 48 meses.</p>
 
             <h4 style="margin-top: 20px; margin-bottom: 10px;">Dados da Empresa</h4>
             <ul style="margin-left: 20px; color: var(--text-muted);">
-              <li>8 anos de operacao no mercado de energia solar</li>
+              <li>8 anos de operação no mercado de energia solar</li>
               <li>Mais de 200 MW instalados</li>
               <li>45 contratos corporativos ativos</li>
               <li>Clientes: industrias, shoppings, hospitais</li>
-              <li>Crescimento medio de 40% a.a. nos ultimos 3 anos</li>
+              <li>Crescimento medio de 40% a.a. nos últimos 3 anos</li>
             </ul>
 
-            <h4 style="margin-top: 20px; margin-bottom: 10px;">Lastro da Operacao</h4>
+            <h4 style="margin-top: 20px; margin-bottom: 10px;">Lastro da Operação</h4>
             <p class="text-muted">Recebiveis provenientes de contratos de fornecimento de energia (PPAs - Power Purchase Agreements) com empresas de grande porte, com prazo medio de 15 anos e reajuste anual pelo IPCA.</p>
           </div>
 
@@ -65,15 +65,15 @@
             <div style="display: flex; flex-direction: column; gap: 15px;">
               <div style="padding: 15px; background: var(--bg); border-radius: var(--radius); border-left: 4px solid #8b5cf6;">
                 <strong>Cessao Fiduciaria de Recebiveis</strong>
-                <p class="text-muted" style="font-size: 0.875rem;">Contratos de energia cedidos fiduciariamente ate a liquidacao do CR.</p>
+                <p class="text-muted" style="font-size: 0.875rem;">Contratos de energia cedidos fiduciariamente até a liquidação do CR.</p>
               </div>
               <div style="padding: 15px; background: var(--bg); border-radius: var(--radius); border-left: 4px solid #22c55e;">
-                <strong>Alienacao Fiduciaria de Equipamentos</strong>
+                <strong>Alienação Fiduciaria de Equipamentos</strong>
                 <p class="text-muted" style="font-size: 0.875rem;">Paineis solares e inversores dados em garantia.</p>
               </div>
               <div style="padding: 15px; background: var(--bg); border-radius: var(--radius); border-left: 4px solid #0891b2;">
                 <strong>Conta Vinculada</strong>
-                <p class="text-muted" style="font-size: 0.875rem;">Recebiveis depositados em conta vinculada com travas bancarias.</p>
+                <p class="text-muted" style="font-size: 0.875rem;">Recebiveis depositados em conta vinculada com travas bancárias.</p>
               </div>
               <div style="padding: 15px; background: var(--bg); border-radius: var(--radius); border-left: 4px solid #f59e0b;">
                 <strong>Fundo de Reserva</strong>
@@ -101,7 +101,7 @@
               </div>
               <div class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius);">
                 <div>
-                  <strong>Hospital Sao Lucas</strong>
+                  <strong>Hospital São Lucas</strong>
                   <p class="text-muted" style="font-size: 0.75rem;">Contrato: 10 anos | Rating: A</p>
                 </div>
                 <span class="badge badge-info">20%</span>
@@ -119,24 +119,24 @@
           <div class="card">
             <h3 style="margin-bottom: 20px;">Documentos</h3>
             <div style="display: flex; flex-direction: column; gap: 10px;">
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
-                <span><i class="bi bi-file-earmark-pdf"></i> Termo de Securitizacao</span>
+              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);" onclick="Modals.view('Termo de Securitização'); return false;">
+                <span><i class="bi bi-file-earmark-pdf"></i> Termo de Securitização</span>
                 <span class="text-muted">2.8 MB</span>
               </a>
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
+              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);" onclick="Modals.view('Prospecto da Emissao'); return false;">
                 <span><i class="bi bi-file-earmark-pdf"></i> Prospecto da Emissao</span>
                 <span class="text-muted">5.2 MB</span>
               </a>
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
-                <span><i class="bi bi-file-earmark-pdf"></i> Laudo de Avaliacao dos Equipamentos</span>
+              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);" onclick="Modals.view('Laudo de Avaliação dos Equipamentos'); return false;">
+                <span><i class="bi bi-file-earmark-pdf"></i> Laudo de Avaliação dos Equipamentos</span>
                 <span class="text-muted">1.1 MB</span>
               </a>
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
+              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);" onclick="Modals.view('Resumo dos Contratos'); return false;">
                 <span><i class="bi bi-file-earmark-pdf"></i> Resumo dos Contratos (PPAs)</span>
                 <span class="text-muted">780 KB</span>
               </a>
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
-                <span><i class="bi bi-file-earmark-pdf"></i> Parecer Juridico</span>
+              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);" onclick="Modals.view('Parecer Jurídico'); return false;">
+                <span><i class="bi bi-file-earmark-pdf"></i> Parecer Jurídico</span>
                 <span class="text-muted">520 KB</span>
               </a>
             </div>
@@ -177,7 +177,7 @@
             </div>
             <p class="text-center text-muted mb-20">68% da meta atingida</p>
 
-            <!-- Dados especificos de CR -->
+            <!-- Dados específicos de CR -->
             <div style="background: linear-gradient(135deg, #8b5cf6, #7c3aed); color: white; padding: 20px; border-radius: var(--radius); margin-bottom: 20px;">
               <h4 style="margin-bottom: 15px; opacity: 0.9;">Rentabilidade</h4>
               <div style="font-size: 2rem; font-weight: bold; margin-bottom: 5px;">IPCA + 10% a.a.</div>
@@ -194,7 +194,7 @@
                 <strong>Mensal</strong>
               </div>
               <div class="flex-between mt-20">
-                <span>Amortizacao:</span>
+                <span>Amortização:</span>
                 <strong>Mensal (SAC)</strong>
               </div>
               <div class="flex-between mt-20">
@@ -206,11 +206,11 @@
                 <strong>Cessao Fiduciaria</strong>
               </div>
               <div class="flex-between mt-20">
-                <span>Investimento minimo:</span>
+                <span>Investimento mínimo:</span>
                 <strong>R$ 2.000</strong>
               </div>
               <div class="flex-between mt-20">
-                <span>Seu limite disponivel:</span>
+                <span>Seu limite disponível:</span>
                 <strong style="color: var(--primary);">R$ 5.000</strong>
               </div>
             </div>
@@ -222,27 +222,33 @@
             <a href="investir.html?id=6&type=cr" class="btn btn-primary btn-block btn-lg mt-20">Investir Agora</a>
 
             <div class="alert alert-warning mt-20" style="font-size: 0.875rem;">
-              <strong>Atencao:</strong> CRs sao investimentos de risco. Leia atentamente o termo de securitizacao antes de investir.
+              <strong>Atenção:</strong> CRs são investimentos de risco. Leia atentamente o termo de securitização antes de investir.
             </div>
 
             <p class="text-center text-muted" style="font-size: 0.75rem; margin-top: 15px;">
-              Prazo de desistencia: 5 dias apos o investimento (RCVM 88)
+              Prazo de desistência: 5 dias após o investimento (RCVM 88)
             </p>
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
