--- a/pages/investidor/ofertas.html
+++ b/pages/investidor/ofertas.html
@@ -10,12 +10,12 @@
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -25,7 +25,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -36,7 +36,7 @@
 
       <div class="page-header">
         <div>
-          <h1 class="page-title">Ofertas Disponiveis</h1>
+          <h1 class="page-title">Ofertas Disponíveis</h1>
           <p class="text-muted">9 ofertas abertas para investimento</p>
         </div>
         <span class="badge badge-info" style="font-size: 0.85rem; padding: 10px 14px;">
@@ -62,7 +62,7 @@
             <select class="form-input" style="padding: 8px 10px; font-size: 0.85rem;">
               <option>Todos</option>
               <option>Tecnologia</option>
-              <option>Saude</option>
+              <option>Saúde</option>
               <option>Imobiliario</option>
               <option>Agro</option>
               <option>Energia</option>
@@ -72,13 +72,23 @@
             <label class="form-label" style="font-size: 0.75rem; margin-bottom: 4px;">Ordenar</label>
             <select class="form-input" style="padding: 8px 10px; font-size: 0.85rem;">
               <option>Mais recentes</option>
-              <option>Maior captacao</option>
+              <option>Maior captação</option>
               <option>Menor prazo</option>
             </select>
           </div>
           <div style="flex: 2; min-width: 160px;">
             <input type="text" class="form-input" placeholder="Buscar empresa..." style="padding: 8px 10px; font-size: 0.85rem;">
           </div>
+        </div>
+      </div>
+
+      <!-- Legenda de Tipos de Oferta -->
+      <div class="card mb-15" style="padding: 14px;">
+        <div class="flex gap-20" style="flex-wrap: wrap; justify-content: center; font-size: 0.8rem;">
+          <span class="flex gap-10" style="align-items: center;"><span style="width: 10px; height: 10px; background: #7c3aed; border-radius: 50%;"></span> <strong>Equity</strong> - Participação</span>
+          <span class="flex gap-10" style="align-items: center;"><span style="width: 10px; height: 10px; background: #0891b2; border-radius: 50%;"></span> <strong>CRI</strong> - Imobiliário</span>
+          <span class="flex gap-10" style="align-items: center;"><span style="width: 10px; height: 10px; background: #22c55e; border-radius: 50%;"></span> <strong>CRA</strong> - Agro</span>
+          <span class="flex gap-10" style="align-items: center;"><span style="width: 10px; height: 10px; background: #8b5cf6; border-radius: 50%;"></span> <strong>CR</strong> - Outros</span>
         </div>
       </div>
 
@@ -93,9 +103,9 @@
             TS
           </div>
           <div class="offer-body">
-            <div class="offer-title">TechStart Inovacao</div>
-            <div class="offer-sector"><i class="bi bi-geo-alt"></i> Sao Paulo, SP • Tecnologia / SaaS</div>
-            <div class="offer-description">Plataforma SaaS para gestao de startups com mais de 500 clientes ativos em 12 paises.</div>
+            <div class="offer-title">TechStart Inovação</div>
+            <div class="offer-sector"><i class="bi bi-geo-alt"></i> São Paulo, SP • Tecnologia / SaaS</div>
+            <div class="offer-description">Plataforma SaaS para gestão de startups com mais de 500 clientes ativos em 12 paises.</div>
             <div class="offer-tags">
               <span class="offer-tag highlight"><i class="bi bi-graph-up"></i> +200% YoY</span>
               <span class="offer-tag"><i class="bi bi-people"></i> 500 clientes</span>
@@ -108,7 +118,7 @@
               </div>
               <div class="offer-stat">
                 <div class="offer-stat-value">R$ 1k</div>
-                <div class="offer-stat-label">Minimo</div>
+                <div class="offer-stat-label">Mínimo</div>
               </div>
             </div>
             <div class="offer-info">
@@ -142,7 +152,7 @@
             <div class="offer-sector"><i class="bi bi-geo-alt"></i> Campinas, SP • Imobiliario / Residencial</div>
             <div class="offer-description">Empreendimento residencial com 120 unidades em Campinas-SP. Entrega prevista para 2027.</div>
             <div class="offer-tags">
-              <span class="offer-tag highlight"><i class="bi bi-shield-check"></i> Alienacao Fiduc.</span>
+              <span class="offer-tag highlight"><i class="bi bi-shield-check"></i> Alienação Fiduc.</span>
               <span class="offer-tag"><i class="bi bi-building"></i> 120 unidades</span>
               <span class="offer-tag"><i class="bi bi-calendar-check"></i> 2027</span>
             </div>
@@ -157,12 +167,12 @@
               </div>
               <div class="offer-stat">
                 <div class="offer-stat-value">R$ 1k</div>
-                <div class="offer-stat-label">Minimo</div>
+                <div class="offer-stat-label">Mínimo</div>
               </div>
             </div>
             <div class="offer-info">
               <div class="offer-info-row"><span>Emissor:</span> <strong>Construtora XYZ</strong></div>
-              <div class="offer-info-row"><span>Garantia:</span> <strong>Alienacao Fiduciaria</strong></div>
+              <div class="offer-info-row"><span>Garantia:</span> <strong>Alienação Fiduciaria</strong></div>
               <div class="offer-info-row"><span>Rating:</span> <strong>A- (Agencia ABC)</strong></div>
               <div class="offer-info-row"><span>Pagamento:</span> <strong>Mensal</strong></div>
             </div>
@@ -188,12 +198,12 @@
           </div>
           <div class="offer-body">
             <div class="offer-title">Cooperativa AgroVerde</div>
-            <div class="offer-sector"><i class="bi bi-geo-alt"></i> Ribeirao Preto, SP • Agronegocio / Graos</div>
-            <div class="offer-description">Cooperativa com 200 produtores associados. Exporta soja e milho para Asia e Europa.</div>
+            <div class="offer-sector"><i class="bi bi-geo-alt"></i> Ribeirao Preto, SP • Agronegócio / Graos</div>
+            <div class="offer-description">Cooperativa com 200 produtores associados. Exporta sojá e milho para Asia e Europa.</div>
             <div class="offer-tags">
               <span class="offer-tag highlight"><i class="bi bi-shield-check"></i> CPR + Aval</span>
               <span class="offer-tag"><i class="bi bi-people"></i> 200 produtores</span>
-              <span class="offer-tag"><i class="bi bi-box-seam"></i> Exportacao</span>
+              <span class="offer-tag"><i class="bi bi-box-seam"></i> Exportação</span>
             </div>
             <div class="offer-highlight">
               <span class="offer-highlight-label"><i class="bi bi-percent"></i> Taxa</span>
@@ -206,7 +216,7 @@
               </div>
               <div class="offer-stat">
                 <div class="offer-stat-value">R$ 500</div>
-                <div class="offer-stat-label">Minimo</div>
+                <div class="offer-stat-label">Mínimo</div>
               </div>
             </div>
             <div class="offer-info">
@@ -255,7 +265,7 @@
               </div>
               <div class="offer-stat">
                 <div class="offer-stat-value">R$ 2k</div>
-                <div class="offer-stat-label">Minimo</div>
+                <div class="offer-stat-label">Mínimo</div>
               </div>
             </div>
             <div class="offer-info">
@@ -286,11 +296,11 @@
           </div>
           <div class="offer-body">
             <div class="offer-title">HealthTech Solutions</div>
-            <div class="offer-sector"><i class="bi bi-geo-alt"></i> Rio de Janeiro, RJ • Saude / Telemedicina</div>
-            <div class="offer-description">App de telemedicina com 50k usuarios ativos. Faturamento cresceu 200% no ultimo ano.</div>
+            <div class="offer-sector"><i class="bi bi-geo-alt"></i> Rio de Janeiro, RJ • Saúde / Telemedicina</div>
+            <div class="offer-description">App de telemedicina com 50k usuários ativos. Faturamento cresceu 200% no último ano.</div>
             <div class="offer-tags">
               <span class="offer-tag highlight"><i class="bi bi-graph-up"></i> +200% YoY</span>
-              <span class="offer-tag"><i class="bi bi-phone"></i> 50k usuarios</span>
+              <span class="offer-tag"><i class="bi bi-phone"></i> 50k usuários</span>
               <span class="offer-tag"><i class="bi bi-heart-pulse"></i> HealthTech</span>
             </div>
             <div class="offer-stats">
@@ -300,7 +310,7 @@
               </div>
               <div class="offer-stat">
                 <div class="offer-stat-value">R$ 2k</div>
-                <div class="offer-stat-label">Minimo</div>
+                <div class="offer-stat-label">Mínimo</div>
               </div>
             </div>
             <div class="offer-info">
@@ -331,10 +341,10 @@
           </div>
           <div class="offer-body">
             <div class="offer-title">Comercial Prime Tower</div>
-            <div class="offer-sector"><i class="bi bi-geo-alt"></i> Sao Paulo, SP • Imobiliario / Comercial</div>
-            <div class="offer-description">Torre comercial classe A em Sao Paulo com 95% de ocupacao e inquilinos AAA.</div>
+            <div class="offer-sector"><i class="bi bi-geo-alt"></i> São Paulo, SP • Imobiliario / Comercial</div>
+            <div class="offer-description">Torre comercial classe A em São Paulo com 95% de ocupação e inquilinos AAA.</div>
             <div class="offer-tags">
-              <span class="offer-tag highlight"><i class="bi bi-shield-check"></i> Alienacao Fiduc.</span>
+              <span class="offer-tag highlight"><i class="bi bi-shield-check"></i> Alienação Fiduc.</span>
               <span class="offer-tag"><i class="bi bi-building"></i> 95% ocupado</span>
               <span class="offer-tag"><i class="bi bi-award"></i> Rating AA</span>
             </div>
@@ -349,12 +359,12 @@
               </div>
               <div class="offer-stat">
                 <div class="offer-stat-value">R$ 5k</div>
-                <div class="offer-stat-label">Minimo</div>
+                <div class="offer-stat-label">Mínimo</div>
               </div>
             </div>
             <div class="offer-info">
-              <div class="offer-info-row"><span>Emissor:</span> <strong>Prime Imoveis</strong></div>
-              <div class="offer-info-row"><span>Garantia:</span> <strong>Alienacao Fiduciaria</strong></div>
+              <div class="offer-info-row"><span>Emissor:</span> <strong>Prime Imóveis</strong></div>
+              <div class="offer-info-row"><span>Garantia:</span> <strong>Alienação Fiduciaria</strong></div>
               <div class="offer-info-row"><span>Rating:</span> <strong>AA (Fitch)</strong></div>
               <div class="offer-info-row"><span>Pagamento:</span> <strong>Mensal</strong></div>
             </div>
@@ -380,8 +390,8 @@
           </div>
           <div class="offer-body">
             <div class="offer-title">EcoFood Organicos</div>
-            <div class="offer-sector"><i class="bi bi-geo-alt"></i> Curitiba, PR • Alimentacao / Organicos</div>
-            <div class="offer-description">Delivery de alimentos organicos presente em 8 cidades. Meta de 20 cidades ate 2027.</div>
+            <div class="offer-sector"><i class="bi bi-geo-alt"></i> Curitiba, PR • Alimentação / Organicos</div>
+            <div class="offer-description">Delivery de alimentos organicos presente em 8 cidades. Meta de 20 cidades até 2027.</div>
             <div class="offer-tags">
               <span class="offer-tag highlight"><i class="bi bi-graph-up"></i> +150% YoY</span>
               <span class="offer-tag"><i class="bi bi-geo-alt"></i> 8 cidades</span>
@@ -394,7 +404,7 @@
               </div>
               <div class="offer-stat">
                 <div class="offer-stat-value">R$ 500</div>
-                <div class="offer-stat-label">Minimo</div>
+                <div class="offer-stat-label">Mínimo</div>
               </div>
             </div>
             <div class="offer-info">
@@ -425,12 +435,12 @@
           </div>
           <div class="offer-body">
             <div class="offer-title">Fazenda Boa Vista</div>
-            <div class="offer-sector"><i class="bi bi-geo-alt"></i> Patrocinio, MG • Agronegocio / Cafe</div>
-            <div class="offer-description">Producao premium de cafe especial para exportacao. Certificacao Rainforest Alliance.</div>
+            <div class="offer-sector"><i class="bi bi-geo-alt"></i> Patrocinio, MG • Agronegócio / Cafe</div>
+            <div class="offer-description">Produção premium de cafe especial para exportação. Certificação Rainforest Alliance.</div>
             <div class="offer-tags">
               <span class="offer-tag highlight"><i class="bi bi-shield-check"></i> CPR + Penhor</span>
               <span class="offer-tag"><i class="bi bi-award"></i> Rainforest</span>
-              <span class="offer-tag"><i class="bi bi-box-seam"></i> Exportacao</span>
+              <span class="offer-tag"><i class="bi bi-box-seam"></i> Exportação</span>
             </div>
             <div class="offer-highlight">
               <span class="offer-highlight-label"><i class="bi bi-percent"></i> Taxa</span>
@@ -443,7 +453,7 @@
               </div>
               <div class="offer-stat">
                 <div class="offer-stat-value">R$ 1k</div>
-                <div class="offer-stat-label">Minimo</div>
+                <div class="offer-stat-label">Mínimo</div>
               </div>
             </div>
             <div class="offer-info">
@@ -474,8 +484,8 @@
           </div>
           <div class="offer-body">
             <div class="offer-title">FinTech Solutions</div>
-            <div class="offer-sector"><i class="bi bi-geo-alt"></i> Sao Paulo, SP • Financas / Pagamentos</div>
-            <div class="offer-description">Gateway de pagamentos com foco em PMEs. Processa R$ 50M/mes com 2000 clientes.</div>
+            <div class="offer-sector"><i class="bi bi-geo-alt"></i> São Paulo, SP • Financas / Pagamentos</div>
+            <div class="offer-description">Gateway de pagamentos com foco em PMEs. Processa R$ 50M/mês com 2000 clientes.</div>
             <div class="offer-tags">
               <span class="offer-tag highlight"><i class="bi bi-graph-up"></i> +180% YoY</span>
               <span class="offer-tag"><i class="bi bi-credit-card"></i> R$ 50M/mes</span>
@@ -488,7 +498,7 @@
               </div>
               <div class="offer-stat">
                 <div class="offer-stat-value">R$ 1,5k</div>
-                <div class="offer-stat-label">Minimo</div>
+                <div class="offer-stat-label">Mínimo</div>
               </div>
             </div>
             <div class="offer-info">
@@ -512,32 +522,24 @@
 
       </div>
 
-      <!-- Legenda -->
-      <div class="card mt-20" style="padding: 14px;">
-        <div class="flex gap-20" style="flex-wrap: wrap; justify-content: center; font-size: 0.8rem;">
-          <span class="flex gap-5" style="align-items: center;"><span style="width: 10px; height: 10px; background: #7c3aed; border-radius: 50%;"></span> <strong>Equity</strong> - Participacao</span>
-          <span class="flex gap-5" style="align-items: center;"><span style="width: 10px; height: 10px; background: #0891b2; border-radius: 50%;"></span> <strong>CRI</strong> - Imobiliario</span>
-          <span class="flex gap-5" style="align-items: center;"><span style="width: 10px; height: 10px; background: #22c55e; border-radius: 50%;"></span> <strong>CRA</strong> - Agro</span>
-          <span class="flex gap-5" style="align-items: center;"><span style="width: 10px; height: 10px; background: #8b5cf6; border-radius: 50%;"></span> <strong>CR</strong> - Outros</span>
-        </div>
-      </div>
-
-      <!-- Warning -->
-      <div class="alert alert-warning mt-15" style="font-size: 0.85rem;">
-        <i class="bi bi-exclamation-triangle"></i> Investimentos via crowdfunding sao de alto risco. Leia o material da oferta antes de investir.
-      </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
