--- a/pages/admin/cliente-detalhe.html
+++ b/pages/admin/cliente-detalhe.html
@@ -11,7 +11,7 @@
   <div class="dashboard">
     <div class="mobile-header">
       <div style="display: flex; align-items: center; gap: 10px;">
-        <a href="../../index.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
         <span class="badge badge-warning">Admin</span>
       </div>
     </div>
@@ -19,19 +19,19 @@
     <!-- Sidebar -->
     <aside class="sidebar sidebar-dark">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo" style="color: white;">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: white;">CrowdInvest</a>
         <span class="badge badge-warning" style="margin-left: 10px;">Admin</span>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html"><i class="bi bi-megaphone"></i> Ofertas</a></li>
         <li><a href="clientes.html" class="active"><i class="bi bi-people"></i> Clientes</a></li>
-        <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
-        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
+        <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validação Cadastro</a></li>
+        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderação</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatorios</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatórios</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../admin-login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -49,18 +49,18 @@
             <p class="text-muted">CPF: 123.456.789-00 | Cadastro: 01/01/2026</p>
           </div>
         </div>
-        <div class="flex gap-10">
+        <div class="header-user-info">
           <button class="btn btn-outline" onclick="showModal('enviandoMensagemModal')">
             <i class="bi bi-envelope"></i> Enviar Mensagem
           </button>
           <div class="dropdown" style="position: relative;">
             <button class="btn btn-outline" onclick="toggleDropdown('actionsDropdown')">
-              <i class="bi bi-three-dots-vertical"></i> Acoes
+              <i class="bi bi-three-dots-vertical"></i> Ações
             </button>
             <div id="actionsDropdown" class="dropdown-menu" style="display: none;">
               <a href="#" onclick="showModal('editandoModal')"><i class="bi bi-pencil"></i> Editar Dados</a>
               <a href="#" onclick="showModal('suspendendoModal')"><i class="bi bi-slash-circle"></i> Suspender Conta</a>
-              <a href="#" onclick="showModal('exportandoModal')"><i class="bi bi-download"></i> Exportar Dados</a>
+              <a href="#" onclick="Modals.export('pdf', 'cliente-dados')"><i class="bi bi-download"></i> Exportar Dados</a>
             </div>
           </div>
         </div>
@@ -86,7 +86,7 @@
         <div class="kpi-card">
           <div class="kpi-label">Status</div>
           <div class="kpi-value"><span class="badge badge-success" style="font-size: 1rem;">Aprovado</span></div>
-          <div class="kpi-change">Validacao OK</div>
+          <div class="kpi-change">Validação OK</div>
         </div>
       </div>
 
@@ -124,35 +124,35 @@
           </div>
         </div>
 
-        <!-- Validacao KYC -->
+        <!-- Validação KYC -->
         <div class="card">
           <div class="card-header">
-            <h3 class="card-title"><i class="bi bi-shield-check"></i> Validacao KYC</h3>
+            <h3 class="card-title"><i class="bi bi-shield-check"></i> Validação KYC</h3>
           </div>
           <div style="display: flex; flex-direction: column; gap: 12px;">
             <div class="flex-between" style="padding: 10px; background: #dcfce7; border-radius: var(--radius);">
-              <div class="flex gap-10">
+              <div class="header-user-info">
                 <i class="bi bi-check-circle" style="color: var(--success);"></i>
                 <span>CPF validado (Receita Federal)</span>
               </div>
               <small class="text-muted">01/01/2026</small>
             </div>
             <div class="flex-between" style="padding: 10px; background: #dcfce7; border-radius: var(--radius);">
-              <div class="flex gap-10">
+              <div class="header-user-info">
                 <i class="bi bi-check-circle" style="color: var(--success);"></i>
                 <span>Documento com foto (RG)</span>
               </div>
               <small class="text-muted">01/01/2026</small>
             </div>
             <div class="flex-between" style="padding: 10px; background: #dcfce7; border-radius: var(--radius);">
-              <div class="flex gap-10">
+              <div class="header-user-info">
                 <i class="bi bi-check-circle" style="color: var(--success);"></i>
                 <span>Selfie com documento</span>
               </div>
               <small class="text-muted">01/01/2026</small>
             </div>
             <div class="flex-between" style="padding: 10px; background: #dcfce7; border-radius: var(--radius);">
-              <div class="flex gap-10">
+              <div class="header-user-info">
                 <i class="bi bi-check-circle" style="color: var(--success);"></i>
                 <span>Comprovante de endereco</span>
               </div>
@@ -180,13 +180,13 @@
                 <th>Valor</th>
                 <th>Equity</th>
                 <th>Status</th>
-                <th>Acoes</th>
+                <th>Ações</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>
-                  <strong>TechStart Inovacao</strong>
+                  <strong>TechStart Inovação</strong>
                   <br><small class="text-muted">CNPJ: 12.345.678/0001-90</small>
                 </td>
                 <td>15/01/2026</td>
@@ -205,7 +205,7 @@
                 <td>10/01/2026</td>
                 <td>R$ 3.000,00</td>
                 <td>1.0%</td>
-                <td><span class="badge badge-warning">Em Desistencia</span></td>
+                <td><span class="badge badge-warning">Em Desistência</span></td>
                 <td>
                   <button class="btn btn-outline btn-sm" onclick="showModal('verDetalhesModal')"><i class="bi bi-eye"></i></button>
                 </td>
@@ -228,10 +228,10 @@
         </div>
       </div>
 
-      <!-- Historico de Atividades -->
+      <!-- Histórico de Atividades -->
       <div class="card mt-20">
         <div class="card-header">
-          <h3 class="card-title"><i class="bi bi-clock-history"></i> Historico de Atividades</h3>
+          <h3 class="card-title"><i class="bi bi-clock-history"></i> Histórico de Atividades</h3>
         </div>
         <div class="timeline" style="padding-left: 30px;">
           <div class="timeline-item">
@@ -244,7 +244,7 @@
             <div class="timeline-dot"></div>
             <div class="timeline-date">15/01/2026 10:15</div>
             <div class="timeline-title">Investimento confirmado - TechStart</div>
-            <div class="timeline-desc">Periodo de desistencia encerrado</div>
+            <div class="timeline-desc">Período de desistência encerrado</div>
           </div>
           <div class="timeline-item">
             <div class="timeline-dot warning"></div>
@@ -262,7 +262,7 @@
             <div class="timeline-dot info"></div>
             <div class="timeline-date">01/01/2026 11:00</div>
             <div class="timeline-title">Cadastro aprovado</div>
-            <div class="timeline-desc">Validacao KYC concluida</div>
+            <div class="timeline-desc">Validação KYC concluida</div>
           </div>
           <div class="timeline-item">
             <div class="timeline-dot"></div>
@@ -273,10 +273,10 @@
         </div>
       </div>
 
-      <!-- Dados Bancarios -->
+      <!-- Dados Bancários -->
       <div class="card mt-20">
         <div class="card-header">
-          <h3 class="card-title"><i class="bi bi-bank"></i> Dados Bancarios (PIX)</h3>
+          <h3 class="card-title"><i class="bi bi-bank"></i> Dados Bancários (PIX)</h3>
         </div>
         <div class="grid-2" style="gap: 20px;">
           <div>
@@ -297,13 +297,13 @@
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
@@ -315,7 +315,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Enviando Mensagem</h3>
-        <p class="text-muted">Abrindo formulario de mensagem...</p>
+        <p class="text-muted">Abrindo formulário de mensagem...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('enviandoMensagemModal')">OK</button>
       </div>
     </div>
@@ -326,7 +326,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Editando Dados</h3>
-        <p class="text-muted">Abrindo modo de edicao...</p>
+        <p class="text-muted">Abrindo modo de edição...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('editandoModal')">OK</button>
       </div>
     </div>
@@ -337,7 +337,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Suspendendo Conta</h3>
-        <p class="text-muted">A conta esta sendo suspensa...</p>
+        <p class="text-muted">A conta está sendo suspensa...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('suspendendoModal')">OK</button>
       </div>
     </div>
@@ -348,7 +348,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Exportando Dados</h3>
-        <p class="text-muted">Os dados estao sendo exportados...</p>
+        <p class="text-muted">Os dados estão sendo exportados...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('exportandoModal')">OK</button>
       </div>
     </div>
@@ -377,6 +377,7 @@
   </div>
 
   <script src="../../js/app.js"></script>
+  
   <style>
     .timeline {
       position: relative;
@@ -411,7 +412,7 @@
     .timeline-dot.success { background: var(--success); }
     .timeline-dot.warning { background: var(--warning); }
     .timeline-dot.info { background: var(--primary); }
-    .timeline-date {
+    .timeline-daté {
       font-size: 0.75rem;
       color: var(--text-muted);
     }
@@ -424,5 +425,6 @@
       color: var(--text-muted);
     }
   </style>
+
 </body>
 </html>
