--- a/pages/admin/clientes.html
+++ b/pages/admin/clientes.html
@@ -11,26 +11,26 @@
   <div class="dashboard">
     <div class="mobile-header">
       <div style="display: flex; align-items: center; gap: 10px;">
-        <a href="../../index.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
         <span class="badge badge-warning">Admin</span>
       </div>
     </div>
 
     <aside class="sidebar sidebar-dark">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo" style="color: white;">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: white;">CrowdInvest</a>
         <span class="badge badge-warning" style="margin-left: 10px;">Admin</span>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html"><i class="bi bi-megaphone"></i> Ofertas</a></li>
         <li><a href="clientes.html" class="active"><i class="bi bi-people"></i> Clientes</a></li>
-        <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
-        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
+        <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validação Cadastro</a></li>
+        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderação</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatorios</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatórios</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../admin-login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -44,19 +44,19 @@
           <h1 class="page-title">Clientes</h1>
           <p class="text-muted">2.547 clientes cadastrados</p>
         </div>
-        <div class="flex gap-10">
+        <div class="header-user-info">
           <div class="dropdown" style="position: relative;">
             <button class="btn btn-outline" onclick="toggleDropdown('exportDropdown')">
               <i class="bi bi-download"></i> Exportar <i class="bi bi-chevron-down"></i>
             </button>
             <div id="exportDropdown" class="dropdown-menu" style="display: none; position: absolute; right: 0; top: 100%; background: white; border: 1px solid var(--border); border-radius: var(--radius); box-shadow: 0 4px 12px rgba(0,0,0,0.1); min-width: 160px; z-index: 100;">
-              <a href="#" onclick="showModal('exportExcelModal'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
+              <a href="#" onclick="Modals.export('excel', 'admin-clientes'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
                 <i class="bi bi-file-earmark-excel" style="color: #217346;"></i> Excel (.xlsx)
               </a>
-              <a href="#" onclick="showModal('exportCsvModal'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
+              <a href="#" onclick="Modals.export('csv', 'admin-clientes'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
                 <i class="bi bi-filetype-csv" style="color: #6c757d;"></i> CSV (.csv)
               </a>
-              <a href="#" onclick="showModal('exportPdfModal'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
+              <a href="#" onclick="Modals.export('pdf', 'admin-clientes'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
                 <i class="bi bi-file-earmark-pdf" style="color: #dc3545;"></i> PDF (.pdf)
               </a>
             </div>
@@ -88,7 +88,7 @@
       <div class="card mb-20">
         <div class="flex gap-20" style="flex-wrap: wrap;">
           <div class="form-group" style="margin-bottom: 0; flex: 1; min-width: 150px;">
-            <label class="form-label">Status Validacao</label>
+            <label class="form-label">Status Validação</label>
             <select class="form-input">
               <option>Todos</option>
               <option>Aprovado</option>
@@ -110,7 +110,7 @@
             <i class="bi bi-shield-lock" style="font-size: 1.2rem; color: #d97706;"></i>
             <div>
               <strong style="color: #92400e;">Dados Sensiveis Protegidos</strong>
-              <p class="text-muted" style="font-size: 0.8rem; margin: 0;">CPF e e-mail estao mascarados por padrao. Clique em "Revelar" para visualizar.</p>
+              <p class="text-muted" style="font-size: 0.8rem; margin: 0;">CPF e e-mail estão mascarados por padrão. Clique em "Revelar" para visualizar.</p>
             </div>
           </div>
           <button class="btn btn-sm" style="background: #fbbf24; color: #92400e; border: none;" onclick="toggleAllData()">
@@ -130,8 +130,8 @@
                 <th>Cadastro</th>
                 <th>Investido</th>
                 <th>Ofertas</th>
-                <th>Validacao</th>
-                <th>Acoes</th>
+                <th>Validação</th>
+                <th>Ações</th>
               </tr>
             </thead>
             <tbody>
@@ -144,8 +144,8 @@
                 <td data-label="Cadastro">01/01/2026</td>
                 <td data-label="Investido">R$ 15.000</td>
                 <td data-label="Ofertas">3</td>
-                <td data-label="Validacao"><span class="badge badge-success">Aprovado</span></td>
-                <td data-label="Acoes"><a href="cliente-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
+                <td data-label="Validação"><span class="badge badge-success">Aprovado</span></td>
+                <td data-label="Ações"><a href="cliente-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
               </tr>
               <tr>
                 <td data-label="Cliente">
@@ -156,8 +156,8 @@
                 <td data-label="Cadastro">05/01/2026</td>
                 <td data-label="Investido">R$ 8.500</td>
                 <td data-label="Ofertas">2</td>
-                <td data-label="Validacao"><span class="badge badge-success">Aprovado</span></td>
-                <td data-label="Acoes"><a href="cliente-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
+                <td data-label="Validação"><span class="badge badge-success">Aprovado</span></td>
+                <td data-label="Ações"><a href="cliente-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
               </tr>
               <tr>
                 <td data-label="Cliente">
@@ -168,8 +168,8 @@
                 <td data-label="Cadastro">10/01/2026</td>
                 <td data-label="Investido">R$ 20.000</td>
                 <td data-label="Ofertas">4</td>
-                <td data-label="Validacao"><span class="badge badge-success">Aprovado</span></td>
-                <td data-label="Acoes"><a href="cliente-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
+                <td data-label="Validação"><span class="badge badge-success">Aprovado</span></td>
+                <td data-label="Ações"><a href="cliente-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
               </tr>
               <tr>
                 <td data-label="Cliente">
@@ -180,8 +180,8 @@
                 <td data-label="Cadastro">15/01/2026</td>
                 <td data-label="Investido">R$ 0</td>
                 <td data-label="Ofertas">0</td>
-                <td data-label="Validacao"><span class="badge badge-warning">Pendente</span></td>
-                <td data-label="Acoes"><a href="cliente-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
+                <td data-label="Validação"><span class="badge badge-warning">Pendente</span></td>
+                <td data-label="Ações"><a href="cliente-detalhe.html" class="btn btn-outline btn-sm">Ver</a></td>
               </tr>
             </tbody>
           </table>
@@ -198,55 +198,20 @@
           </nav>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
-  <!-- Export Excel Modal -->
-  <div class="modal-overlay" id="exportExcelModal" style="display: none;">
-    <div class="modal text-center" style="max-width: 400px;">
-      <div style="padding: 30px;">
-        <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Exportacao Excel</h3>
-        <p class="text-muted">Exportando Excel...</p>
-        <button class="btn btn-primary mt-20" onclick="hideModal('exportExcelModal')">OK</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Export CSV Modal -->
-  <div class="modal-overlay" id="exportCsvModal" style="display: none;">
-    <div class="modal text-center" style="max-width: 400px;">
-      <div style="padding: 30px;">
-        <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Exportacao CSV</h3>
-        <p class="text-muted">Exportando CSV...</p>
-        <button class="btn btn-primary mt-20" onclick="hideModal('exportCsvModal')">OK</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Export PDF Modal -->
-  <div class="modal-overlay" id="exportPdfModal" style="display: none;">
-    <div class="modal text-center" style="max-width: 400px;">
-      <div style="padding: 30px;">
-        <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Exportacao PDF</h3>
-        <p class="text-muted">Exportando PDF...</p>
-        <button class="btn btn-primary mt-20" onclick="hideModal('exportPdfModal')">OK</button>
-      </div>
-    </div>
-  </div>
-
   <script src="../../js/app.js"></script>
+  
   <script>
     let dataRevealed = false;
 
@@ -276,5 +241,6 @@
       }
     }
   </script>
+
 </body>
 </html>
