--- a/pages/admin/dashboard.html
+++ b/pages/admin/dashboard.html
@@ -11,7 +11,7 @@
   <div class="dashboard">
     <div class="mobile-header">
       <div style="display: flex; align-items: center; gap: 10px;">
-        <a href="../../index.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
         <span class="badge badge-warning">Admin</span>
       </div>
     </div>
@@ -19,19 +19,19 @@
     <!-- Sidebar -->
     <aside class="sidebar sidebar-dark">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo" style="color: white;">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: white;">CrowdInvest</a>
         <span class="badge badge-warning" style="margin-left: 10px;">Admin</span>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html" class="active"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html"><i class="bi bi-megaphone"></i> Ofertas</a></li>
         <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
-        <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
-        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
+        <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validação Cadastro</a></li>
+        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderação</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatorios</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatórios</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../admin-login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -44,18 +44,37 @@
       <div class="page-header">
         <div>
           <h1 class="page-title">Dashboard Administrativo</h1>
-          <p class="text-muted">Visao geral da plataforma</p>
+          <p class="text-muted">Visão geral da plataforma</p>
         </div>
-        <div class="flex gap-10">
-          <span class="badge badge-success"><i class="bi bi-shield-check"></i> Verificacao Ativa</span>
-          <span class="text-muted">admin@crowdinvest.com.br</span>
+        <div class="header-user-info">
+          <span class="badge badge-success"><i class="bi bi-shield-check"></i> Verificação Ativa</span>
+          <span class="user-email">admin@albainvest.com.br</span>
+        </div>
+      </div>
+
+      <!-- Notificação de Oferta Irregular -->
+      <div class="notification-banner danger">
+        <div class="notification-banner-icon">
+          <i class="bi bi-exclamation-octagon"></i>
+        </div>
+        <div class="notification-banner-content">
+          <div class="notification-banner-title">Oferta com Irregularidade Detectada</div>
+          <div class="notification-banner-text">A oferta "SmartHome IoT" apresentou documentação inconsistente. 3 investidores afetados (R$ 8.500 total). Requer análise imediata.</div>
+          <div class="notification-banner-action">
+            <a href="moderacao.html" class="btn btn-sm btn-danger">Analisar Agora</a>
+            <a href="#" class="btn btn-sm btn-outline" style="margin-left: 8px;" onclick="Modals.success('Notificação Enviada', 'Todos os investidores foram notificados sobre a atualização.'); return false;">Notificar Investidores</a>
+          </div>
         </div>
       </div>
 
       <!-- Alerts -->
       <div class="alert alert-warning">
-        <strong><i class="bi bi-exclamation-triangle"></i> Atencao:</strong> 7 cadastros aguardam revisao manual.
-        <a href="kyc-fila.html" style="color: inherit; margin-left: 10px;">Revisar agora &rarr;</a>
+        <i class="bi bi-exclamation-triangle"></i>
+        <div>
+          <strong>Atenção:</strong><br>
+          7 cadastros águardam revisão manual.
+          <a href="kyc-fila.html" style="color: inherit; margin-left: 10px;">Revisar agora &rarr;</a>
+        </div>
       </div>
 
       <!-- KPIs -->
@@ -63,12 +82,12 @@
         <div class="kpi-card">
           <div class="kpi-label">Total Captado</div>
           <div class="kpi-value">R$ 1.2M</div>
-          <div class="kpi-change positive">+R$ 180k este mes</div>
+          <div class="kpi-change positive">+R$ 180k este mês</div>
         </div>
         <div class="kpi-card">
           <div class="kpi-label">Clientes Ativos</div>
           <div class="kpi-value">2.547</div>
-          <div class="kpi-change positive">+127 este mes</div>
+          <div class="kpi-change positive">+127 este mês</div>
         </div>
         <div class="kpi-card">
           <div class="kpi-label">Ofertas Ativas</div>
@@ -109,14 +128,14 @@
               <span class="badge badge-warning" style="margin-top: 2px;"><i class="bi bi-exclamation"></i></span>
               <div>
                 <strong>Cadastro pendente</strong>
-                <p class="text-muted" style="font-size: 0.875rem;">Carlos Oliveira aguarda revisao manual</p>
+                <p class="text-muted" style="font-size: 0.875rem;">Carlos Oliveira águarda revisão manual</p>
                 <small class="text-muted">Ha 1 hora</small>
               </div>
             </div>
             <div class="flex gap-10" style="align-items: flex-start;">
               <span class="badge badge-danger" style="margin-top: 2px;"><i class="bi bi-x"></i></span>
               <div>
-                <strong>Desistencia</strong>
+                <strong>Desistência</strong>
                 <p class="text-muted" style="font-size: 0.875rem;">Ana Costa desistiu de investimento (R$ 2.000)</p>
                 <small class="text-muted">Ha 2 horas</small>
               </div>
@@ -184,10 +203,10 @@
 
       <!-- Charts Row -->
       <div class="grid-2 mt-20">
-        <!-- Captacao Mensal -->
+        <!-- Captação Mensal -->
         <div class="card">
           <div class="card-header">
-            <h3 class="card-title"><i class="bi bi-bar-chart"></i> Captacao Mensal 2026</h3>
+            <h3 class="card-title"><i class="bi bi-bar-chart"></i> Captação Mensal 2026</h3>
           </div>
           <div style="display: flex; align-items: flex-end; height: 180px; gap: 8px; padding: 20px;">
             <div style="flex: 1; display: flex; flex-direction: column; align-items: center;">
@@ -213,7 +232,7 @@
           </div>
         </div>
 
-        <!-- Distribuicao por Status -->
+        <!-- Distribuição por Status -->
         <div class="card">
           <div class="card-header">
             <h3 class="card-title"><i class="bi bi-pie-chart"></i> Ofertas por Status</h3>
@@ -228,7 +247,7 @@
             <div style="display: flex; flex-direction: column; gap: 6px; margin-top: 15px; font-size: 0.8rem;">
               <div class="flex gap-10" style="align-items: center;">
                 <div style="width: 10px; height: 10px; background: var(--info); border-radius: 2px;"></div>
-                <span>Em Captacao: 3 (7%)</span>
+                <span>Em Captação: 3 (7%)</span>
               </div>
               <div class="flex gap-10" style="align-items: center;">
                 <div style="width: 10px; height: 10px; background: var(--success); border-radius: 2px;"></div>
@@ -246,7 +265,7 @@
       <!-- Recent Investments -->
       <div class="card mt-20">
         <div class="card-header flex-between">
-          <h3 class="card-title">Ultimos Investimentos</h3>
+          <h3 class="card-title">Últimos Investimentos</h3>
           <a href="clientes.html" style="color: var(--primary);">Ver todos</a>
         </div>
         <div class="table-container">
@@ -258,7 +277,7 @@
                 <th>Valor</th>
                 <th>Data</th>
                 <th>Status</th>
-                <th>Desistencia</th>
+                <th>Desistência</th>
               </tr>
             </thead>
             <tbody>
@@ -267,11 +286,11 @@
                   <strong>Joao Carlos Silva</strong>
                   <br><small class="text-muted">123.456.789-00</small>
                 </td>
-                <td data-label="Oferta">TechStart Inovacao</td>
+                <td data-label="Oferta">TechStart Inovação</td>
                 <td data-label="Valor">R$ 5.000</td>
                 <td data-label="Data">19/01/2026</td>
                 <td data-label="Status"><span class="badge badge-success">Confirmado</span></td>
-                <td data-label="Desistencia"><span class="badge badge-warning">Ate 24/01</span></td>
+                <td data-label="Desistência"><span class="badge badge-warning">Até 24/01</span></td>
               </tr>
               <tr>
                 <td data-label="Investidor">
@@ -282,7 +301,7 @@
                 <td data-label="Valor">R$ 3.000</td>
                 <td data-label="Data">18/01/2026</td>
                 <td data-label="Status"><span class="badge badge-success">Confirmado</span></td>
-                <td data-label="Desistencia"><span class="badge badge-warning">Ate 23/01</span></td>
+                <td data-label="Desistência"><span class="badge badge-warning">Até 23/01</span></td>
               </tr>
               <tr>
                 <td data-label="Investidor">
@@ -293,24 +312,33 @@
                 <td data-label="Valor">R$ 10.000</td>
                 <td data-label="Data">17/01/2026</td>
                 <td data-label="Status"><span class="badge badge-success">Confirmado</span></td>
-                <td data-label="Desistencia"><span class="badge badge-secondary">Expirado</span></td>
+                <td data-label="Desistência"><span class="badge badge-secondary">Expirado</span></td>
               </tr>
             </tbody>
           </table>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+        </div>
+        <div class="disclaimer-links" style="margin-top: 12px; padding-top: 12px; border-top: 1px solid var(--border); display: flex; flex-wrap: wrap; gap: 16px; font-size: 0.8rem;">
+          <a href="../../index.html" style="color: var(--text-muted);"><i class="bi bi-house"></i> Início</a>
+          <a href="../como-funciona.html" style="color: var(--text-muted);"><i class="bi bi-question-circle"></i> Como Funciona</a>
+          <a href="../taxas-custos.html" style="color: var(--text-muted);"><i class="bi bi-calculator"></i> Taxas e Custos</a>
+          <a href="#" onclick="Modals.view('Termos de Uso'); return false;" style="color: var(--text-muted);"><i class="bi bi-file-text"></i> Termos de Uso</a>
+          <a href="#" onclick="Modals.view('Política de Privacidade'); return false;" style="color: var(--text-muted);"><i class="bi bi-shield"></i> Privacidade</a>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+
 </body>
 </html>
