--- a/pages/admin/kyc-fila.html
+++ b/pages/admin/kyc-fila.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Validacao de Cadastros - Admin - CrowdInvest</title>
+  <title>Validação de Cadastros - Admin - CrowdInvest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
@@ -11,7 +11,7 @@
   <div class="dashboard">
     <div class="mobile-header">
       <div style="display: flex; align-items: center; gap: 10px;">
-        <a href="../../index.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
         <span class="badge badge-warning">Admin</span>
       </div>
     </div>
@@ -19,19 +19,19 @@
     <!-- Sidebar -->
     <aside class="sidebar sidebar-dark">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo" style="color: white;">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: white;">CrowdInvest</a>
         <span class="badge badge-warning" style="margin-left: 10px;">Admin</span>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html"><i class="bi bi-megaphone"></i> Ofertas</a></li>
         <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
-        <li><a href="kyc-fila.html" class="active"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
-        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
+        <li><a href="kyc-fila.html" class="active"><i class="bi bi-person-check"></i> Validação Cadastro</a></li>
+        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderação</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatorios</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatórios</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../admin-login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -43,111 +43,115 @@
 
       <div class="page-header">
         <div>
-          <h1 class="page-title">Validacao de Cadastros</h1>
-          <p class="text-muted">Cadastros aguardando revisao manual</p>
+          <h1 class="page-title">Validação de Cadastros</h1>
+          <p class="text-muted">Cadastros águardando revisão manual</p>
         </div>
         <span class="badge badge-warning" style="font-size: 1rem; padding: 10px 20px;">7 pendentes</span>
       </div>
 
       <div class="alert alert-info">
-        <strong>Bureau de Dados:</strong> Os cadastros abaixo nao foram validados automaticamente via Serasa/SPC/Receita Federal e requerem analise manual.
+        <i class="bi bi-info-circle"></i>
+        <div>
+          <strong>Bureau de Dados:</strong><br>
+          Os cadastros abaixo não foram validados automaticamente via Serasa/SPC/Receita Federal e requerem análise manual.
+        </div>
       </div>
 
-      <!-- Fila de Validacao -->
+      <!-- Fila de Validação -->
       <div class="card">
         <div class="table-container">
           <table>
             <thead>
               <tr>
-                <th>Usuario</th>
+                <th>Usuário</th>
                 <th>CPF</th>
                 <th>Motivo</th>
                 <th>Data</th>
-                <th>Acoes</th>
+                <th>Ações</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td data-label="Usuario">
+                <td data-label="Usuário">
                   <strong>Carlos Oliveira</strong>
                   <br><small class="text-muted">carlos.oliveira@email.com</small>
                 </td>
                 <td data-label="CPF">111.222.333-44</td>
                 <td data-label="Motivo"><span class="badge badge-warning">CPF divergente</span></td>
                 <td data-label="Data">19/01/2026 10:30</td>
-                <td data-label="Acoes">
+                <td data-label="Ações">
                   <button class="btn btn-primary btn-sm" onclick="showModal('reviewModal')">Revisar</button>
                 </td>
               </tr>
               <tr>
-                <td data-label="Usuario">
+                <td data-label="Usuário">
                   <strong>Ana Pereira</strong>
                   <br><small class="text-muted">ana.pereira@email.com</small>
                 </td>
                 <td data-label="CPF">555.666.777-88</td>
                 <td data-label="Motivo"><span class="badge badge-danger">CPF irregular</span></td>
                 <td data-label="Data">19/01/2026 09:15</td>
-                <td data-label="Acoes">
+                <td data-label="Ações">
                   <button class="btn btn-primary btn-sm" onclick="showModal('reviewModal')">Revisar</button>
                 </td>
               </tr>
               <tr>
-                <td data-label="Usuario">
+                <td data-label="Usuário">
                   <strong>Roberto Santos</strong>
                   <br><small class="text-muted">roberto.santos@email.com</small>
                 </td>
                 <td data-label="CPF">999.888.777-66</td>
                 <td data-label="Motivo"><span class="badge badge-warning">Nome divergente</span></td>
                 <td data-label="Data">18/01/2026 16:45</td>
-                <td data-label="Acoes">
+                <td data-label="Ações">
                   <button class="btn btn-primary btn-sm" onclick="showModal('reviewModal')">Revisar</button>
                 </td>
               </tr>
               <tr>
-                <td data-label="Usuario">
+                <td data-label="Usuário">
                   <strong>Fernanda Lima</strong>
                   <br><small class="text-muted">fernanda.lima@email.com</small>
                 </td>
                 <td data-label="CPF">444.333.222-11</td>
-                <td data-label="Motivo"><span class="badge badge-info">Pessoa politicamente exposta</span></td>
+                <td data-label="Motivo"><span class="badge badge-info">Pessoa políticamente exposta</span></td>
                 <td data-label="Data">18/01/2026 14:20</td>
-                <td data-label="Acoes">
+                <td data-label="Ações">
                   <button class="btn btn-primary btn-sm" onclick="showModal('reviewModal')">Revisar</button>
                 </td>
               </tr>
               <tr>
-                <td data-label="Usuario">
+                <td data-label="Usuário">
                   <strong>Lucas Mendes</strong>
                   <br><small class="text-muted">lucas.mendes@email.com</small>
                 </td>
                 <td data-label="CPF">222.111.333-55</td>
                 <td data-label="Motivo"><span class="badge badge-warning">Data nasc. divergente</span></td>
                 <td data-label="Data">18/01/2026 11:00</td>
-                <td data-label="Acoes">
+                <td data-label="Ações">
                   <button class="btn btn-primary btn-sm" onclick="showModal('reviewModal')">Revisar</button>
                 </td>
               </tr>
               <tr>
-                <td data-label="Usuario">
+                <td data-label="Usuário">
                   <strong>Patricia Costa</strong>
                   <br><small class="text-muted">patricia.costa@email.com</small>
                 </td>
                 <td data-label="CPF">777.888.999-00</td>
-                <td data-label="Motivo"><span class="badge badge-danger">Obito registrado</span></td>
+                <td data-label="Motivo"><span class="badge badge-danger">Óbito registrado</span></td>
                 <td data-label="Data">17/01/2026 15:30</td>
-                <td data-label="Acoes">
+                <td data-label="Ações">
                   <button class="btn btn-primary btn-sm" onclick="showModal('reviewModal')">Revisar</button>
                 </td>
               </tr>
               <tr>
-                <td data-label="Usuario">
+                <td data-label="Usuário">
                   <strong>Marcos Almeida</strong>
                   <br><small class="text-muted">marcos.almeida@email.com</small>
                 </td>
                 <td data-label="CPF">123.321.456-78</td>
-                <td data-label="Motivo"><span class="badge badge-secondary">Bureau indisponivel</span></td>
+                <td data-label="Motivo"><span class="badge badge-secondary">Bureau indisponível</span></td>
                 <td data-label="Data">17/01/2026 10:00</td>
-                <td data-label="Acoes">
+                <td data-label="Ações">
                   <button class="btn btn-primary btn-sm" onclick="showModal('reviewModal')">Revisar</button>
                 </td>
               </tr>
@@ -164,20 +168,20 @@
         </div>
         <div class="card text-center">
           <div style="font-size: 2rem; font-weight: bold; color: var(--warning);">7</div>
-          <p class="text-muted">Aguardando revisao</p>
+          <p class="text-muted">Águardando revisão</p>
         </div>
         <div class="card text-center">
           <div style="font-size: 2rem; font-weight: bold; color: var(--danger);">12</div>
           <p class="text-muted">Rejeitados (total)</p>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
@@ -219,23 +223,27 @@
       </div>
 
       <div class="alert alert-warning">
-        <strong>Motivo da revisao:</strong> Nome informado difere do nome no Bureau de Dados (abreviacao)
+        <i class="bi bi-exclamation-triangle"></i>
+        <div>
+          <strong>Motivo da revisão:</strong><br>
+          Nome informado difere do nome no Bureau de Dados (abreviação)
+        </div>
       </div>
 
       <div style="background: var(--bg); padding: 15px; border-radius: var(--radius); margin-bottom: 20px;">
         <p class="text-muted" style="font-size: 0.75rem; margin-bottom: 10px;">DADOS DO BUREAU</p>
-        <p><strong>Situacao CPF:</strong> <span class="badge badge-success">Regular</span></p>
-        <p><strong>PEP:</strong> <span class="badge badge-secondary">Nao</span></p>
-        <p><strong>Obito:</strong> <span class="badge badge-secondary">Nao</span></p>
+        <p><strong>Situação CPF:</strong> <span class="badge badge-success">Regular</span></p>
+        <p><strong>PEP:</strong> <span class="badge badge-secondary">Não</span></p>
+        <p><strong>Óbito:</strong> <span class="badge badge-secondary">Não</span></p>
         <p><strong>Score:</strong> 750</p>
       </div>
 
       <div class="form-group">
-        <label class="form-label">Observacao (opcional)</label>
-        <textarea class="form-input" rows="3" placeholder="Adicione uma observacao sobre a decisao..."></textarea>
+        <label class="form-label">Observação (opcional)</label>
+        <textarea class="form-input" rows="3" placeholder="Adicione uma observação sobre a decisao..."></textarea>
       </div>
 
-      <div class="flex gap-10">
+      <div class="header-user-info">
         <button class="btn btn-danger" style="flex: 1;" onclick="showModal('usuarioRejeitadoModal'); hideModal('reviewModal');">
           <i class="bi bi-x-circle"></i> Reprovar
         </button>
@@ -246,30 +254,32 @@
     </div>
   </div>
 
-  <!-- Usuario Rejeitado Modal -->
+  <!-- Usuário Rejeitado Modal -->
   <div class="modal-overlay" id="usuarioRejeitadoModal" style="display: none;">
     <div class="modal text-center" style="max-width: 400px;">
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Usuario Rejeitado</h3>
-        <p class="text-muted">Usuario rejeitado</p>
+        <h3 style="margin: 15px 0;">Usuário Rejeitado</h3>
+        <p class="text-muted">Usuário rejeitado</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('usuarioRejeitadoModal')">OK</button>
       </div>
     </div>
   </div>
 
-  <!-- Usuario Aprovado Modal -->
+  <!-- Usuário Aprovado Modal -->
   <div class="modal-overlay" id="usuarioAprovadoModal" style="display: none;">
     <div class="modal text-center" style="max-width: 400px;">
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Usuario Aprovado</h3>
-        <p class="text-muted">Usuario aprovado</p>
+        <h3 style="margin: 15px 0;">Usuário Aprovado</h3>
+        <p class="text-muted">Usuário aprovado</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('usuarioAprovadoModal')">OK</button>
       </div>
     </div>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+
 </body>
 </html>
