--- a/pages/admin/oferta-analise.html
+++ b/pages/admin/oferta-analise.html
@@ -11,7 +11,7 @@
   <div class="dashboard">
     <div class="mobile-header">
       <div style="display: flex; align-items: center; gap: 10px;">
-        <a href="../../index.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
         <span class="badge badge-warning">Admin</span>
       </div>
     </div>
@@ -19,19 +19,19 @@
     <!-- Sidebar -->
     <aside class="sidebar sidebar-dark">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo" style="color: white;">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: white;">CrowdInvest</a>
         <span class="badge badge-warning" style="margin-left: 10px;">Admin</span>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html" class="active"><i class="bi bi-megaphone"></i> Ofertas</a></li>
         <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
-        <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
-        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
+        <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validação Cadastro</a></li>
+        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderação</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatorios</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatórios</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../admin-login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -48,12 +48,12 @@
           <div>
             <div class="flex gap-10" style="align-items: center;">
               <h1 class="page-title">MedTech Diagnosticos</h1>
-              <span class="badge badge-warning"><i class="bi bi-clock"></i> Aguardando Analise</span>
+              <span class="badge badge-warning"><i class="bi bi-clock"></i> Águardando Análise</span>
             </div>
             <p class="text-muted">Submetida em 14/01/2026 | Parceiro: MedTech SA</p>
           </div>
         </div>
-        <div class="flex gap-10">
+        <div class="header-user-info">
           <button class="btn btn-outline" onclick="showModal('salvandoRascunhoModal')">
             <i class="bi bi-save"></i> Salvar Rascunho
           </button>
@@ -62,10 +62,14 @@
 
       <!-- Alert Prazo -->
       <div class="alert alert-warning mb-20">
-        <i class="bi bi-exclamation-triangle"></i> <strong>Atencao:</strong> Esta oferta esta aguardando analise ha 5 dias. Prazo maximo: 5 dias uteis (RCVM 88/2022).
+        <i class="bi bi-exclamation-triangle"></i>
+        <div>
+          <strong>Atencao:</strong><br>
+          Esta oferta esta aguardando analise ha 5 dias. Prazo maximo: 5 dias uteis (RCVM 88/2022).
+        </div>
       </div>
 
-      <!-- Checklist de Analise -->
+      <!-- Checklist de Análise -->
       <div class="grid-2" style="gap: 20px;">
         <!-- Dados da Empresa -->
         <div class="card">
@@ -84,10 +88,10 @@
             </div>
             <div>
               <p class="text-muted" style="font-size: 0.75rem;">Setor</p>
-              <p><strong>Saude / Diagnosticos</strong></p>
+              <p><strong>Saúde / Diagnosticos</strong></p>
             </div>
             <div>
-              <p class="text-muted" style="font-size: 0.75rem;">Fundacao</p>
+              <p class="text-muted" style="font-size: 0.75rem;">Fundação</p>
               <p><strong>2019</strong></p>
             </div>
             <div>
@@ -117,7 +121,7 @@
           </div>
           <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px;">
             <div>
-              <p class="text-muted" style="font-size: 0.75rem;">Meta de Captacao</p>
+              <p class="text-muted" style="font-size: 0.75rem;">Meta de Captação</p>
               <p><strong style="color: var(--primary);">R$ 1.200.000,00</strong></p>
             </div>
             <div>
@@ -137,12 +141,12 @@
               <p><strong>R$ 10.000.000</strong></p>
             </div>
             <div>
-              <p class="text-muted" style="font-size: 0.75rem;">Periodo</p>
+              <p class="text-muted" style="font-size: 0.75rem;">Período</p>
               <p><strong>01/02 - 01/05/2026</strong></p>
             </div>
           </div>
           <div class="alert alert-info mt-15" style="padding: 10px; font-size: 0.875rem;">
-            <i class="bi bi-info-circle"></i> Verificar se valores estao dentro dos limites RCVM 88/2022.
+            <i class="bi bi-info-circle"></i> Verificar se valores estão dentro dos limites RCVM 88/2022.
           </div>
         </div>
       </div>
@@ -160,8 +164,8 @@
                 <th>Documento</th>
                 <th>Arquivo</th>
                 <th>Status</th>
-                <th>Observacoes</th>
-                <th>Acoes</th>
+                <th>Observações</th>
+                <th>Ações</th>
               </tr>
             </thead>
             <tbody>
@@ -194,7 +198,7 @@
                 </td>
               </tr>
               <tr>
-                <td><strong>Demonstracoes Financeiras</strong></td>
+                <td><strong>Demonstrações Financeiras</strong></td>
                 <td>
                   <div class="flex gap-10" style="align-items: center;">
                     <i class="bi bi-file-earmark-excel" style="color: #217346;"></i>
@@ -215,7 +219,7 @@
                     QuadroSocietario_MedTech.pdf (420 KB)
                   </div>
                 </td>
-                <td><span class="badge badge-warning"><i class="bi bi-exclamation-triangle"></i> Requer Revisao</span></td>
+                <td><span class="badge badge-warning"><i class="bi bi-exclamation-triangle"></i> Requer Revisão</span></td>
                 <td><span style="color: var(--warning);">Falta assinatura do socio minoritario</span></td>
                 <td>
                   <button class="btn btn-outline btn-sm" onclick="showModal('visualizandoModal')"><i class="bi bi-eye"></i></button>
@@ -227,10 +231,10 @@
                 <td>
                   <div class="flex gap-10" style="align-items: center;">
                     <i class="bi bi-file-earmark-check" style="color: var(--primary);"></i>
-                    Modelo padrao da plataforma
+                    Modelo padrão da plataforma
                   </div>
                 </td>
-                <td><span class="badge badge-success"><i class="bi bi-check-circle"></i> Padrao</span></td>
+                <td><span class="badge badge-success"><i class="bi bi-check-circle"></i> Padrão</span></td>
                 <td>-</td>
                 <td>
                   <button class="btn btn-outline btn-sm" onclick="showModal('visualizandoModal')"><i class="bi bi-eye"></i></button>
@@ -241,51 +245,51 @@
         </div>
       </div>
 
-      <!-- Checklist de Verificacao -->
+      <!-- Checklist de Verificação -->
       <div class="card mt-20">
         <div class="card-header">
-          <h3 class="card-title"><i class="bi bi-list-check"></i> Checklist de Verificacao RCVM 88/2022</h3>
+          <h3 class="card-title"><i class="bi bi-list-check"></i> Checklist de Verificação RCVM 88/2022</h3>
         </div>
         <div style="display: flex; flex-direction: column; gap: 15px;">
           <label class="flex gap-10" style="padding: 15px; background: var(--bg); border-radius: var(--radius); cursor: pointer; align-items: flex-start;">
             <input type="checkbox" checked style="margin-top: 3px;">
             <div>
-              <strong>Empresa elegivel para crowdfunding</strong>
+              <strong>Empresa elegivel para captação</strong>
               <p class="text-muted" style="font-size: 0.875rem;">Receita bruta anual inferior a R$ 40 milhoes</p>
             </div>
           </label>
           <label class="flex gap-10" style="padding: 15px; background: var(--bg); border-radius: var(--radius); cursor: pointer; align-items: flex-start;">
             <input type="checkbox" checked style="margin-top: 3px;">
             <div>
-              <strong>Valor de captacao dentro do limite</strong>
+              <strong>Valor de captação dentro do limite</strong>
               <p class="text-muted" style="font-size: 0.875rem;">Meta R$ 1.200.000 < Limite R$ 15.000.000</p>
             </div>
           </label>
           <label class="flex gap-10" style="padding: 15px; background: var(--bg); border-radius: var(--radius); cursor: pointer; align-items: flex-start;">
             <input type="checkbox" checked style="margin-top: 3px;">
             <div>
-              <strong>Investimento maximo por investidor</strong>
+              <strong>Investimento máximo por investidor</strong>
               <p class="text-muted" style="font-size: 0.875rem;">R$ 20.000 <= Limite R$ 20.000</p>
             </div>
           </label>
           <label class="flex gap-10" style="padding: 15px; background: var(--bg); border-radius: var(--radius); cursor: pointer; align-items: flex-start;">
             <input type="checkbox" checked style="margin-top: 3px;">
             <div>
-              <strong>Periodo de captacao adequado</strong>
+              <strong>Período de captação adequado</strong>
               <p class="text-muted" style="font-size: 0.875rem;">90 dias <= Limite 180 dias</p>
             </div>
           </label>
           <label class="flex gap-10" style="padding: 15px; background: #fef3c7; border-radius: var(--radius); cursor: pointer; align-items: flex-start;">
             <input type="checkbox" style="margin-top: 3px;">
             <div>
-              <strong style="color: var(--warning);">Documentacao completa</strong>
+              <strong style="color: var(--warning);">Documentação completa</strong>
               <p class="text-muted" style="font-size: 0.875rem;">Quadro societario pendente de assinatura</p>
             </div>
           </label>
           <label class="flex gap-10" style="padding: 15px; background: var(--bg); border-radius: var(--radius); cursor: pointer; align-items: flex-start;">
             <input type="checkbox" style="margin-top: 3px;">
             <div>
-              <strong>Nao possui ofertas ativas</strong>
+              <strong>Não possui ofertas ativas</strong>
               <p class="text-muted" style="font-size: 0.875rem;">Empresa pode ter apenas 1 oferta ativa por vez</p>
             </div>
           </label>
@@ -293,28 +297,28 @@
             <input type="checkbox" style="margin-top: 3px;">
             <div>
               <strong>Due diligence concluida</strong>
-              <p class="text-muted" style="font-size: 0.875rem;">Verificacao de antecedentes e historico</p>
+              <p class="text-muted" style="font-size: 0.875rem;">Verificação de antecedentes e histórico</p>
             </div>
           </label>
         </div>
       </div>
 
-      <!-- Observacoes -->
+      <!-- Observações -->
       <div class="card mt-20">
         <div class="card-header">
-          <h3 class="card-title"><i class="bi bi-chat-left-text"></i> Observacoes do Analista</h3>
+          <h3 class="card-title"><i class="bi bi-chat-left-text"></i> Observações do Analista</h3>
         </div>
         <div class="form-group">
-          <textarea class="form-input" rows="4" placeholder="Adicione observacoes sobre a analise...">Oferta bem estruturada. Empresa com bom historico e documentacao quase completa. Aguardando correcao do quadro societario com assinatura do socio minoritario.</textarea>
+          <textarea class="form-input" rows="4" placeholder="Adicione observações sobre a análise...">Oferta bem estruturada. Empresa com bom histórico e documentação quase completa. Águardando correcao do quadro societario com assinatura do socio minoritario.</textarea>
         </div>
       </div>
 
-      <!-- Acoes -->
+      <!-- Ações -->
       <div class="card mt-20" style="background: var(--bg);">
         <div class="flex-between" style="flex-wrap: wrap; gap: 15px;">
           <div>
-            <h4 style="margin-bottom: 5px;">Decisao da Analise</h4>
-            <p class="text-muted">Selecione uma acao para esta oferta</p>
+            <h4 style="margin-bottom: 5px;">Decisao da Análise</h4>
+            <p class="text-muted">Selecione uma ação para esta oferta</p>
           </div>
           <div class="flex gap-10" style="flex-wrap: wrap;">
             <button class="btn btn-outline" onclick="solicitarCorrecao()">
@@ -329,13 +333,13 @@
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
@@ -347,7 +351,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Salvando Rascunho</h3>
-        <p class="text-muted">O rascunho esta sendo salvo...</p>
+        <p class="text-muted">O rascunho está sendo salvo...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('salvandoRascunhoModal')">OK</button>
       </div>
     </div>
@@ -369,7 +373,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Verificando Socios</h3>
-        <p class="text-muted">Carregando informacoes dos socios...</p>
+        <p class="text-muted">Carregando informações dos socios...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('verificandoSociosModal')">OK</button>
       </div>
     </div>
@@ -380,7 +384,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Visualizando</h3>
-        <p class="text-muted">Abrindo documento para visualizacao...</p>
+        <p class="text-muted">Abrindo documento para visualização...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('visualizandoModal')">OK</button>
       </div>
     </div>
@@ -391,7 +395,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Solicitando Correcao</h3>
-        <p class="text-muted">Enviando solicitacao de correcao...</p>
+        <p class="text-muted">Enviando solicitação de correcao...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('solicitandoCorrecaoModal')">OK</button>
       </div>
     </div>
@@ -401,8 +405,8 @@
     <div class="modal text-center" style="max-width: 400px;">
       <div style="padding: 30px;">
         <i class="bi bi-question-circle" style="font-size: 3rem; color: var(--warning);"></i>
-        <h3 style="margin: 15px 0;">Solicitar Correcoes</h3>
-        <p class="text-muted">Deseja solicitar correcoes ao parceiro? Um e-mail sera enviado com as pendencias.</p>
+        <h3 style="margin: 15px 0;">Solicitar Correções</h3>
+        <p class="text-muted">Deseja solicitar correções ao parceiro? Um e-mail será enviado com as pendências.</p>
         <div class="flex gap-10 mt-20" style="justify-content: center;">
           <button class="btn btn-outline" onclick="hideModal('confirmarCorrecaoModal')">Cancelar</button>
           <button class="btn btn-primary" onclick="hideModal('confirmarCorrecaoModal'); showModal('correcaoEnviadaModal')">Confirmar</button>
@@ -427,7 +431,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-x-circle" style="font-size: 3rem; color: var(--danger);"></i>
         <h3 style="margin: 15px 0;">Rejeitar Oferta</h3>
-        <p class="text-muted">A oferta sera rejeitada.</p>
+        <p class="text-muted">A oferta será rejeitada.</p>
         <div class="flex gap-10 mt-20" style="justify-content: center;">
           <button class="btn btn-outline" onclick="hideModal('rejeitarOfertaModal')">Cancelar</button>
           <button class="btn btn-danger" onclick="hideModal('rejeitarOfertaModal'); showModal('ofertaRejeitadaModal')">Rejeitar</button>
@@ -452,7 +456,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-question-circle" style="font-size: 3rem; color: var(--warning);"></i>
         <h3 style="margin: 15px 0;">Aprovar Oferta</h3>
-        <p class="text-muted">Tem certeza que deseja aprovar esta oferta? Ela sera publicada na plataforma.</p>
+        <p class="text-muted">Tem certeza que deseja aprovar esta oferta? Ela será publicada na plataforma.</p>
         <div class="flex gap-10 mt-20" style="justify-content: center;">
           <button class="btn btn-outline" onclick="hideModal('confirmarAprovacaoModal')">Cancelar</button>
           <button class="btn btn-success" onclick="hideModal('confirmarAprovacaoModal'); showModal('ofertaAprovadaModal')">Aprovar</button>
@@ -466,13 +470,14 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Oferta Aprovada</h3>
-        <p class="text-muted">Oferta aprovada com sucesso! Sera publicada em 01/02/2026.</p>
+        <p class="text-muted">Oferta aprovada com sucesso! Será publicada em 01/02/2026.</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('ofertaAprovadaModal'); window.location.href='ofertas.html'">OK</button>
       </div>
     </div>
   </div>
 
   <script src="../../js/app.js"></script>
+  
   <script>
     function solicitarCorrecao() {
       showModal('confirmarCorrecaoModal');
@@ -486,5 +491,6 @@
       showModal('confirmarAprovacaoModal');
     }
   </script>
+
 </body>
 </html>
