--- a/pages/admin/oferta-detalhe.html
+++ b/pages/admin/oferta-detalhe.html
@@ -11,7 +11,7 @@
   <div class="dashboard">
     <div class="mobile-header">
       <div style="display: flex; align-items: center; gap: 10px;">
-        <a href="../../index.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
         <span class="badge badge-warning">Admin</span>
       </div>
     </div>
@@ -19,19 +19,19 @@
     <!-- Sidebar -->
     <aside class="sidebar sidebar-dark">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo" style="color: white;">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: white;">CrowdInvest</a>
         <span class="badge badge-warning" style="margin-left: 10px;">Admin</span>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html" class="active"><i class="bi bi-megaphone"></i> Ofertas</a></li>
         <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
-        <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
-        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
+        <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validação Cadastro</a></li>
+        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderação</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatorios</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatórios</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../admin-login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -47,13 +47,13 @@
           <div style="width: 60px; height: 60px; background: linear-gradient(135deg, var(--primary-dark), var(--primary-dark)); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 1.5rem; font-weight: bold;">TS</div>
           <div>
             <div class="flex gap-10" style="align-items: center;">
-              <h1 class="page-title">TechStart Inovacao</h1>
+              <h1 class="page-title">TechStart Inovação</h1>
               <span class="badge badge-success">Ativa</span>
             </div>
             <p class="text-muted">CNPJ: 12.345.678/0001-90 | Parceiro: TechStart LTDA</p>
           </div>
         </div>
-        <div class="flex gap-10">
+        <div class="header-user-info">
           <button class="btn btn-outline" onclick="showModal('editandoModal')">
             <i class="bi bi-pencil"></i> Editar
           </button>
@@ -64,7 +64,7 @@
             <div id="actionsDropdown" class="dropdown-menu" style="display: none;">
               <a href="#" onclick="showModal('pausandoModal')"><i class="bi bi-pause-circle"></i> Pausar Oferta</a>
               <a href="#" onclick="showModal('encerandoModal')"><i class="bi bi-stop-circle"></i> Encerrar Oferta</a>
-              <a href="#" onclick="showModal('exportandoModal')"><i class="bi bi-download"></i> Exportar Dados</a>
+              <a href="#" onclick="Modals.export('pdf', 'oferta-dados')"><i class="bi bi-download"></i> Exportar Dados</a>
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
       <div class="card" style="background: linear-gradient(135deg, #059669, #047857); color: white; margin-bottom: 30px;">
         <div class="grid-2" style="gap: 30px; align-items: center;">
           <div>
-            <h3 style="margin-bottom: 10px;">Progresso da Captacao</h3>
+            <h3 style="margin-bottom: 10px;">Progresso da Captação</h3>
             <div class="progress" style="height: 12px; background: rgba(255,255,255,0.3);">
               <div class="progress-bar" style="width: 75%; background: white;"></div>
             </div>
@@ -96,7 +96,7 @@
         <div class="kpi-card">
           <div class="kpi-label">Clientes</div>
           <div class="kpi-value">127</div>
-          <div class="kpi-change positive">+12 esta semana</div>
+          <div class="kpi-change positive">+12 está semana</div>
         </div>
         <div class="kpi-card">
           <div class="kpi-label">Ticket Medio</div>
@@ -104,7 +104,7 @@
           <div class="kpi-change">por investidor</div>
         </div>
         <div class="kpi-card">
-          <div class="kpi-label">Em Desistencia</div>
+          <div class="kpi-label">Em Desistência</div>
           <div class="kpi-value" style="color: var(--warning);">6</div>
           <div class="kpi-change">R$ 15.000 em risco</div>
         </div>
@@ -123,7 +123,7 @@
           </div>
           <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px;">
             <div>
-              <p class="text-muted" style="font-size: 0.75rem;">Meta de Captacao</p>
+              <p class="text-muted" style="font-size: 0.75rem;">Meta de Captação</p>
               <p><strong>R$ 500.000,00</strong></p>
             </div>
             <div>
@@ -131,11 +131,11 @@
               <p><strong>R$ 300.000,00</strong></p>
             </div>
             <div>
-              <p class="text-muted" style="font-size: 0.75rem;">Investimento Minimo</p>
+              <p class="text-muted" style="font-size: 0.75rem;">Investimento Mínimo</p>
               <p><strong>R$ 1.000,00</strong></p>
             </div>
             <div>
-              <p class="text-muted" style="font-size: 0.75rem;">Investimento Maximo</p>
+              <p class="text-muted" style="font-size: 0.75rem;">Investimento Máximo</p>
               <p><strong>R$ 20.000,00</strong></p>
             </div>
             <div>
@@ -147,7 +147,7 @@
               <p><strong>R$ 3.333.333</strong></p>
             </div>
             <div>
-              <p class="text-muted" style="font-size: 0.75rem;">Data Inicio</p>
+              <p class="text-muted" style="font-size: 0.75rem;">Data Início</p>
               <p><strong>01/01/2026</strong></p>
             </div>
             <div>
@@ -165,7 +165,7 @@
           <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px;">
             <div>
               <p class="text-muted" style="font-size: 0.75rem;">Razao Social</p>
-              <p><strong>TechStart Inovacao LTDA</strong></p>
+              <p><strong>TechStart Inovação LTDA</strong></p>
             </div>
             <div>
               <p class="text-muted" style="font-size: 0.75rem;">CNPJ</p>
@@ -176,12 +176,12 @@
               <p><strong>Tecnologia / SaaS</strong></p>
             </div>
             <div>
-              <p class="text-muted" style="font-size: 0.75rem;">Fundacao</p>
+              <p class="text-muted" style="font-size: 0.75rem;">Fundação</p>
               <p><strong>2021</strong></p>
             </div>
             <div>
               <p class="text-muted" style="font-size: 0.75rem;">Cidade/UF</p>
-              <p><strong>Sao Paulo/SP</strong></p>
+              <p><strong>São Paulo/SP</strong></p>
             </div>
             <div>
               <p class="text-muted" style="font-size: 0.75rem;">Funcionarios</p>
@@ -199,9 +199,9 @@
       <div class="card mt-20">
         <div class="card-header flex-between">
           <h3 class="card-title"><i class="bi bi-people"></i> Clientes da Oferta</h3>
-          <div class="flex gap-10">
+          <div class="header-user-info">
             <input type="text" class="form-input" placeholder="Buscar..." style="width: 200px;">
-            <button class="btn btn-outline btn-sm" onclick="showModal('exportandoModal')"><i class="bi bi-download"></i> Exportar</button>
+            <button class="btn btn-outline btn-sm" onclick="Modals.export('excel', 'oferta-clientes')"><i class="bi bi-download"></i> Exportar</button>
           </div>
         </div>
         <div class="table-container">
@@ -213,7 +213,7 @@
                 <th>Equity</th>
                 <th>Data</th>
                 <th>Status</th>
-                <th>Acoes</th>
+                <th>Ações</th>
               </tr>
             </thead>
             <tbody>
@@ -225,7 +225,7 @@
                 <td>R$ 5.500,00</td>
                 <td>1.1%</td>
                 <td>18/01/2026</td>
-                <td><span class="badge badge-warning">Em Desistencia</span></td>
+                <td><span class="badge badge-warning">Em Desistência</span></td>
                 <td><a href="cliente-detalhe.html" class="btn btn-outline btn-sm"><i class="bi bi-eye"></i></a></td>
               </tr>
               <tr>
@@ -277,18 +277,18 @@
         </div>
         <div class="flex-between mt-20">
           <p class="text-muted">Mostrando 1-5 de 127 investidores</p>
-          <div class="flex gap-10">
+          <div class="header-user-info">
             <button class="btn btn-outline btn-sm" disabled>Anterior</button>
-            <button class="btn btn-outline btn-sm">Proximo</button>
+            <button class="btn btn-outline btn-sm">Próximo</button>
           </div>
         </div>
       </div>
 
-      <!-- Atualizacoes -->
+      <!-- Atualizações -->
       <div class="card mt-20">
         <div class="card-header flex-between">
-          <h3 class="card-title"><i class="bi bi-newspaper"></i> Atualizacoes da Oferta</h3>
-          <button class="btn btn-primary btn-sm" onclick="showModal('novaAtualizacaoModal')"><i class="bi bi-plus-lg"></i> Nova Atualizacao</button>
+          <h3 class="card-title"><i class="bi bi-newspaper"></i> Atualizações da Oferta</h3>
+          <button class="btn btn-primary btn-sm" onclick="showModal('novaAtualizacaoModal')"><i class="bi bi-plus-lg"></i> Nova Atualização</button>
         </div>
         <div style="display: flex; flex-direction: column; gap: 15px;">
           <div style="padding: 15px; background: var(--bg); border-radius: var(--radius); border-left: 3px solid var(--primary);">
@@ -297,7 +297,7 @@
               <small class="text-muted">19/01/2026</small>
             </div>
             <p class="text-muted" style="font-size: 0.875rem;">
-              A TechStart atingiu 75% da meta de captacao. Agradecemos a todos os investidores pela confianca!
+              A TechStart atingiu 75% da meta de captação. Agradecemos a todos os investidores pela confiança!
             </p>
           </div>
           <div style="padding: 15px; background: var(--bg); border-radius: var(--radius); border-left: 3px solid var(--success);">
@@ -315,18 +315,18 @@
               <small class="text-muted">01/01/2026</small>
             </div>
             <p class="text-muted" style="font-size: 0.875rem;">
-              A oferta de captacao da TechStart foi iniciada com meta de R$ 500.000.
+              A oferta de captação da TechStart foi iniciada com meta de R$ 500.000.
             </p>
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
@@ -338,7 +338,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Editando</h3>
-        <p class="text-muted">Abrindo modo de edicao...</p>
+        <p class="text-muted">Abrindo modo de edição...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('editandoModal')">OK</button>
       </div>
     </div>
@@ -349,7 +349,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Pausando Oferta</h3>
-        <p class="text-muted">A oferta esta sendo pausada...</p>
+        <p class="text-muted">A oferta está sendo pausada...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('pausandoModal')">OK</button>
       </div>
     </div>
@@ -360,7 +360,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Encerrando Oferta</h3>
-        <p class="text-muted">A oferta esta sendo encerrada...</p>
+        <p class="text-muted">A oferta está sendo encerrada...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('encerandoModal')">OK</button>
       </div>
     </div>
@@ -371,7 +371,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Exportando Dados</h3>
-        <p class="text-muted">Os dados estao sendo exportados...</p>
+        <p class="text-muted">Os dados estão sendo exportados...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('exportandoModal')">OK</button>
       </div>
     </div>
@@ -381,13 +381,15 @@
     <div class="modal text-center" style="max-width: 400px;">
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Nova Atualizacao</h3>
-        <p class="text-muted">Abrindo formulario de nova atualizacao...</p>
+        <h3 style="margin: 15px 0;">Nova Atualização</h3>
+        <p class="text-muted">Abrindo formulário de nova atualização...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('novaAtualizacaoModal')">OK</button>
       </div>
     </div>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+
 </body>
 </html>
