--- a/pages/admin/relatorio-visualizar.html
+++ b/pages/admin/relatorio-visualizar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Visualizar Relatorio - Admin - CrowdInvest</title>
+  <title>Visualizar Relatório - Admin - CrowdInvest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
   <style>
@@ -141,7 +141,7 @@
   <div class="dashboard">
     <div class="mobile-header">
       <div style="display: flex; align-items: center; gap: 10px;">
-        <a href="../../index.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
         <span class="badge badge-warning">Admin</span>
       </div>
     </div>
@@ -149,19 +149,19 @@
     <!-- Sidebar -->
     <aside class="sidebar sidebar-dark">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo" style="color: white;">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: white;">CrowdInvest</a>
         <span class="badge badge-warning" style="margin-left: 10px;">Admin</span>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html"><i class="bi bi-megaphone"></i> Ofertas</a></li>
         <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
-        <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
-        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
+        <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validação Cadastro</a></li>
+        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderação</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="relatorios.html" class="active"><i class="bi bi-bar-chart"></i> Relatorios</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="relatorios.html" class="active"><i class="bi bi-bar-chart"></i> Relatórios</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../admin-login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -175,8 +175,8 @@
         <div class="flex gap-10" style="align-items: center;">
           <a href="relatorios.html" class="btn btn-outline btn-sm"><i class="bi bi-arrow-left"></i></a>
           <div>
-            <h1 class="page-title">Visualizar Relatorio</h1>
-            <p class="text-muted">Relatorio de Clientes por Oferta</p>
+            <h1 class="page-title">Visualizar Relatório</h1>
+            <p class="text-muted">Relatório de Clientes por Oferta</p>
           </div>
         </div>
       </div>
@@ -184,10 +184,10 @@
       <!-- Report Viewer -->
       <div class="report-viewer">
         <div class="report-toolbar">
-          <div class="flex gap-10">
+          <div class="header-user-info">
             <select class="form-input" style="width: auto;">
               <option>Todas as Ofertas</option>
-              <option selected>TechStart Inovacao</option>
+              <option selected>TechStart Inovação</option>
               <option>EcoFood Delivery</option>
               <option>FinTech Solutions</option>
             </select>
@@ -197,7 +197,7 @@
               <option>Novembro 2024</option>
             </select>
           </div>
-          <div class="flex gap-10">
+          <div class="header-user-info">
             <button class="btn btn-outline" onclick="window.print();">
               <i class="bi bi-printer"></i> Imprimir
             </button>
@@ -206,13 +206,13 @@
                 <i class="bi bi-download"></i> Exportar <i class="bi bi-chevron-down"></i>
               </button>
               <div id="exportDropdown" class="dropdown-menu" style="display: none; position: absolute; right: 0; top: 100%; background: white; border: 1px solid var(--border); border-radius: var(--radius); box-shadow: 0 4px 12px rgba(0,0,0,0.1); min-width: 160px; z-index: 100;">
-                <a href="#" onclick="showModal('exportPDFModal'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
+                <a href="#" onclick="Modals.export('pdf', 'admin-relatório'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
                   <i class="bi bi-file-earmark-pdf" style="color: #dc3545;"></i> PDF (.pdf)
                 </a>
-                <a href="#" onclick="showModal('exportExcelModal'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
+                <a href="#" onclick="Modals.export('excel', 'admin-relatório'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
                   <i class="bi bi-file-earmark-excel" style="color: #217346;"></i> Excel (.xlsx)
                 </a>
-                <a href="#" onclick="showModal('exportCSVModal'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
+                <a href="#" onclick="Modals.export('csv', 'admin-relatório'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
                   <i class="bi bi-filetype-csv" style="color: #6c757d;"></i> CSV (.csv)
                 </a>
               </div>
@@ -224,8 +224,8 @@
           <!-- Report Header -->
           <div class="report-header">
             <div class="report-logo">CI</div>
-            <h1 class="report-title">Relatorio de Clientes</h1>
-            <p class="report-subtitle">TechStart Inovacao - Janeiro 2026</p>
+            <h1 class="report-title">Relatório de Clientes</h1>
+            <p class="report-subtitle">TechStart Inovação - Janeiro 2026</p>
             <p class="text-muted" style="font-size: 0.875rem; margin-top: 10px;">
               Gerado em: 19/01/2026 as 15:30
             </p>
@@ -249,14 +249,14 @@
               </div>
               <div class="summary-card">
                 <div class="summary-value" style="color: var(--warning);">6</div>
-                <div class="summary-label">Em Desistencia</div>
+                <div class="summary-label">Em Desistência</div>
               </div>
             </div>
           </div>
 
           <!-- Status Breakdown -->
           <div class="report-section">
-            <h2 class="report-section-title"><i class="bi bi-pie-chart"></i> Distribuicao por Status</h2>
+            <h2 class="report-section-title"><i class="bi bi-pie-chart"></i> Distribuição por Status</h2>
             <table class="report-table">
               <thead>
                 <tr>
@@ -274,7 +274,7 @@
                   <td>92.9%</td>
                 </tr>
                 <tr>
-                  <td><span class="badge badge-warning">Em Desistencia</span></td>
+                  <td><span class="badge badge-warning">Em Desistência</span></td>
                   <td>6</td>
                   <td>R$ 15.000,00</td>
                   <td>4.0%</td>
@@ -381,7 +381,7 @@
                   <td>R$ 5.500,00</td>
                   <td>1.1%</td>
                   <td>18/01/2026</td>
-                  <td><span class="badge badge-warning">Em Desistencia</span></td>
+                  <td><span class="badge badge-warning">Em Desistência</span></td>
                 </tr>
                 <tr>
                   <td>9</td>
@@ -407,14 +407,14 @@
 
           <!-- Daily Evolution -->
           <div class="report-section">
-            <h2 class="report-section-title"><i class="bi bi-calendar3"></i> Evolucao Diaria (Ultimos 7 dias)</h2>
+            <h2 class="report-section-title"><i class="bi bi-calendar3"></i> Evolução Diaria (Últimos 7 dias)</h2>
             <table class="report-table">
               <thead>
                 <tr>
                   <th>Data</th>
                   <th>Novos Clientes</th>
                   <th>Valor Captado</th>
-                  <th>Desistencias</th>
+                  <th>Desistências</th>
                   <th>Saldo</th>
                 </tr>
               </thead>
@@ -481,19 +481,19 @@
 
           <!-- Report Footer -->
           <div class="report-footer">
-            <p><strong>CrowdInvest</strong> - Plataforma de Crowdfunding Regulamentada pela CVM</p>
-            <p>RCVM 88/2022 | Este relatorio e confidencial e destinado exclusivamente ao uso interno.</p>
+            <p><strong>CrowdInvest</strong> - Plataforma de Investimentos Alternativos Regulamentada pela CVM</p>
+            <p>RCVM 88/2022 | Este relatório e confidencial e destinado exclusivamente ao uso interno.</p>
             <p style="margin-top: 10px;">Gerado automaticamente em 19/01/2026 as 15:30</p>
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
@@ -505,7 +505,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Exportando PDF</h3>
-        <p class="text-muted">O arquivo PDF esta sendo gerado...</p>
+        <p class="text-muted">O arquivo PDF está sendo gerado...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('exportPDFModal')">OK</button>
       </div>
     </div>
@@ -516,7 +516,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Exportando Excel</h3>
-        <p class="text-muted">O arquivo Excel esta sendo gerado...</p>
+        <p class="text-muted">O arquivo Excel está sendo gerado...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('exportExcelModal')">OK</button>
       </div>
     </div>
@@ -527,12 +527,14 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Exportando CSV</h3>
-        <p class="text-muted">O arquivo CSV esta sendo gerado...</p>
+        <p class="text-muted">O arquivo CSV está sendo gerado...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('exportCSVModal')">OK</button>
       </div>
     </div>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+
 </body>
 </html>
