--- a/pages/admin/relatorios.html
+++ b/pages/admin/relatorios.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Relatorios - Admin - CrowdInvest</title>
+  <title>Relatórios - Admin - CrowdInvest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
@@ -11,26 +11,26 @@
   <div class="dashboard">
     <div class="mobile-header">
       <div style="display: flex; align-items: center; gap: 10px;">
-        <a href="../../index.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: var(--primary);">CrowdInvest</a>
         <span class="badge badge-warning">Admin</span>
       </div>
     </div>
 
     <aside class="sidebar sidebar-dark">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo" style="color: white;">CrowdInvest</a>
+        <a href="dashboard.html" class="logo" style="color: white;">CrowdInvest</a>
         <span class="badge badge-warning" style="margin-left: 10px;">Admin</span>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
         <li><a href="ofertas.html"><i class="bi bi-megaphone"></i> Ofertas</a></li>
         <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
-        <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validacao Cadastro</a></li>
-        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderacao</a></li>
+        <li><a href="kyc-fila.html"><i class="bi bi-person-check"></i> Validação Cadastro</a></li>
+        <li><a href="moderacao.html"><i class="bi bi-shield-check"></i> Moderação</a></li>
         <li><a href="parceiros.html"><i class="bi bi-building"></i> Parceiros</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="relatorios.html" class="active"><i class="bi bi-bar-chart"></i> Relatorios</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="relatorios.html" class="active"><i class="bi bi-bar-chart"></i> Relatórios</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../admin-login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -41,22 +41,22 @@
 
       <div class="page-header">
         <div>
-          <h1 class="page-title">Relatorios</h1>
-          <p class="text-muted">Gere e exporte relatorios da plataforma</p>
+          <h1 class="page-title">Relatórios</h1>
+          <p class="text-muted">Gere e exporte relatórios da plataforma</p>
         </div>
-        <div class="flex gap-10">
+        <div class="header-user-info">
           <div class="dropdown" style="position: relative;">
             <button class="btn btn-outline" onclick="toggleDropdown('exportDropdown')">
               <i class="bi bi-download"></i> Exportar <i class="bi bi-chevron-down"></i>
             </button>
             <div id="exportDropdown" class="dropdown-menu" style="display: none; position: absolute; right: 0; top: 100%; background: white; border: 1px solid var(--border); border-radius: var(--radius); box-shadow: 0 4px 12px rgba(0,0,0,0.1); min-width: 160px; z-index: 100;">
-              <a href="#" onclick="showModal('exportExcelModal'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
+              <a href="#" onclick="Modals.export('excel', 'admin-relatórios'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
                 <i class="bi bi-file-earmark-excel" style="color: #217346;"></i> Excel (.xlsx)
               </a>
-              <a href="#" onclick="showModal('exportCSVModal'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
+              <a href="#" onclick="Modals.export('csv', 'admin-relatórios'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
                 <i class="bi bi-filetype-csv" style="color: #6c757d;"></i> CSV (.csv)
               </a>
-              <a href="#" onclick="showModal('exportPDFModal'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
+              <a href="#" onclick="Modals.export('pdf', 'admin-relatórios'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
                 <i class="bi bi-file-earmark-pdf" style="color: #dc3545;"></i> PDF (.pdf)
               </a>
             </div>
@@ -65,16 +65,16 @@
       </div>
 
       <div class="grid-2">
-        <!-- Relatorios disponiveis -->
+        <!-- Relatórios disponíveis -->
         <div class="card">
-          <h3 style="margin-bottom: 20px;">Relatorios Operacionais</h3>
+          <h3 style="margin-bottom: 20px;">Relatórios Operacionais</h3>
           <div style="display: flex; flex-direction: column; gap: 15px;">
             <div class="flex-between" style="padding: 15px; background: var(--bg); border-radius: var(--radius);">
               <div>
-                <strong>Captacao Mensal</strong>
+                <strong>Captação Mensal</strong>
                 <p class="text-muted" style="font-size: 0.875rem;">Volume captado por mes/oferta</p>
               </div>
-              <div class="flex gap-10">
+              <div class="header-user-info">
                 <a href="relatorio-visualizar.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Visualizar</a>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoExcelModal')"><i class="bi bi-file-earmark-excel"></i></button>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoPDFModal')"><i class="bi bi-file-earmark-pdf"></i></button>
@@ -82,10 +82,10 @@
             </div>
             <div class="flex-between" style="padding: 15px; background: var(--bg); border-radius: var(--radius);">
               <div>
-                <strong>Clientes por Periodo</strong>
-                <p class="text-muted" style="font-size: 0.875rem;">Novos cadastros e ativacoes</p>
+                <strong>Clientes por Período</strong>
+                <p class="text-muted" style="font-size: 0.875rem;">Novos cadastros e ativações</p>
               </div>
-              <div class="flex gap-10">
+              <div class="header-user-info">
                 <a href="relatorio-visualizar.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Visualizar</a>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoExcelModal')"><i class="bi bi-file-earmark-excel"></i></button>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoPDFModal')"><i class="bi bi-file-earmark-pdf"></i></button>
@@ -93,10 +93,10 @@
             </div>
             <div class="flex-between" style="padding: 15px; background: var(--bg); border-radius: var(--radius);">
               <div>
-                <strong>Taxa de Desistencia</strong>
-                <p class="text-muted" style="font-size: 0.875rem;">Desistencias por oferta/periodo</p>
+                <strong>Taxa de Desistência</strong>
+                <p class="text-muted" style="font-size: 0.875rem;">Desistências por oferta/período</p>
               </div>
-              <div class="flex gap-10">
+              <div class="header-user-info">
                 <a href="relatorio-visualizar.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Visualizar</a>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoExcelModal')"><i class="bi bi-file-earmark-excel"></i></button>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoPDFModal')"><i class="bi bi-file-earmark-pdf"></i></button>
@@ -104,10 +104,10 @@
             </div>
             <div class="flex-between" style="padding: 15px; background: var(--bg); border-radius: var(--radius);">
               <div>
-                <strong>Validacao de Cadastros</strong>
-                <p class="text-muted" style="font-size: 0.875rem;">Taxa aprovacao/rejeicao Bureau</p>
+                <strong>Validação de Cadastros</strong>
+                <p class="text-muted" style="font-size: 0.875rem;">Taxa aprovação/rejeicao Bureau</p>
               </div>
-              <div class="flex gap-10">
+              <div class="header-user-info">
                 <a href="relatorio-visualizar.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Visualizar</a>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoExcelModal')"><i class="bi bi-file-earmark-excel"></i></button>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoPDFModal')"><i class="bi bi-file-earmark-pdf"></i></button>
@@ -117,14 +117,14 @@
         </div>
 
         <div class="card">
-          <h3 style="margin-bottom: 20px;">Relatorios Regulatorios (CVM)</h3>
+          <h3 style="margin-bottom: 20px;">Relatórios Regulatórios (CVM)</h3>
           <div style="display: flex; flex-direction: column; gap: 15px;">
             <div class="flex-between" style="padding: 15px; background: var(--bg); border-radius: var(--radius);">
               <div>
-                <strong>Relatorio Mensal CVM</strong>
+                <strong>Relatório Mensal CVM</strong>
                 <p class="text-muted" style="font-size: 0.875rem;">Conforme RCVM 88/2022</p>
               </div>
-              <div class="flex gap-10">
+              <div class="header-user-info">
                 <a href="relatorio-visualizar.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Visualizar</a>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoExcelModal')"><i class="bi bi-file-earmark-excel"></i></button>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoPDFModal')"><i class="bi bi-file-earmark-pdf"></i></button>
@@ -133,9 +133,9 @@
             <div class="flex-between" style="padding: 15px; background: var(--bg); border-radius: var(--radius);">
               <div>
                 <strong>Limites por Investidor</strong>
-                <p class="text-muted" style="font-size: 0.875rem;">Verificacao limite R$ 20k</p>
+                <p class="text-muted" style="font-size: 0.875rem;">Verificação limite R$ 20k</p>
               </div>
-              <div class="flex gap-10">
+              <div class="header-user-info">
                 <a href="relatorio-visualizar.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Visualizar</a>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoExcelModal')"><i class="bi bi-file-earmark-excel"></i></button>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoPDFModal')"><i class="bi bi-file-earmark-pdf"></i></button>
@@ -146,7 +146,7 @@
                 <strong>Ofertas Encerradas</strong>
                 <p class="text-muted" style="font-size: 0.875rem;">Resumo pos-oferta</p>
               </div>
-              <div class="flex gap-10">
+              <div class="header-user-info">
                 <a href="relatorio-visualizar.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Visualizar</a>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoExcelModal')"><i class="bi bi-file-earmark-excel"></i></button>
                 <button class="btn btn-outline btn-sm" onclick="showModal('gerandoPDFModal')"><i class="bi bi-file-earmark-pdf"></i></button>
@@ -156,40 +156,40 @@
         </div>
       </div>
 
-      <!-- Relatorios recentes -->
+      <!-- Relatórios recentes -->
       <div class="card mt-20">
-        <h3 style="margin-bottom: 20px;">Relatorios Gerados Recentemente</h3>
+        <h3 style="margin-bottom: 20px;">Relatórios Gerados Recentemente</h3>
         <div class="table-container">
           <table>
             <thead>
               <tr>
-                <th>Relatorio</th>
-                <th>Periodo</th>
+                <th>Relatório</th>
+                <th>Período</th>
                 <th>Gerado em</th>
                 <th>Por</th>
-                <th>Acao</th>
+                <th>Ação</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>Captacao Mensal</td>
+                <td>Captação Mensal</td>
                 <td>Janeiro/2026</td>
                 <td>19/01/2026 10:30</td>
-                <td>admin@crowdinvest.com.br</td>
+                <td>admin@albainvest.com.br</td>
                 <td>
-                  <div class="flex gap-10">
+                  <div class="header-user-info">
                     <button class="btn btn-outline btn-sm" onclick="showModal('downloadExcelModal')"><i class="bi bi-file-earmark-excel"></i></button>
                     <button class="btn btn-outline btn-sm" onclick="showModal('downloadPDFModal')"><i class="bi bi-file-earmark-pdf"></i></button>
                   </div>
                 </td>
               </tr>
               <tr>
-                <td>Relatorio Mensal CVM</td>
+                <td>Relatório Mensal CVM</td>
                 <td>Dezembro/2024</td>
                 <td>05/01/2026 09:00</td>
-                <td>admin@crowdinvest.com.br</td>
+                <td>admin@albainvest.com.br</td>
                 <td>
-                  <div class="flex gap-10">
+                  <div class="header-user-info">
                     <button class="btn btn-outline btn-sm" onclick="showModal('downloadExcelModal')"><i class="bi bi-file-earmark-excel"></i></button>
                     <button class="btn btn-outline btn-sm" onclick="showModal('downloadPDFModal')"><i class="bi bi-file-earmark-pdf"></i></button>
                   </div>
@@ -199,50 +199,16 @@
           </table>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
-  </div>
-
-  <!-- Modals -->
-  <div class="modal-overlay" id="exportExcelModal" style="display: none;">
-    <div class="modal text-center" style="max-width: 400px;">
-      <div style="padding: 30px;">
-        <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Exportando Excel</h3>
-        <p class="text-muted">O arquivo Excel esta sendo gerado...</p>
-        <button class="btn btn-primary mt-20" onclick="hideModal('exportExcelModal')">OK</button>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal-overlay" id="exportCSVModal" style="display: none;">
-    <div class="modal text-center" style="max-width: 400px;">
-      <div style="padding: 30px;">
-        <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Exportando CSV</h3>
-        <p class="text-muted">O arquivo CSV esta sendo gerado...</p>
-        <button class="btn btn-primary mt-20" onclick="hideModal('exportCSVModal')">OK</button>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal-overlay" id="exportPDFModal" style="display: none;">
-    <div class="modal text-center" style="max-width: 400px;">
-      <div style="padding: 30px;">
-        <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Exportando PDF</h3>
-        <p class="text-muted">O arquivo PDF esta sendo gerado...</p>
-        <button class="btn btn-primary mt-20" onclick="hideModal('exportPDFModal')">OK</button>
-      </div>
-    </div>
   </div>
 
   <div class="modal-overlay" id="gerandoExcelModal" style="display: none;">
@@ -250,7 +216,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Gerando Excel</h3>
-        <p class="text-muted">O relatorio Excel esta sendo gerado...</p>
+        <p class="text-muted">O relatório Excel está sendo gerado...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('gerandoExcelModal')">OK</button>
       </div>
     </div>
@@ -261,7 +227,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Gerando PDF</h3>
-        <p class="text-muted">O relatorio PDF esta sendo gerado...</p>
+        <p class="text-muted">O relatório PDF está sendo gerado...</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('gerandoPDFModal')">OK</button>
       </div>
     </div>
@@ -290,5 +256,7 @@
   </div>
 
   <script src="../../js/app.js"></script>
+  
+
 </body>
 </html>
