--- a/pages/investidor/configuracoes.html
+++ b/pages/investidor/configuracoes.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Configuracoes - CrowdInvest</title>
+  <title>Configurações - CrowdInvest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html" class="active"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html" class="active"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -37,14 +37,14 @@
       <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i><span> Menu</span></button>
 
       <div class="page-header">
-        <h1 class="page-title">Configuracoes</h1>
+        <h1 class="page-title">Configurações</h1>
       </div>
 
       <!-- Tabs -->
       <div class="tabs">
         <button class="tab active" onclick="switchTab(this, 'perfil')">Perfil</button>
-        <button class="tab" onclick="switchTab(this, 'seguranca')">Seguranca</button>
-        <button class="tab" onclick="switchTab(this, 'notificacoes')">Notificacoes</button>
+        <button class="tab" onclick="switchTab(this, 'seguranca')">Segurança</button>
+        <button class="tab" onclick="switchTab(this, 'notificacoes')">Notificações</button>
       </div>
 
       <!-- Perfil Tab -->
@@ -75,7 +75,7 @@
                 <input type="date" class="form-input" value="1990-05-15" readonly style="background: var(--bg);">
               </div>
             </div>
-            <button type="button" class="btn btn-primary" onclick="showModal('dadosSalvosModal')">Salvar Alteracoes</button>
+            <button type="button" class="btn btn-primary" onclick="showModal('dadosSalvosModal')">Salvar Alterações</button>
           </form>
         </div>
 
@@ -89,7 +89,7 @@
               </div>
               <div class="form-group">
                 <label class="form-label">Cidade/UF</label>
-                <input type="text" class="form-input" value="Sao Paulo/SP">
+                <input type="text" class="form-input" value="São Paulo/SP">
               </div>
               <div class="form-group" style="grid-column: span 2;">
                 <label class="form-label">Endereco</label>
@@ -101,7 +101,7 @@
         </div>
       </div>
 
-      <!-- Seguranca Tab -->
+      <!-- Segurança Tab -->
       <div id="seguranca" class="tab-content" style="display: none;">
         <div class="card">
           <h3 style="margin-bottom: 20px;">Alterar Senha</h3>
@@ -112,7 +112,7 @@
             </div>
             <div class="form-group">
               <label class="form-label">Nova Senha</label>
-              <input type="password" class="form-input" placeholder="Minimo 8 caracteres">
+              <input type="password" class="form-input" placeholder="Mínimo 8 caracteres">
             </div>
             <div class="form-group">
               <label class="form-label">Confirmar Nova Senha</label>
@@ -123,16 +123,20 @@
         </div>
 
         <div class="card">
-          <h3 style="margin-bottom: 20px;">Verificacao em Duas Etapas</h3>
+          <h3 style="margin-bottom: 20px;">Verificação em Duas Etapas</h3>
           <div class="alert alert-success">
-            <strong><i class="bi bi-shield-check"></i> Verificacao Ativada</strong> - Sua conta esta protegida
+            <i class="bi bi-shield-check"></i>
+            <div>
+              <strong>Verificação Ativada:</strong><br>
+              Sua conta está protegida
+            </div>
           </div>
 
-          <p class="text-muted mb-20">Escolha o metodo preferido para receber os codigos de verificacao:</p>
+          <p class="text-muted mb-20">Escolha o metodo preferido para receber os códigos de verificação:</p>
 
           <div class="method-options">
             <label class="method-option selected" onclick="selectMethod(this)">
-              <input type="radio" name="verificacao" value="email" checked>
+              <input type="radio" name="verificação" value="email" checked>
               <span class="method-icon"><i class="bi bi-envelope"></i></span>
               <div class="method-info">
                 <h4>E-mail</h4>
@@ -141,7 +145,7 @@
             </label>
 
             <label class="method-option" onclick="selectMethod(this)">
-              <input type="radio" name="verificacao" value="sms">
+              <input type="radio" name="verificação" value="sms">
               <span class="method-icon"><i class="bi bi-chat-dots"></i></span>
               <div class="method-info">
                 <h4>SMS</h4>
@@ -150,7 +154,7 @@
             </label>
 
             <label class="method-option" onclick="selectMethod(this)">
-              <input type="radio" name="verificacao" value="whatsapp">
+              <input type="radio" name="verificação" value="whatsapp">
               <span class="method-icon"><i class="bi bi-whatsapp"></i></span>
               <div class="method-info">
                 <h4>WhatsApp</h4>
@@ -162,11 +166,11 @@
           <div class="form-group mt-20">
             <label class="toggle">
               <div class="toggle-switch active" onclick="toggleSwitch(this)"></div>
-              <span>Solicitar verificacao em todos os logins</span>
+              <span>Solicitar verificação em todos os logins</span>
             </label>
           </div>
 
-          <button type="button" class="btn btn-primary" onclick="showModal('verificacaoSalvaModal')">Salvar Configuracoes</button>
+          <button type="button" class="btn btn-primary" onclick="showModal('verificacaoSalvaModal')">Salvar Configurações</button>
         </div>
 
         <div class="card">
@@ -177,7 +181,7 @@
                 <tr>
                   <th>Dispositivo</th>
                   <th>Local</th>
-                  <th>Ultimo acesso</th>
+                  <th>Último acesso</th>
                   <th></th>
                 </tr>
               </thead>
@@ -185,9 +189,9 @@
                 <tr>
                   <td>
                     <strong>Chrome - Windows</strong>
-                    <br><small class="text-muted">Sessao atual</small>
+                    <br><small class="text-muted">Sessão atual</small>
                   </td>
-                  <td>Sao Paulo, BR</td>
+                  <td>São Paulo, BR</td>
                   <td>Agora</td>
                   <td><span class="badge badge-success">Ativa</span></td>
                 </tr>
@@ -195,7 +199,7 @@
                   <td>
                     <strong>Safari - iPhone</strong>
                   </td>
-                  <td>Sao Paulo, BR</td>
+                  <td>São Paulo, BR</td>
                   <td>18/01/2026 14:30</td>
                   <td><button class="btn btn-danger btn-sm">Encerrar</button></td>
                 </tr>
@@ -205,25 +209,25 @@
         </div>
       </div>
 
-      <!-- Notificacoes Tab -->
+      <!-- Notificações Tab -->
       <div id="notificacoes" class="tab-content" style="display: none;">
         <div class="card">
-          <h3 style="margin-bottom: 20px;">Preferencias de Notificacao</h3>
+          <h3 style="margin-bottom: 20px;">Preferências de Notificação</h3>
 
           <div style="display: flex; flex-direction: column; gap: 20px;">
             <label class="toggle">
               <div class="toggle-switch active" onclick="toggleSwitch(this)"></div>
-              <span>Novas ofertas disponiveis</span>
+              <span>Novas ofertas disponíveis</span>
             </label>
 
             <label class="toggle">
               <div class="toggle-switch active" onclick="toggleSwitch(this)"></div>
-              <span>Atualizacoes das minhas empresas</span>
+              <span>Atualizações das minhas empresas</span>
             </label>
 
             <label class="toggle">
               <div class="toggle-switch active" onclick="toggleSwitch(this)"></div>
-              <span>Confirmacao de investimentos</span>
+              <span>Confirmação de investimentos</span>
             </label>
 
             <label class="toggle">
@@ -237,16 +241,16 @@
             </label>
           </div>
 
-          <button type="button" class="btn btn-primary mt-20" onclick="showModal('preferenciasSalvasModal')">Salvar Preferencias</button>
+          <button type="button" class="btn btn-primary mt-20" onclick="showModal('preferenciasSalvasModal')">Salvar Preferências</button>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
@@ -258,7 +262,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Dados Atualizados!</h3>
-        <p class="text-muted">Suas informacoes pessoais foram salvas com sucesso.</p>
+        <p class="text-muted">Suas informações pessoais foram salvas com sucesso.</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('dadosSalvosModal')">OK</button>
       </div>
     </div>
@@ -282,36 +286,42 @@
       <div style="padding: 30px;">
         <i class="bi bi-shield-check" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Senha Alterada!</h3>
-        <p class="text-muted">Sua senha foi alterada com sucesso. Use a nova senha no proximo login.</p>
+        <p class="text-muted">Sua senha foi alterada com sucesso. Use a nova senha no próximo login.</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('senhaAlteradaModal')">OK</button>
       </div>
     </div>
   </div>
 
-  <!-- Modal Verificacao Salva -->
+  <!-- Modal Verificação Salva -->
   <div class="modal-overlay" id="verificacaoSalvaModal" style="display: none;">
     <div class="modal text-center" style="max-width: 400px;">
       <div style="padding: 30px;">
         <i class="bi bi-shield-lock" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Verificacao Atualizada!</h3>
-        <p class="text-muted">Suas configuracoes de verificacao em duas etapas foram salvas.</p>
+        <h3 style="margin: 15px 0;">Verificação Atualizada!</h3>
+        <p class="text-muted">Suas configurações de verificação em duas etapas foram salvas.</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('verificacaoSalvaModal')">OK</button>
       </div>
     </div>
   </div>
 
-  <!-- Modal Preferencias Salvas -->
+  <!-- Modal Preferências Salvas -->
   <div class="modal-overlay" id="preferenciasSalvasModal" style="display: none;">
     <div class="modal text-center" style="max-width: 400px;">
       <div style="padding: 30px;">
         <i class="bi bi-bell-fill" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Preferencias Salvas!</h3>
-        <p class="text-muted">Suas preferencias de notificacao foram atualizadas.</p>
+        <h3 style="margin: 15px 0;">Preferências Salvas!</h3>
+        <p class="text-muted">Suas preferências de notificação foram atualizadas.</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('preferenciasSalvasModal')">OK</button>
       </div>
     </div>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
