--- a/pages/investidor/dashboard.html
+++ b/pages/investidor/dashboard.html
@@ -55,13 +55,13 @@
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html" class="active"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -71,7 +71,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -89,10 +89,28 @@
         <a href="ofertas.html" class="btn btn-primary">Novo Investimento</a>
       </div>
 
+      <!-- Notificação de Pagamento Recebido -->
+      <div class="notification-banner success">
+        <div class="notification-banner-icon">
+          <i class="bi bi-cash-coin"></i>
+        </div>
+        <div class="notification-banner-content">
+          <div class="notification-banner-title">Pagamento Recebido!</div>
+          <div class="notification-banner-text">Você recebeu R$ 1.250,00 de dividendos da TechStart Inovação S.A. em 15/01/2026.</div>
+          <div class="notification-banner-action">
+            <a href="extrato.html" class="btn btn-sm btn-outline">Ver Extrato</a>
+          </div>
+        </div>
+      </div>
+
       <!-- Alert for withdrawal period -->
       <div class="alert alert-warning">
-        <strong>Atencao:</strong> Voce tem 1 investimento em periodo de desistencia (ate 24/01/2026).
-        <a href="carteira.html" style="color: inherit; margin-left: 10px;">Ver detalhes &rarr;</a>
+        <i class="bi bi-exclamation-triangle"></i>
+        <div>
+          <strong>Atenção:</strong><br>
+          Você tem 1 investimento em período de desistência (até 24/01/2026).
+          <a href="carteira.html" style="color: inherit; margin-left: 10px;">Ver detalhes &rarr;</a>
+        </div>
       </div>
 
       <!-- KPIs -->
@@ -100,17 +118,17 @@
         <div class="kpi-card">
           <div class="kpi-label">Total Investido</div>
           <div class="kpi-value">R$ 18.500</div>
-          <div class="kpi-change positive">+R$ 6.500 este mes</div>
+          <div class="kpi-change positive">+R$ 6.500 este mês</div>
         </div>
         <div class="kpi-card">
-          <div class="kpi-label">Limite Disponivel</div>
+          <div class="kpi-label">Limite Disponível</div>
           <div class="kpi-value">R$ 1.500</div>
           <div class="kpi-change">de R$ 20.000/ano</div>
         </div>
         <div class="kpi-card">
           <div class="kpi-label">Em Equity</div>
           <div class="kpi-value">R$ 12.000</div>
-          <div class="kpi-change">3 participacoes</div>
+          <div class="kpi-change">3 participações</div>
         </div>
         <div class="kpi-card">
           <div class="kpi-label">Em Renda Fixa</div>
@@ -139,7 +157,7 @@
               <tbody>
                 <tr>
                   <td data-label="Investimento">
-                    <strong>TechStart Inovacao</strong>
+                    <strong>TechStart Inovação</strong>
                     <br><small class="text-muted">15/01/2026</small>
                   </td>
                   <td data-label="Tipo"><span class="badge" style="background: #7c3aed; color: white; font-size: 0.65rem;">Equity</span></td>
@@ -162,7 +180,7 @@
                   </td>
                   <td data-label="Tipo"><span class="badge" style="background: #7c3aed; color: white; font-size: 0.65rem;">Equity</span></td>
                   <td data-label="Valor">R$ 3.000</td>
-                  <td data-label="Status"><span class="badge badge-warning">Desistencia</span></td>
+                  <td data-label="Status"><span class="badge badge-warning">Desistência</span></td>
                 </tr>
                 <tr>
                   <td data-label="Investimento">
@@ -208,16 +226,16 @@
         </div>
       </div>
 
-      <!-- Distribuicao por Tipo -->
+      <!-- Distribuição por Tipo -->
       <div class="card mt-20">
         <div class="card-header">
-          <h3 class="card-title"><i class="bi bi-bar-chart"></i> Distribuicao por Tipo</h3>
+          <h3 class="card-title"><i class="bi bi-bar-chart"></i> Distribuição por Tipo</h3>
         </div>
         <div style="padding: 20px;">
           <div style="display: flex; flex-direction: column; gap: 15px;">
             <div>
               <div class="flex-between" style="margin-bottom: 5px;">
-                <span><span class="badge" style="background: #7c3aed; color: white; font-size: 0.65rem;">Equity</span> Participacao em Empresas</span>
+                <span><span class="badge" style="background: #7c3aed; color: white; font-size: 0.65rem;">Equity</span> Participação em Empresas</span>
                 <strong>R$ 12.000 (65%)</strong>
               </div>
               <div class="progress" style="height: 20px;">
@@ -226,7 +244,7 @@
             </div>
             <div>
               <div class="flex-between" style="margin-bottom: 5px;">
-                <span><span class="badge" style="background: #22c55e; color: white; font-size: 0.65rem;">CRA</span> Agronegocio</span>
+                <span><span class="badge" style="background: #22c55e; color: white; font-size: 0.65rem;">CRA</span> Agronegócio</span>
                 <strong>R$ 3.500 (19%)</strong>
               </div>
               <div class="progress" style="height: 20px;">
@@ -246,10 +264,10 @@
         </div>
       </div>
 
-      <!-- Proximos Pagamentos (Renda Fixa) -->
+      <!-- Próximos Pagamentos (Renda Fixa) -->
       <div class="card mt-20">
         <div class="card-header flex-between">
-          <h3 class="card-title"><i class="bi bi-calendar-check"></i> Proximos Pagamentos</h3>
+          <h3 class="card-title"><i class="bi bi-calendar-check"></i> Próximos Pagamentos</h3>
           <span class="badge badge-info">Renda Fixa</span>
         </div>
         <div class="table-container">
@@ -294,7 +312,7 @@
               <tr>
                 <th>Investimento</th>
                 <th>Tipo</th>
-                <th>Captacao</th>
+                <th>Captação</th>
                 <th>Progresso</th>
                 <th>Dias</th>
                 <th>Status</th>
@@ -302,33 +320,33 @@
             </thead>
             <tbody>
               <tr>
-                <td data-label="Investimento"><strong>TechStart Inovacao</strong></td>
+                <td data-label="Investimento"><strong>TechStart Inovação</strong></td>
                 <td data-label="Tipo"><span class="badge" style="background: #7c3aed; color: white; font-size: 0.65rem;">Equity</span></td>
-                <td data-label="Captacao">R$ 375k / R$ 500k</td>
+                <td data-label="Captação">R$ 375k / R$ 500k</td>
                 <td data-label="Progresso">
                   <div class="progress" style="width: 80px;">
                     <div class="progress-bar" style="width: 75%;"></div>
                   </div>
                 </td>
                 <td data-label="Dias">23</td>
-                <td data-label="Status"><span class="badge badge-info">Em captacao</span></td>
+                <td data-label="Status"><span class="badge badge-info">Em captação</span></td>
               </tr>
               <tr>
                 <td data-label="Investimento"><strong>Residencial Parque das Flores</strong></td>
                 <td data-label="Tipo"><span class="badge" style="background: #0891b2; color: white; font-size: 0.65rem;">CRI</span></td>
-                <td data-label="Captacao">R$ 450k / R$ 1M</td>
+                <td data-label="Captação">R$ 450k / R$ 1M</td>
                 <td data-label="Progresso">
                   <div class="progress" style="width: 80px;">
                     <div class="progress-bar" style="width: 45%; background: #0891b2;"></div>
                   </div>
                 </td>
                 <td data-label="Dias">60</td>
-                <td data-label="Status"><span class="badge badge-info">Em captacao</span></td>
+                <td data-label="Status"><span class="badge badge-info">Em captação</span></td>
               </tr>
               <tr>
                 <td data-label="Investimento"><strong>Cooperativa AgroVerde</strong></td>
                 <td data-label="Tipo"><span class="badge" style="background: #22c55e; color: white; font-size: 0.65rem;">CRA</span></td>
-                <td data-label="Captacao">R$ 656k / R$ 800k</td>
+                <td data-label="Captação">R$ 656k / R$ 800k</td>
                 <td data-label="Progresso">
                   <div class="progress" style="width: 80px;">
                     <div class="progress-bar" style="width: 82%; background: #22c55e;"></div>
@@ -341,18 +359,31 @@
           </table>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+        </div>
+        <div class="disclaimer-links" style="margin-top: 12px; padding-top: 12px; border-top: 1px solid var(--border); display: flex; flex-wrap: wrap; gap: 16px; font-size: 0.8rem;">
+          <a href="../../index.html" style="color: var(--text-muted);"><i class="bi bi-house"></i> Início</a>
+          <a href="../como-funciona.html" style="color: var(--text-muted);"><i class="bi bi-question-circle"></i> Como Funciona</a>
+          <a href="../taxas-custos.html" style="color: var(--text-muted);"><i class="bi bi-calculator"></i> Taxas e Custos</a>
+          <a href="#" onclick="Modals.view('Termos de Uso'); return false;" style="color: var(--text-muted);"><i class="bi bi-file-text"></i> Termos de Uso</a>
+          <a href="#" onclick="Modals.view('Política de Privacidade'); return false;" style="color: var(--text-muted);"><i class="bi bi-shield"></i> Privacidade</a>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
