--- a/pages/investidor/deposito-pix.html
+++ b/pages/investidor/deposito-pix.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Deposito PIX - CrowdInvest</title>
+  <title>Depósito PIX - CrowdInvest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -40,15 +40,16 @@
         <div class="flex gap-10" style="align-items: center;">
           <a href="deposito.html" class="btn btn-outline btn-sm"><i class="bi bi-arrow-left"></i></a>
           <div>
-            <h1 class="page-title">Deposito via PIX</h1>
-            <p class="text-muted">Escaneie o QR Code ou copie o codigo</p>
+            <h1 class="page-title">Depósito via PIX</h1>
+            <p class="text-muted">Escaneie o QR Code ou copie o código</p>
           </div>
         </div>
       </div>
 
-      <!-- Status do Deposito -->
+      <!-- Status do Depósito -->
       <div class="alert alert-info mb-20">
-        <i class="bi bi-clock"></i> <strong>Aguardando Pagamento</strong> - O QR Code expira em <span id="countdown">29:59</span> minutos
+        <i class="bi bi-clock"></i>
+        <div><strong>Aguardando Pagamento</strong> - O QR Code expira em <span id="countdown">29:59</span> minutos</div>
       </div>
 
       <div class="grid-2" style="gap: 30px;">
@@ -72,16 +73,16 @@
 
           <div class="flex gap-10" style="justify-content: center; flex-wrap: wrap;">
             <button class="btn btn-primary" onclick="copiarCodigo()">
-              <i class="bi bi-clipboard"></i> Copiar Codigo PIX
+              <i class="bi bi-clipboard"></i> Copiar Código PIX
             </button>
             <button class="btn btn-outline" onclick="compartilhar()">
               <i class="bi bi-share"></i> Compartilhar
             </button>
           </div>
 
-          <!-- Codigo Copia e Cola -->
+          <!-- Código Copia e Cola -->
           <div style="margin-top: 20px; padding: 15px; background: var(--bg); border-radius: var(--radius);">
-            <label class="form-label">Codigo PIX Copia e Cola:</label>
+            <label class="form-label">Código PIX Copia e Cola:</label>
             <div style="display: flex; gap: 10px;">
               <input type="text" class="form-input" id="codigoPix" value="00020126580014br.gov.bcb.pix0136a1b2c3d4-e5f6-7890-abcd-ef1234567890520400005303986540510005802BR5925CROWDINVEST PLATAFORMA6009SAO PAULO62070503***6304ABCD" readonly style="font-size: 0.75rem;">
               <button class="btn btn-outline btn-sm" onclick="copiarCodigo()"><i class="bi bi-clipboard"></i></button>
@@ -89,12 +90,12 @@
           </div>
         </div>
 
-        <!-- Detalhes do Deposito -->
+        <!-- Detalhes do Depósito -->
         <div>
           <!-- Resumo -->
           <div class="card mb-20">
             <div class="card-header">
-              <h3 class="card-title"><i class="bi bi-receipt"></i> Detalhes do Deposito</h3>
+              <h3 class="card-title"><i class="bi bi-receipt"></i> Detalhes do Depósito</h3>
             </div>
             <div style="display: flex; flex-direction: column; gap: 15px;">
               <div class="flex-between">
@@ -116,7 +117,7 @@
               </div>
               <div class="flex-between">
                 <span class="text-muted">Identificador:</span>
-                <strong>DEP-2026-00234</strong>
+                <strong>DEP-00234</strong>
               </div>
             </div>
           </div>
@@ -137,22 +138,22 @@
               <div class="flex gap-10" style="align-items: flex-start;">
                 <span style="background: var(--primary); color: white; width: 28px; height: 28px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; flex-shrink: 0;">2</span>
                 <div>
-                  <strong>Escaneie o QR Code ou cole o codigo</strong>
-                  <p class="text-muted" style="font-size: 0.875rem;">Use a camera ou a opcao "Pix Copia e Cola"</p>
+                  <strong>Escaneie o QR Code ou cole o código</strong>
+                  <p class="text-muted" style="font-size: 0.875rem;">Use a camera ou a opção "Pix Copia e Cola"</p>
                 </div>
               </div>
               <div class="flex gap-10" style="align-items: flex-start;">
                 <span style="background: var(--primary); color: white; width: 28px; height: 28px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; flex-shrink: 0;">3</span>
                 <div>
                   <strong>Confirme o pagamento</strong>
-                  <p class="text-muted" style="font-size: 0.875rem;">Verifique os dados e autorize a transferencia</p>
+                  <p class="text-muted" style="font-size: 0.875rem;">Verifique os dados e autorize a transferência</p>
                 </div>
               </div>
               <div class="flex gap-10" style="align-items: flex-start;">
                 <span style="background: var(--success); color: white; width: 28px; height: 28px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; flex-shrink: 0;"><i class="bi bi-check"></i></span>
                 <div>
-                  <strong>Credito instantaneo</strong>
-                  <p class="text-muted" style="font-size: 0.875rem;">Seu saldo sera atualizado em segundos</p>
+                  <strong>Crédito instantaneo</strong>
+                  <p class="text-muted" style="font-size: 0.875rem;">Seu saldo será atualizado em segundos</p>
                 </div>
               </div>
             </div>
@@ -160,7 +161,11 @@
 
           <!-- Aviso -->
           <div class="alert alert-warning">
-            <i class="bi bi-exclamation-triangle"></i> <strong>Importante:</strong> Pague apenas o valor exato indicado. Pagamentos com valores diferentes podem ser estornados.
+            <i class="bi bi-exclamation-triangle"></i>
+            <div>
+              <strong>Importante:</strong><br>
+              Pague apenas o valor exato indicado. Pagamentos com valores diferentes podem ser estornados.
+            </div>
           </div>
 
           <div class="flex gap-10 mt-20">
@@ -171,13 +176,13 @@
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
@@ -199,8 +204,8 @@
     <div class="modal text-center" style="max-width: 400px;">
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Codigo Copiado</h3>
-        <p class="text-muted">Codigo PIX copiado para a area de transferencia!</p>
+        <h3 style="margin: 15px 0;">Código Copiado</h3>
+        <p class="text-muted">Código PIX copiado para a area de transferência!</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('codigoCopiadoModal')">OK</button>
       </div>
     </div>
@@ -211,12 +216,13 @@
       <div style="padding: 30px;">
         <i class="bi bi-hourglass-split" style="font-size: 3rem; color: var(--primary);"></i>
         <h3 style="margin: 15px 0;">Verificando Pagamento</h3>
-        <p class="text-muted">Aguarde enquanto verificamos seu pagamento...</p>
+        <p class="text-muted">Águarde enquanto verificamos seu pagamento...</p>
       </div>
     </div>
   </div>
 
   <script src="../../js/app.js"></script>
+  
   <script>
     function showModal(modalId) {
       document.getElementById(modalId).style.display = 'flex';
@@ -252,8 +258,8 @@
     function compartilhar() {
       if (navigator.share) {
         navigator.share({
-          title: 'Deposito CrowdInvest',
-          text: 'Codigo PIX para deposito',
+          title: 'Depósito CrowdInvest',
+          text: 'Código PIX para depósito',
           url: window.location.href
         });
       } else {
@@ -262,12 +268,17 @@
     }
 
     function verificarPagamento() {
-      // Simula verificacao
+      // Simula verificação
       showModal('verificandoPagamentoModal');
       setTimeout(() => {
         window.location.href = 'deposito-confirmacao.html';
       }, 2000);
     }
   </script>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
