--- a/pages/investidor/desistencia-confirmacao.html
+++ b/pages/investidor/desistencia-confirmacao.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Desistencia Confirmada - CrowdInvest</title>
+  <title>Desistência Confirmada - CrowdInvest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -42,19 +42,19 @@
           <i class="bi bi-check-lg" style="font-size: 3rem; color: var(--warning);"></i>
         </div>
 
-        <h1 style="color: var(--text); margin-bottom: 10px;">Desistencia Registrada</h1>
-        <p class="text-muted mb-30">Sua solicitacao de desistencia foi processada com sucesso</p>
+        <h1 style="color: var(--text); margin-bottom: 10px;">Desistência Registrada</h1>
+        <p class="text-muted mb-30">Sua solicitação de desistência foi processada com sucesso</p>
 
         <!-- Detalhes -->
         <div style="background: var(--bg); padding: 25px; border-radius: var(--radius); margin-bottom: 30px; text-align: left;">
           <div style="display: flex; flex-direction: column; gap: 15px;">
             <div class="flex-between">
-              <span class="text-muted">Protocolo da Desistencia:</span>
-              <strong>DES-2026-00089</strong>
+              <span class="text-muted">Protocolo da Desistência:</span>
+              <strong>DES-00089</strong>
             </div>
             <div class="flex-between">
               <span class="text-muted">Investimento Original:</span>
-              <strong>INV-2026-00156</strong>
+              <strong>INV-00156</strong>
             </div>
             <hr style="margin: 5px 0; border: none; border-top: 1px solid var(--border);">
             <div class="flex-between">
@@ -66,8 +66,8 @@
               <strong>Sua Carteira CrowdInvest</strong>
             </div>
             <div class="flex-between">
-              <span class="text-muted">Previsao de Credito:</span>
-              <strong>Ate 20/01/2026</strong>
+              <span class="text-muted">Previsão de Crédito:</span>
+              <strong>Até 20/01/2026</strong>
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
             <div class="timeline-item">
               <div class="timeline-marker" style="background: var(--success);"><i class="bi bi-check" style="color: white; font-size: 0.75rem;"></i></div>
               <div class="timeline-content">
-                <strong>Solicitacao Recebida</strong>
+                <strong>Solicitação Recebida</strong>
                 <p>19/01/2026 15:45</p>
               </div>
             </div>
@@ -93,14 +93,14 @@
             <div class="timeline-item">
               <div class="timeline-marker" style="background: var(--border);"></div>
               <div class="timeline-content">
-                <strong>Credito na Carteira</strong>
-                <p>Previsao: 20/01/2026</p>
+                <strong>Crédito na Carteira</strong>
+                <p>Previsão: 20/01/2026</p>
               </div>
             </div>
           </div>
         </div>
 
-        <!-- Acoes -->
+        <!-- Ações -->
         <div class="flex gap-10" style="justify-content: center; flex-wrap: wrap;">
           <a href="carteira.html" class="btn btn-primary">
             <i class="bi bi-wallet2"></i> Ver Meus Investimentos
@@ -114,33 +114,34 @@
 
         <!-- Info Adicional -->
         <div style="display: flex; flex-direction: column; gap: 10px; text-align: left; font-size: 0.875rem;">
-          <div class="flex gap-10">
+          <div class="header-user-info">
             <i class="bi bi-envelope" style="color: var(--primary);"></i>
-            <span>Enviamos uma confirmacao para seu e-mail</span>
+            <span>Enviamos uma confirmação para seu e-mail</span>
           </div>
-          <div class="flex gap-10">
+          <div class="header-user-info">
             <i class="bi bi-bell" style="color: var(--primary);"></i>
-            <span>Voce sera notificado quando o valor for creditado</span>
+            <span>Você será notificado quando o valor for creditado</span>
           </div>
-          <div class="flex gap-10">
+          <div class="header-user-info">
             <i class="bi bi-file-earmark-text" style="color: var(--primary);"></i>
-            <span>O comprovante esta disponivel em Documentos</span>
+            <span>O comprovante está disponível em Documentos</span>
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
   <style>
     .timeline {
       position: relative;
@@ -183,5 +184,10 @@
       font-size: 0.875rem;
     }
   </style>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
