--- a/pages/investidor/desistencia.html
+++ b/pages/investidor/desistencia.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Solicitar Desistencia - CrowdInvest</title>
+  <title>Solicitar Desistência - CrowdInvest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -40,27 +40,31 @@
         <div class="flex gap-10" style="align-items: center;">
           <a href="investimento-detalhe.html" class="btn btn-outline btn-sm"><i class="bi bi-arrow-left"></i></a>
           <div>
-            <h1 class="page-title">Solicitar Desistencia</h1>
-            <p class="text-muted">Investimento na TechStart Inovacao</p>
+            <h1 class="page-title">Solicitar Desistência</h1>
+            <p class="text-muted">Investimento na TechStart Inovação</p>
           </div>
         </div>
       </div>
 
       <!-- Alert RCVM 88 -->
       <div class="alert alert-info mb-20">
-        <i class="bi bi-info-circle"></i> <strong>RCVM 88/2022 - Art. 8:</strong> Voce tem o direito de desistir do investimento em ate 5 dias corridos apos a confirmacao, sem qualquer custo ou penalidade.
+        <i class="bi bi-info-circle"></i>
+        <div>
+          <strong>RCVM 88/2022 - Art. 8:</strong><br>
+          Voce tem o direito de desistir do investimento em ate 5 dias corridos apos a confirmacao, sem qualquer custo ou penalidade.
+        </div>
       </div>
 
       <div class="grid-2" style="gap: 30px;">
-        <!-- Formulario -->
+        <!-- Formulário -->
         <div class="card">
           <div class="card-header">
-            <h3 class="card-title"><i class="bi bi-x-circle"></i> Confirmar Desistencia</h3>
+            <h3 class="card-title"><i class="bi bi-x-circle"></i> Confirmar Desistência</h3>
           </div>
 
           <!-- Prazo Restante -->
           <div style="background: linear-gradient(135deg, #fef3c7, #fde68a); padding: 20px; border-radius: var(--radius); margin-bottom: 20px; text-align: center;">
-            <p class="text-muted" style="margin-bottom: 5px;">Prazo para desistencia expira em:</p>
+            <p class="text-muted" style="margin-bottom: 5px;">Prazo para desistência expira em:</p>
             <div style="font-size: 2rem; font-weight: bold; color: var(--warning);">
               <i class="bi bi-clock"></i> 2 dias e 14 horas
             </div>
@@ -74,11 +78,11 @@
               <div style="display: flex; flex-direction: column; gap: 10px;">
                 <div class="flex-between">
                   <span class="text-muted">Protocolo:</span>
-                  <strong>INV-2026-00156</strong>
+                  <strong>INV-00156</strong>
                 </div>
                 <div class="flex-between">
                   <span class="text-muted">Empresa:</span>
-                  <strong>TechStart Inovacao</strong>
+                  <strong>TechStart Inovação</strong>
                 </div>
                 <div class="flex-between">
                   <span class="text-muted">Valor Investido:</span>
@@ -97,50 +101,50 @@
 
             <!-- Motivo (Opcional) -->
             <div class="form-group">
-              <label class="form-label">Motivo da Desistencia (opcional)</label>
+              <label class="form-label">Motivo da Desistência (opcional)</label>
               <select class="form-input" id="motivoDesistencia">
                 <option value="">Selecione um motivo...</option>
-                <option value="mudanca_opiniao">Mudei de opiniao</option>
-                <option value="situacao_financeira">Situacao financeira mudou</option>
+                <option value="mudança_opiniao">Mudei de opiniao</option>
+                <option value="situação_financeira">Situação financeira mudou</option>
                 <option value="encontrei_outra">Encontrei outra oportunidade</option>
-                <option value="empresa_nao_adequada">A empresa nao e adequada ao meu perfil</option>
+                <option value="empresa_nao_adequada">A empresa não e adequada ao meu perfil</option>
                 <option value="outro">Outro motivo</option>
               </select>
             </div>
 
             <div class="form-group">
-              <label class="form-label">Comentarios adicionais (opcional)</label>
-              <textarea class="form-input" rows="3" placeholder="Se desejar, deixe um comentario sobre o motivo da desistencia..."></textarea>
+              <label class="form-label">Comentários adicionais (opcional)</label>
+              <textarea class="form-input" rows="3" placeholder="Se desejar, deixe um comentário sobre o motivo da desistência..."></textarea>
             </div>
 
             <!-- O que acontece -->
             <div style="background: #f0fdf4; padding: 20px; border-radius: var(--radius); margin-bottom: 20px; border: 1px solid #bbf7d0;">
-              <h4 style="margin-bottom: 15px; color: var(--success);"><i class="bi bi-check-circle"></i> O que acontece apos a desistencia:</h4>
+              <h4 style="margin-bottom: 15px; color: var(--success);"><i class="bi bi-check-circle"></i> O que acontece após a desistência:</h4>
               <div style="display: flex; flex-direction: column; gap: 10px; font-size: 0.875rem;">
-                <div class="flex gap-10">
+                <div class="header-user-info">
                   <i class="bi bi-arrow-return-left" style="color: var(--success);"></i>
-                  <span>O valor de <strong>R$ 2.000,00</strong> sera devolvido a sua carteira</span>
+                  <span>O valor de <strong>R$ 2.000,00</strong> será devolvido a sua carteira</span>
                 </div>
-                <div class="flex gap-10">
+                <div class="header-user-info">
                   <i class="bi bi-clock-history" style="color: var(--success);"></i>
-                  <span>Processamento em ate <strong>24 horas</strong></span>
+                  <span>Processamento em até <strong>24 horas</strong></span>
                 </div>
-                <div class="flex gap-10">
+                <div class="header-user-info">
                   <i class="bi bi-x-circle" style="color: var(--success);"></i>
-                  <span>Sua participacao na oferta sera <strong>cancelada</strong></span>
+                  <span>Sua participação na oferta será <strong>cancelada</strong></span>
                 </div>
-                <div class="flex gap-10">
+                <div class="header-user-info">
                   <i class="bi bi-currency-dollar" style="color: var(--success);"></i>
                   <span><strong>Sem taxas</strong> ou penalidades</span>
                 </div>
               </div>
             </div>
 
-            <!-- Confirmacao -->
+            <!-- Confirmação -->
             <div class="form-group">
               <label class="flex gap-10" style="cursor: pointer; align-items: flex-start;">
                 <input type="checkbox" id="confirmaDesistencia" required style="margin-top: 3px;">
-                <span>Confirmo que desejo desistir deste investimento e estou ciente de que perderei minha participacao na oferta da TechStart Inovacao.</span>
+                <span>Confirmo que desejo desistir deste investimento e estou ciente de que perderei minha participação na oferta da TechStart Inovação.</span>
               </label>
             </div>
 
@@ -149,7 +153,7 @@
                 <i class="bi bi-arrow-left"></i> Voltar
               </a>
               <button type="button" class="btn btn-danger" onclick="confirmarDesistencia()">
-                <i class="bi bi-x-circle"></i> Confirmar Desistencia
+                <i class="bi bi-x-circle"></i> Confirmar Desistência
               </button>
             </div>
           </form>
@@ -160,7 +164,7 @@
           <!-- Timeline do Processo -->
           <div class="card mb-20">
             <div class="card-header">
-              <h3 class="card-title"><i class="bi bi-clock-history"></i> Prazo de Desistencia</h3>
+              <h3 class="card-title"><i class="bi bi-clock-history"></i> Prazo de Desistência</h3>
             </div>
             <div class="timeline">
               <div class="timeline-item">
@@ -181,47 +185,50 @@
                 <div class="timeline-marker" style="background: var(--border);"></div>
                 <div class="timeline-content">
                   <strong>21/01/2026 23:59</strong>
-                  <p>Fim do prazo de desistencia</p>
+                  <p>Fim do prazo de desistência</p>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Duvidas Frequentes -->
+          <!-- Dúvidas Frequentes -->
           <div class="card mb-20">
             <div class="card-header">
-              <h3 class="card-title"><i class="bi bi-question-circle"></i> Duvidas Frequentes</h3>
+              <h3 class="card-title"><i class="bi bi-question-circle"></i> Dúvidas Frequentes</h3>
             </div>
             <div style="display: flex; flex-direction: column; gap: 15px; font-size: 0.875rem;">
               <div>
                 <strong>Posso desistir depois do prazo?</strong>
-                <p class="text-muted">Nao. Apos os 5 dias, o investimento e irrevogavel ate o encerramento da oferta.</p>
+                <p class="text-muted">Não. Após os 5 dias, o investimento é irrevogável até o encerramento da oferta.</p>
               </div>
               <div>
                 <strong>Quando recebo o dinheiro de volta?</strong>
-                <p class="text-muted">O valor e creditado na sua carteira em ate 24 horas apos a solicitacao.</p>
+                <p class="text-muted">O valor e creditado na sua carteira em até 24 horas após a solicitação.</p>
               </div>
               <div>
                 <strong>Posso investir novamente depois?</strong>
-                <p class="text-muted">Sim, enquanto a oferta estiver ativa, voce pode fazer um novo investimento.</p>
+                <p class="text-muted">Sim, enquanto a oferta estiver ativa, você pode fazer um novo investimento.</p>
               </div>
             </div>
           </div>
 
           <!-- Contato -->
           <div class="alert alert-info">
-            <i class="bi bi-headset"></i> <strong>Precisa de ajuda?</strong><br>
-            Entre em contato pelo email <a href="mailto:suporte@crowdinvest.com.br">suporte@crowdinvest.com.br</a> ou pelo chat.
+            <i class="bi bi-headset"></i>
+            <div>
+              <strong>Precisa de ajuda?</strong><br>
+              Entre em contato pelo email <a href="mailto:suporte@albainvest.com.br">suporte@albainvest.com.br</a> ou pelo chat.
+            </div>
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
@@ -232,8 +239,8 @@
     <div class="modal text-center" style="max-width: 400px;">
       <div style="padding: 30px;">
         <i class="bi bi-exclamation-circle" style="font-size: 3rem; color: var(--warning);"></i>
-        <h3 style="margin: 15px 0;">Atencao</h3>
-        <p class="text-muted">Voce precisa confirmar que deseja desistir do investimento.</p>
+        <h3 style="margin: 15px 0;">Atenção</h3>
+        <p class="text-muted">Você precisa confirmar que deseja desistir do investimento.</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('confirmarCheckboxModal')">OK</button>
       </div>
     </div>
@@ -243,8 +250,8 @@
     <div class="modal text-center" style="max-width: 400px;">
       <div style="padding: 30px;">
         <i class="bi bi-question-circle" style="font-size: 3rem; color: var(--danger);"></i>
-        <h3 style="margin: 15px 0;">Confirmar Desistencia</h3>
-        <p class="text-muted">Tem certeza que deseja desistir deste investimento? Esta acao nao pode ser desfeita.</p>
+        <h3 style="margin: 15px 0;">Confirmar Desistência</h3>
+        <p class="text-muted">Tem certeza que deseja desistir deste investimento? Esta ação não pode ser desfeita.</p>
         <div class="flex gap-10 mt-20" style="justify-content: center;">
           <button class="btn btn-outline" onclick="hideModal('confirmarDesistenciaModal')">Cancelar</button>
           <button class="btn btn-danger" onclick="executarDesistencia()">Confirmar</button>
@@ -254,6 +261,7 @@
   </div>
 
   <script src="../../js/app.js"></script>
+  
   <script>
     function showModal(modalId) {
       document.getElementById(modalId).style.display = 'flex';
@@ -319,5 +327,10 @@
       font-size: 0.875rem;
     }
   </style>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
