--- a/pages/investidor/investir-confirmar.html
+++ b/pages/investidor/investir-confirmar.html
@@ -10,13 +10,13 @@
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -61,7 +61,7 @@
             <h4 style="margin-bottom: 15px;">Resumo do Investimento</h4>
             <div class="flex-between" style="padding: 10px 0; border-bottom: 1px solid var(--border);">
               <span>Empresa:</span>
-              <strong>TechStart Inovacao</strong>
+              <strong>TechStart Inovação</strong>
             </div>
             <div class="flex-between" style="padding: 10px 0; border-bottom: 1px solid var(--border);">
               <span>CNPJ:</span>
@@ -83,19 +83,19 @@
 
           <!-- Terms -->
           <div class="card" style="background: var(--bg); border: none;">
-            <h4 style="margin-bottom: 15px;">Termos e Condicoes</h4>
+            <h4 style="margin-bottom: 15px;">Termos e Condições</h4>
             <div style="max-height: 200px; overflow-y: auto; padding: 15px; background: white; border-radius: var(--radius); font-size: 0.875rem; color: var(--text-muted);">
               <p><strong>1. RISCO DO INVESTIMENTO</strong></p>
-              <p>Declaro estar ciente de que o investimento em sociedades empresarias de pequeno porte e de risco elevado, podendo resultar em perda total do capital investido.</p>
+              <p>Declaro estar ciente de que o investimento em sociedades empresárias de pequeno porte e de risco elevado, podendo resultar em perda total do capital investido.</p>
               <br>
               <p><strong>2. LIMITE ANUAL</strong></p>
-              <p>Declaro que meu investimento total em ofertas de crowdfunding nao ultrapassa R$ 20.000,00 no ano calendario, conforme estabelecido pela RCVM 88/2022.</p>
+              <p>Declaro que meu investimento total em ofertas na plataforma não ultrapassa R$ 20.000,00 no ano calendário, conforme estabelecido pela RCVM 88/2022.</p>
               <br>
               <p><strong>3. PRAZO DE DESISTENCIA</strong></p>
-              <p>Estou ciente de que posso desistir do investimento no prazo de 5 (cinco) dias contados da data de confirmacao do aporte, sem qualquer custo ou penalidade.</p>
+              <p>Estou ciente de que posso desistir do investimento no prazo de 5 (cinco) dias contados da data de confirmação do aporte, sem qualquer custo ou penalidade.</p>
               <br>
               <p><strong>4. LIQUIDEZ</strong></p>
-              <p>Entendo que nao ha garantia de liquidez para o investimento e que a rentabilidade passada nao e garantia de rentabilidade futura.</p>
+              <p>Entendo que não ha garantia de liquidez para o investimento e que a rentabilidade passada não e garantia de rentabilidade futura.</p>
               <br>
               <p><strong>5. MATERIAL DA OFERTA</strong></p>
               <p>Declaro ter lido e compreendido o material da oferta disponibilizado pela plataforma.</p>
@@ -105,7 +105,7 @@
           <div class="form-group mt-20">
             <label style="display: flex; align-items: flex-start; gap: 10px;">
               <input type="checkbox" style="margin-top: 4px;" id="acceptTerms" checked>
-              <span>Li e aceito os termos e condicoes acima, incluindo os riscos do investimento conforme RCVM 88/2022.</span>
+              <span>Li e aceito os termos e condições acima, incluindo os riscos do investimento conforme RCVM 88/2022.</span>
             </label>
           </div>
 
@@ -117,27 +117,37 @@
           </div>
 
           <div class="alert alert-info">
-            <strong>Prazo de desistencia:</strong> Voce tera 5 dias uteis apos a confirmacao do pagamento para desistir do investimento sem custos.
+            <i class="bi bi-info-circle"></i>
+            <div>
+              <strong>Prazo de desistência:</strong><br>
+              Você tera 5 dias úteis após a confirmação do pagamento para desistir do investimento sem custos.
+            </div>
           </div>
 
-          <div class="flex gap-10">
+          <div class="header-user-info">
             <a href="investir.html?id=1" class="btn btn-secondary" style="flex: 1;">Voltar</a>
             <button type="button" class="btn btn-primary btn-lg" style="flex: 2;" onclick="window.location.href='investir-pix.html'">Confirmar e Pagar</button>
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
