--- a/pages/investidor/investir-pix.html
+++ b/pages/investidor/investir-pix.html
@@ -10,13 +10,13 @@
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -55,7 +55,7 @@
 
         <div class="card text-center">
           <h2 style="margin-bottom: 10px;">Pagamento via PIX</h2>
-          <p class="text-muted mb-30">Escaneie o QR Code ou copie o codigo PIX</p>
+          <p class="text-muted mb-30">Escaneie o QR Code ou copie o código PIX</p>
 
           <!-- QR Code -->
           <div class="qr-container">
@@ -72,7 +72,7 @@
 
           <!-- PIX Code -->
           <div style="background: var(--bg); padding: 15px; border-radius: var(--radius); margin: 20px 0;">
-            <p class="text-muted" style="font-size: 0.875rem; margin-bottom: 10px;">Codigo PIX Copia e Cola:</p>
+            <p class="text-muted" style="font-size: 0.875rem; margin-bottom: 10px;">Código PIX Copia e Cola:</p>
             <div style="display: flex; gap: 10px;">
               <input type="text" class="form-input" value="00020126580014br.gov.bcb.pix0136a1b2c3d4-e5f6-7890-abcd-ef1234567890" readonly style="font-size: 0.75rem;">
               <button class="btn btn-primary" onclick="copyPixCode('00020126580014br.gov.bcb.pix0136a1b2c3d4-e5f6-7890-abcd-ef1234567890')">Copiar</button>
@@ -87,7 +87,11 @@
 
           <!-- Timer -->
           <div class="alert alert-warning">
-            <strong>Atencao:</strong> O codigo PIX expira em <strong id="pixTimer">30:00</strong> minutos
+            <i class="bi bi-exclamation-triangle"></i>
+            <div>
+              <strong>Atenção:</strong><br>
+              O código PIX expira em <strong id="pixTimer">30:00</strong> minutos
+            </div>
           </div>
 
           <!-- Instructions -->
@@ -96,39 +100,45 @@
             <ol style="margin-left: 20px; color: var(--text-muted);">
               <li style="margin-bottom: 10px;">Abra o aplicativo do seu banco</li>
               <li style="margin-bottom: 10px;">Escolha pagar com PIX</li>
-              <li style="margin-bottom: 10px;">Escaneie o QR Code ou cole o codigo</li>
+              <li style="margin-bottom: 10px;">Escaneie o QR Code ou cole o código</li>
               <li style="margin-bottom: 10px;">Confirme o pagamento</li>
             </ol>
           </div>
 
           <div style="border-top: 1px solid var(--border); padding-top: 20px; margin-top: 20px;">
             <p class="text-muted" style="font-size: 0.875rem;">
-              Apos o pagamento, voce recebera um e-mail de confirmacao.<br>
-              O prazo de 5 dias para desistencia comeca a contar a partir da confirmacao.
+              Após o pagamento, você receberá um e-mail de confirmação.<br>
+              O prazo de 5 dias para desistência comeca a contar a partir da confirmação.
             </p>
           </div>
 
           <div class="flex gap-10 mt-20" style="justify-content: center;">
-            <button class="btn btn-success btn-lg" onclick="window.location.href='investir-sucesso.html'">Ja paguei</button>
+            <button class="btn btn-success btn-lg" onclick="window.location.href='investir-sucesso.html'">Já paguei</button>
             <a href="dashboard.html" class="btn btn-secondary">Pagar depois</a>
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
   <script>
     startCountdown('pixTimer', 1800);
   </script>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
