--- a/pages/investidor/oferta-detalhe-cra.html
+++ b/pages/investidor/oferta-detalhe-cra.html
@@ -10,13 +10,13 @@
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -45,19 +45,19 @@
 
           <div class="card mt-20">
             <h3 style="margin-bottom: 20px;">Sobre a Emissao</h3>
-            <p class="text-muted">O CRA Cooperativa AgroVerde e um titulo de renda fixa lastreado em recebiveis do agronegocio, provenientes do financiamento da safra 2026/2027 de soja de uma cooperativa com 450 produtores associados no Mato Grosso.</p>
+            <p class="text-muted">O CRA Cooperativa AgroVerde e um título de renda fixa lastreado em recebiveis do agronegócio, provenientes do financiamento da safra 2026/2027 de sojá de uma cooperativa com 450 produtores associados no Mato Grosso.</p>
 
             <h4 style="margin-top: 20px; margin-bottom: 10px;">Dados da Cooperativa</h4>
             <ul style="margin-left: 20px; color: var(--text-muted);">
               <li>450 produtores associados</li>
-              <li>25 anos de operacao</li>
+              <li>25 anos de operação</li>
               <li>Area total cultivada: 180.000 hectares</li>
-              <li>Producao media: 3.200 kg/hectare</li>
+              <li>Produção media: 3.200 kg/hectare</li>
               <li>Rating: A (agencia XYZ)</li>
             </ul>
 
-            <h4 style="margin-top: 20px; margin-bottom: 10px;">Lastro da Operacao</h4>
-            <p class="text-muted">CPRs (Cedulas de Produto Rural) emitidas pelos cooperados, com penhor da safra de soja e contratos de venda ja firmados com tradings internacionais.</p>
+            <h4 style="margin-top: 20px; margin-bottom: 10px;">Lastro da Operação</h4>
+            <p class="text-muted">CPRs (Cedulas de Produto Rural) emitidas pelos cooperados, com penhor da safra de sojá e contratos de venda já firmados com tradings internacionais.</p>
           </div>
 
           <div class="card">
@@ -65,15 +65,15 @@
             <div style="display: flex; flex-direction: column; gap: 15px;">
               <div style="padding: 15px; background: var(--bg); border-radius: var(--radius); border-left: 4px solid #22c55e;">
                 <strong>Penhor de Safra</strong>
-                <p class="text-muted" style="font-size: 0.875rem;">Safra de soja 2026/2027 dada em garantia fiduciaria.</p>
+                <p class="text-muted" style="font-size: 0.875rem;">Safra de sojá 2026/2027 dada em garantia fiduciaria.</p>
               </div>
               <div style="padding: 15px; background: var(--bg); border-radius: var(--radius); border-left: 4px solid #0891b2;">
                 <strong>Contratos de Venda</strong>
-                <p class="text-muted" style="font-size: 0.875rem;">75% da safra ja possui contratos de venda firmados com tradings.</p>
+                <p class="text-muted" style="font-size: 0.875rem;">75% da safra já possui contratos de venda firmados com tradings.</p>
               </div>
               <div style="padding: 15px; background: var(--bg); border-radius: var(--radius); border-left: 4px solid #f59e0b;">
                 <strong>Aval da Cooperativa</strong>
-                <p class="text-muted" style="font-size: 0.875rem;">A cooperativa atua como avalista solidaria da operacao.</p>
+                <p class="text-muted" style="font-size: 0.875rem;">A cooperativa atua como avalista solidaria da operação.</p>
               </div>
               <div style="padding: 15px; background: var(--bg); border-radius: var(--radius); border-left: 4px solid #8b5cf6;">
                 <strong>Seguro Agricola</strong>
@@ -85,23 +85,23 @@
           <div class="card">
             <h3 style="margin-bottom: 20px;">Documentos</h3>
             <div style="display: flex; flex-direction: column; gap: 10px;">
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
-                <span><i class="bi bi-file-earmark-pdf"></i> Termo de Securitizacao</span>
+              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);" onclick="Modals.view('Termo de Securitização'); return false;">
+                <span><i class="bi bi-file-earmark-pdf"></i> Termo de Securitização</span>
                 <span class="text-muted">2.1 MB</span>
               </a>
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
+              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);" onclick="Modals.view('Prospecto da Emissao'); return false;">
                 <span><i class="bi bi-file-earmark-pdf"></i> Prospecto da Emissao</span>
                 <span class="text-muted">4.5 MB</span>
               </a>
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
-                <span><i class="bi bi-file-earmark-pdf"></i> Relatorio de Rating</span>
+              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);" onclick="Modals.view('Relatório de Rating'); return false;">
+                <span><i class="bi bi-file-earmark-pdf"></i> Relatório de Rating</span>
                 <span class="text-muted">680 KB</span>
               </a>
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
+              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);" onclick="Modals.view('Apolice de Seguro Agricola'); return false;">
                 <span><i class="bi bi-file-earmark-pdf"></i> Apolice de Seguro Agricola</span>
                 <span class="text-muted">320 KB</span>
               </a>
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
+              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);" onclick="Modals.view('Contratos de Venda'); return false;">
                 <span><i class="bi bi-file-earmark-pdf"></i> Contratos de Venda (Resumo)</span>
                 <span class="text-muted">890 KB</span>
               </a>
@@ -109,7 +109,7 @@
           </div>
 
           <div class="card">
-            <h3 style="margin-bottom: 20px;">Calendario da Safra</h3>
+            <h3 style="margin-bottom: 20px;">Calendário da Safra</h3>
             <div style="display: flex; flex-direction: column; gap: 10px;">
               <div class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius);">
                 <span><i class="bi bi-calendar-check" style="color: #22c55e;"></i> Plantio</span>
@@ -124,7 +124,7 @@
                 <strong>Fev-Abr/2027</strong>
               </div>
               <div class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius);">
-                <span><i class="bi bi-cash-stack" style="color: var(--primary);"></i> Liquidacao</span>
+                <span><i class="bi bi-cash-stack" style="color: var(--primary);"></i> Liquidação</span>
                 <strong>Abr-Jun/2027</strong>
               </div>
             </div>
@@ -136,10 +136,10 @@
           <div class="card" style="position: sticky; top: 100px;">
             <div class="flex-between mb-20">
               <span class="badge" style="background: #22c55e; color: white;">CRA</span>
-              <span class="badge badge-success">Agronegocio</span>
+              <span class="badge badge-success">Agronegócio</span>
             </div>
             <h2>Cooperativa AgroVerde</h2>
-            <p class="text-muted">Safra Soja 2026/2027</p>
+            <p class="text-muted">Safra Sojá 2026/2027</p>
 
             <div class="kpi-grid" style="grid-template-columns: 1fr 1fr; margin: 20px 0;">
               <div class="kpi-card">
@@ -165,7 +165,7 @@
             </div>
             <p class="text-center text-muted mb-20">82% da meta atingida</p>
 
-            <!-- Dados especificos de CRA -->
+            <!-- Dados específicos de CRA -->
             <div style="background: linear-gradient(135deg, #22c55e, #16a34a); color: white; padding: 20px; border-radius: var(--radius); margin-bottom: 20px;">
               <h4 style="margin-bottom: 15px; opacity: 0.9;">Rentabilidade</h4>
               <div style="font-size: 2rem; font-weight: bold; margin-bottom: 5px;">CDI + 4,5% a.a.</div>
@@ -182,7 +182,7 @@
                 <strong>Semestral</strong>
               </div>
               <div class="flex-between mt-20">
-                <span>Amortizacao:</span>
+                <span>Amortização:</span>
                 <strong>No vencimento (bullet)</strong>
               </div>
               <div class="flex-between mt-20">
@@ -194,43 +194,49 @@
                 <strong>Penhor de Safra + Aval</strong>
               </div>
               <div class="flex-between mt-20">
-                <span>Investimento minimo:</span>
+                <span>Investimento mínimo:</span>
                 <strong>R$ 500</strong>
               </div>
               <div class="flex-between mt-20">
-                <span>Seu limite disponivel:</span>
+                <span>Seu limite disponível:</span>
                 <strong style="color: var(--primary);">R$ 5.000</strong>
               </div>
             </div>
 
             <div class="alert alert-success" style="font-size: 0.875rem;">
-              <strong><i class="bi bi-shield-check"></i> Isento de IR:</strong> CRAs sao isentos de Imposto de Renda para pessoa fisica.
+              <strong><i class="bi bi-shield-check"></i> Isento de IR:</strong> CRAs são isentos de Imposto de Renda para pessoa fisica.
             </div>
 
             <a href="investir.html?id=5&type=cra" class="btn btn-primary btn-block btn-lg mt-20">Investir Agora</a>
 
             <div class="alert alert-warning mt-20" style="font-size: 0.875rem;">
-              <strong>Atencao:</strong> CRAs sao investimentos de risco. Leia atentamente o termo de securitizacao antes de investir.
+              <strong>Atenção:</strong> CRAs são investimentos de risco. Leia atentamente o termo de securitização antes de investir.
             </div>
 
             <p class="text-center text-muted" style="font-size: 0.75rem; margin-top: 15px;">
-              Prazo de desistencia: 5 dias apos o investimento (RCVM 88)
+              Prazo de desistência: 5 dias após o investimento (RCVM 88)
             </p>
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
