--- a/pages/investidor/oferta-detalhe-cri.html
+++ b/pages/investidor/oferta-detalhe-cri.html
@@ -10,13 +10,13 @@
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -45,35 +45,35 @@
 
           <div class="card mt-20">
             <h3 style="margin-bottom: 20px;">Sobre a Emissao</h3>
-            <p class="text-muted">O CRI Residencial Parque das Flores e um titulo de renda fixa lastreado em recebiveis imobiliarios provenientes da venda de 120 unidades residenciais em Campinas/SP.</p>
+            <p class="text-muted">O CRI Residencial Parque das Flores e um título de renda fixa lastreado em recebiveis imobiliários provenientes da venda de 120 unidades residenciais em Campinas/SP.</p>
 
             <h4 style="margin-top: 20px; margin-bottom: 10px;">Caracteristicas do Empreendimento</h4>
             <ul style="margin-left: 20px; color: var(--text-muted);">
               <li>120 unidades residenciais (2 e 3 dormitorios)</li>
               <li>Area total: 15.000 m2</li>
-              <li>Localizacao: Campinas/SP - Bairro Taquaral</li>
+              <li>Localização: Campinas/SP - Bairro Taquaral</li>
               <li>Incorporadora: Construtora XYZ (30 anos de mercado)</li>
-              <li>85% das unidades ja vendidas</li>
+              <li>85% das unidades já vendidas</li>
             </ul>
 
-            <h4 style="margin-top: 20px; margin-bottom: 10px;">Lastro da Operacao</h4>
-            <p class="text-muted">Recebiveis provenientes dos contratos de compra e venda das unidades residenciais, com alienacao fiduciaria dos imoveis como garantia adicional.</p>
+            <h4 style="margin-top: 20px; margin-bottom: 10px;">Lastro da Operação</h4>
+            <p class="text-muted">Recebiveis provenientes dos contratos de compra e venda das unidades residenciais, com alienação fiduciaria dos imóveis como garantia adicional.</p>
           </div>
 
           <div class="card">
             <h3 style="margin-bottom: 20px;">Estrutura de Garantias</h3>
             <div style="display: flex; flex-direction: column; gap: 15px;">
               <div style="padding: 15px; background: var(--bg); border-radius: var(--radius); border-left: 4px solid #0891b2;">
-                <strong>Alienacao Fiduciaria</strong>
-                <p class="text-muted" style="font-size: 0.875rem;">Imoveis dados em garantia fiduciaria ate a liquidacao total do CRI.</p>
+                <strong>Alienação Fiduciaria</strong>
+                <p class="text-muted" style="font-size: 0.875rem;">Imóveis dados em garantia fiduciaria até a liquidação total do CRI.</p>
               </div>
               <div style="padding: 15px; background: var(--bg); border-radius: var(--radius); border-left: 4px solid #22c55e;">
                 <strong>Fundo de Reserva</strong>
                 <p class="text-muted" style="font-size: 0.875rem;">Equivalente a 3 parcelas mensais para cobertura de eventuais atrasos.</p>
               </div>
               <div style="padding: 15px; background: var(--bg); border-radius: var(--radius); border-left: 4px solid #f59e0b;">
-                <strong>Coobrigacao da Incorporadora</strong>
-                <p class="text-muted" style="font-size: 0.875rem;">A incorporadora atua como coobrigada da operacao.</p>
+                <strong>Coobrigação da Incorporadora</strong>
+                <p class="text-muted" style="font-size: 0.875rem;">A incorporadora atua como coobrigada da operação.</p>
               </div>
             </div>
           </div>
@@ -81,20 +81,20 @@
           <div class="card">
             <h3 style="margin-bottom: 20px;">Documentos</h3>
             <div style="display: flex; flex-direction: column; gap: 10px;">
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
-                <span><i class="bi bi-file-earmark-pdf"></i> Termo de Securitizacao</span>
+              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);" onclick="Modals.view('Termo de Securitização'); return false;">
+                <span><i class="bi bi-file-earmark-pdf"></i> Termo de Securitização</span>
                 <span class="text-muted">1.8 MB</span>
               </a>
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
+              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);" onclick="Modals.view('Prospecto da Emissao'); return false;">
                 <span><i class="bi bi-file-earmark-pdf"></i> Prospecto da Emissao</span>
                 <span class="text-muted">3.2 MB</span>
               </a>
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
-                <span><i class="bi bi-file-earmark-pdf"></i> Laudo de Avaliacao</span>
+              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);" onclick="Modals.view('Laudo de Avaliação'); return false;">
+                <span><i class="bi bi-file-earmark-pdf"></i> Laudo de Avaliação</span>
                 <span class="text-muted">890 KB</span>
               </a>
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
-                <span><i class="bi bi-file-earmark-pdf"></i> Parecer Juridico</span>
+              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);" onclick="Modals.view('Parecer Jurídico'); return false;">
+                <span><i class="bi bi-file-earmark-pdf"></i> Parecer Jurídico</span>
                 <span class="text-muted">450 KB</span>
               </a>
             </div>
@@ -134,7 +134,7 @@
                 </tbody>
               </table>
             </div>
-            <p class="text-muted" style="font-size: 0.75rem; margin-top: 10px;">*Valores estimados. O retorno real depende da variacao do IPCA no periodo.</p>
+            <p class="text-muted" style="font-size: 0.75rem; margin-top: 10px;">*Valores estimados. O retorno real depende da variação do IPCA no período.</p>
           </div>
         </div>
 
@@ -172,7 +172,7 @@
             </div>
             <p class="text-center text-muted mb-20">45% da meta atingida</p>
 
-            <!-- Dados especificos de CRI -->
+            <!-- Dados específicos de CRI -->
             <div style="background: linear-gradient(135deg, #0891b2, #0e7490); color: white; padding: 20px; border-radius: var(--radius); margin-bottom: 20px;">
               <h4 style="margin-bottom: 15px; opacity: 0.9;">Rentabilidade</h4>
               <div style="font-size: 2rem; font-weight: bold; margin-bottom: 5px;">IPCA + 8% a.a.</div>
@@ -189,8 +189,8 @@
                 <strong>Mensal</strong>
               </div>
               <div class="flex-between mt-20">
-                <span>Amortizacao:</span>
-                <strong>A partir do 13o mes</strong>
+                <span>Amortização:</span>
+                <strong>A partir do 13o mês</strong>
               </div>
               <div class="flex-between mt-20">
                 <span>Indexador:</span>
@@ -198,14 +198,14 @@
               </div>
               <div class="flex-between mt-20">
                 <span>Garantia Principal:</span>
-                <strong>Alienacao Fiduciaria</strong>
+                <strong>Alienação Fiduciaria</strong>
               </div>
               <div class="flex-between mt-20">
-                <span>Investimento minimo:</span>
+                <span>Investimento mínimo:</span>
                 <strong>R$ 1.000</strong>
               </div>
               <div class="flex-between mt-20">
-                <span>Seu limite disponivel:</span>
+                <span>Seu limite disponível:</span>
                 <strong style="color: var(--primary);">R$ 5.000</strong>
               </div>
             </div>
@@ -213,31 +213,37 @@
             <a href="investir.html?id=4&type=cri" class="btn btn-primary btn-block btn-lg">Investir Agora</a>
 
             <div class="alert alert-info mt-20" style="font-size: 0.875rem;">
-              <strong>Renda Fixa:</strong> Este e um titulo de renda fixa com rentabilidade pre-definida. Os pagamentos ocorrem conforme o fluxo previsto.
+              <strong>Renda Fixa:</strong> Este e um título de renda fixa com rentabilidade pre-definida. Os pagamentos ocorrem conforme o fluxo previsto.
             </div>
 
             <div class="alert alert-warning mt-20" style="font-size: 0.875rem;">
-              <strong>Atencao:</strong> CRIs sao investimentos de risco. Leia atentamente o termo de securitizacao antes de investir.
+              <strong>Atenção:</strong> CRIs são investimentos de risco. Leia atentamente o termo de securitização antes de investir.
             </div>
 
             <p class="text-center text-muted" style="font-size: 0.75rem; margin-top: 15px;">
-              Prazo de desistencia: 5 dias apos o investimento (RCVM 88)
+              Prazo de desistência: 5 dias após o investimento (RCVM 88)
             </p>
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
