--- a/pages/investidor/oferta-detalhe.html
+++ b/pages/investidor/oferta-detalhe.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TechStart Inovacao - CrowdInvest</title>
+  <title>TechStart Inovação - CrowdInvest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -45,31 +45,49 @@
 
           <div class="card mt-20">
             <h3 style="margin-bottom: 20px;">Sobre a Empresa</h3>
-            <p class="text-muted">A TechStart Inovacao e uma startup de tecnologia focada em solucoes SaaS para pequenas e medias empresas. Nossa plataforma utiliza inteligencia artificial para automatizar processos de gestao, contabilidade e RH.</p>
+            <p class="text-muted">A TechStart Inovação é uma startup de tecnologia focada em soluções SaaS para pequenas e médias empresas. Nossa plataforma utiliza inteligência artificial para automatizar processos de gestão, contabilidade e RH.</p>
 
             <h4 style="margin-top: 20px; margin-bottom: 10px;">Diferenciais</h4>
             <ul style="margin-left: 20px; color: var(--text-muted);">
-              <li>IA integrada para automacao</li>
-              <li>Integracao com bancos e sistemas fiscais</li>
+              <li>IA integrada para automação</li>
+              <li>Integração com bancos e sistemas fiscais</li>
               <li>Suporte 24/7</li>
               <li>Mais de 500 clientes ativos</li>
             </ul>
           </div>
 
           <div class="card">
-            <h3 style="margin-bottom: 20px;">Documentos</h3>
+            <h3 style="margin-bottom: 20px;"><i class="bi bi-folder2-open" style="color: var(--primary);"></i> Documentos</h3>
             <div style="display: flex; flex-direction: column; gap: 10px;">
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
-                <span>[PDF] Material da Oferta</span>
-                <span class="text-muted">2.3 MB</span>
+              <a href="#" class="document-item" onclick="Modals.view('Material da Oferta'); return false;">
+                <div class="document-item-left">
+                  <div class="document-icon document-icon-pdf"><i class="bi bi-file-earmark-pdf"></i></div>
+                  <div>
+                    <span class="document-name">Material da Oferta</span>
+                    <span class="document-meta">Documento completo da oferta</span>
+                  </div>
+                </div>
+                <span class="document-size">2.3 MB</span>
               </a>
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
-                <span>[PDF] Contrato Social</span>
-                <span class="text-muted">450 KB</span>
+              <a href="#" class="document-item" onclick="Modals.view('Contrato Social'); return false;">
+                <div class="document-item-left">
+                  <div class="document-icon document-icon-contract"><i class="bi bi-file-earmark-text"></i></div>
+                  <div>
+                    <span class="document-name">Contrato Social</span>
+                    <span class="document-meta">Documento societario</span>
+                  </div>
+                </div>
+                <span class="document-size">450 KB</span>
               </a>
-              <a href="#" class="flex-between" style="padding: 12px; background: var(--bg); border-radius: var(--radius); text-decoration: none; color: var(--text);">
-                <span>[PDF] Pitch Deck</span>
-                <span class="text-muted">5.1 MB</span>
+              <a href="#" class="document-item" onclick="Modals.view('Pitch Deck'); return false;">
+                <div class="document-item-left">
+                  <div class="document-icon document-icon-presentation"><i class="bi bi-file-earmark-slides"></i></div>
+                  <div>
+                    <span class="document-name">Pitch Deck</span>
+                    <span class="document-meta">Apresentação do projeto</span>
+                  </div>
+                </div>
+                <span class="document-size">5.1 MB</span>
               </a>
             </div>
           </div>
@@ -81,7 +99,7 @@
                 <div style="width: 50px; height: 50px; background: var(--primary); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: white; font-weight: bold;">MC</div>
                 <div>
                   <strong>Maria Costa</strong>
-                  <p class="text-muted" style="font-size: 0.875rem;">CEO - 15 anos de experiencia em tecnologia</p>
+                  <p class="text-muted" style="font-size: 0.875rem;">CEO - 15 anos de experiência em tecnologia</p>
                 </div>
               </div>
               <div class="flex" style="gap: 15px; align-items: center;">
@@ -99,7 +117,7 @@
         <div class="offer-sidebar">
           <div class="card" style="position: sticky; top: 100px;">
             <span class="badge badge-info mb-20">Tecnologia</span>
-            <h2>TechStart Inovacao</h2>
+            <h2>TechStart Inovação</h2>
             <p class="text-muted">TechStart LTDA</p>
 
             <div class="kpi-grid" style="grid-template-columns: 1fr 1fr; margin: 20px 0;">
@@ -132,11 +150,11 @@
                 <strong>15%</strong>
               </div>
               <div class="flex-between mt-20">
-                <span>Investimento minimo:</span>
+                <span>Investimento mínimo:</span>
                 <strong>R$ 1.000</strong>
               </div>
               <div class="flex-between mt-20">
-                <span>Seu limite disponivel:</span>
+                <span>Seu limite disponível:</span>
                 <strong style="color: var(--primary);">R$ 5.000</strong>
               </div>
             </div>
@@ -144,27 +162,33 @@
             <a href="investir.html?id=1" class="btn btn-primary btn-block btn-lg">Investir Agora</a>
 
             <div class="alert alert-warning mt-20" style="font-size: 0.875rem;">
-              <strong>Atencao:</strong> Investimentos em startups envolvem riscos. Leia o material da oferta antes de investir.
+              <strong>Atenção:</strong> Investimentos em startups envolvem riscos. Leia o material da oferta antes de investir.
             </div>
 
             <p class="text-center text-muted" style="font-size: 0.75rem; margin-top: 15px;">
-              Prazo de desistencia: 5 dias apos o investimento (RCVM 88)
+              Prazo de desistência: 5 dias após o investimento (RCVM 88)
             </p>
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
