--- a/pages/investidor/saque-confirmacao.html
+++ b/pages/investidor/saque-confirmacao.html
@@ -10,13 +10,13 @@
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -44,7 +44,7 @@
           </div>
 
           <h2 style="margin-bottom: 10px;">Saque Solicitado!</h2>
-          <p class="text-muted" style="margin-bottom: 30px;">Sua solicitacao foi recebida e esta sendo processada.</p>
+          <p class="text-muted" style="margin-bottom: 30px;">Sua solicitação foi recebida e está sendo processada.</p>
 
           <!-- Detalhes -->
           <div style="background: var(--bg); padding: 20px; border-radius: var(--radius); text-align: left; margin-bottom: 20px;">
@@ -58,41 +58,41 @@
             </div>
             <div class="flex-between mb-15">
               <span class="text-muted">Protocolo</span>
-              <strong><code>#SAQ-2026-00142</code></strong>
+              <strong><code>#SAQ-00142</code></strong>
             </div>
             <div class="flex-between">
-              <span class="text-muted">Previsao de deposito</span>
+              <span class="text-muted">Previsão de depósito</span>
               <strong style="color: var(--primary);">20/01/2026</strong>
             </div>
           </div>
 
           <!-- Timeline -->
           <div style="text-align: left; margin-bottom: 30px;">
-            <h4 style="margin-bottom: 15px;">Status da Transferencia</h4>
+            <h4 style="margin-bottom: 15px;">Status da Transferência</h4>
             <div class="timeline" style="padding-left: 30px;">
               <div class="timeline-item">
                 <div class="timeline-dot success"></div>
                 <div class="timeline-date">19/01/2026 15:30</div>
-                <div class="timeline-title">Solicitacao recebida</div>
+                <div class="timeline-title">Solicitação recebida</div>
                 <div class="timeline-desc">Seu pedido de saque foi registrado</div>
               </div>
               <div class="timeline-item">
                 <div class="timeline-dot warning"></div>
                 <div class="timeline-date">Em processamento</div>
-                <div class="timeline-title">Aguardando processamento</div>
-                <div class="timeline-desc">Transferencia sera enviada em ate 1 dia util</div>
+                <div class="timeline-title">Águardando processamento</div>
+                <div class="timeline-desc">Transferência será enviada em até 1 dia util</div>
               </div>
               <div class="timeline-item" style="opacity: 0.5;">
                 <div class="timeline-dot"></div>
                 <div class="timeline-date">Pendente</div>
-                <div class="timeline-title">Deposito na conta</div>
-                <div class="timeline-desc">Valor creditado na conta bancaria</div>
+                <div class="timeline-title">Depósito na conta</div>
+                <div class="timeline-desc">Valor creditado na conta bancária</div>
               </div>
             </div>
           </div>
 
           <div class="alert alert-info" style="text-align: left;">
-            <i class="bi bi-envelope"></i> Voce recebera um e-mail quando o deposito for confirmado na sua conta.
+            <i class="bi bi-envelope"></i> Você receberá um e-mail quando o depósito for confirmado na sua conta.
           </div>
 
           <div class="flex gap-10 mt-20" style="justify-content: center;">
@@ -101,19 +101,20 @@
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
   <style>
     .timeline {
       position: relative;
@@ -147,7 +148,7 @@
     }
     .timeline-dot.success { background: var(--success); }
     .timeline-dot.warning { background: var(--warning); }
-    .timeline-date {
+    .timeline-daté {
       font-size: 0.75rem;
       color: var(--text-muted);
     }
@@ -160,5 +161,10 @@
       color: var(--text-muted);
     }
   </style>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
