--- a/pages/investidor/saque.html
+++ b/pages/investidor/saque.html
@@ -10,13 +10,13 @@
 <body class="theme-investidor">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -26,7 +26,7 @@
         <li><a href="extrato.html"><i class="bi bi-list-ul"></i> Extrato</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -41,16 +41,16 @@
           <a href="carteira.html" class="btn btn-outline btn-sm"><i class="bi bi-arrow-left"></i></a>
           <div>
             <h1 class="page-title">Solicitar Saque</h1>
-            <p class="text-muted">Transfira seu saldo disponivel para sua conta bancaria</p>
+            <p class="text-muted">Transfira seu saldo disponível para sua conta bancária</p>
           </div>
         </div>
       </div>
 
-      <!-- Saldo Disponivel -->
+      <!-- Saldo Disponível -->
       <div class="card" style="background: linear-gradient(135deg, var(--primary-dark), var(--primary-dark)); color: white; margin-bottom: 30px;">
         <div class="flex-between" style="align-items: center;">
           <div>
-            <p style="opacity: 0.8;">Saldo Disponivel para Saque</p>
+            <p style="opacity: 0.8;">Saldo Disponível para Saque</p>
             <div style="font-size: 2.5rem; font-weight: bold;">R$ 2.350,00</div>
           </div>
           <i class="bi bi-wallet2" style="font-size: 4rem; opacity: 0.3;"></i>
@@ -58,7 +58,7 @@
       </div>
 
       <div class="grid-2" style="gap: 30px;">
-        <!-- Formulario de Saque -->
+        <!-- Formulário de Saque -->
         <div class="card">
           <div class="card-header">
             <h3 class="card-title"><i class="bi bi-cash-stack"></i> Valor do Saque</h3>
@@ -79,13 +79,13 @@
             </div>
 
             <div class="alert alert-info" style="font-size: 0.875rem;">
-              <i class="bi bi-info-circle"></i> O valor minimo para saque e <strong>R$ 50,00</strong>. O saque sera processado em ate 1 dia util.
+              <i class="bi bi-info-circle"></i> O valor mínimo para saque e <strong>R$ 50,00</strong>. O saque será processado em até 1 dia util.
             </div>
 
             <hr style="margin: 20px 0; border: none; border-top: 1px solid var(--border);">
 
             <div class="card-header" style="padding: 0; border: none;">
-              <h3 class="card-title"><i class="bi bi-bank"></i> Conta para Deposito</h3>
+              <h3 class="card-title"><i class="bi bi-bank"></i> Conta para Depósito</h3>
             </div>
 
             <!-- Conta Cadastrada -->
@@ -120,12 +120,12 @@
           </form>
         </div>
 
-        <!-- Resumo e Historico -->
+        <!-- Resumo e Histórico -->
         <div>
           <!-- Resumo -->
           <div class="card mb-20">
             <div class="card-header">
-              <h3 class="card-title"><i class="bi bi-receipt"></i> Resumo da Operacao</h3>
+              <h3 class="card-title"><i class="bi bi-receipt"></i> Resumo da Operação</h3>
             </div>
             <div style="display: flex; flex-direction: column; gap: 12px;">
               <div class="flex-between">
@@ -133,7 +133,7 @@
                 <strong>R$ 2.350,00</strong>
               </div>
               <div class="flex-between">
-                <span>Taxa de transferencia</span>
+                <span>Taxa de transferência</span>
                 <strong style="color: var(--success);">R$ 0,00</strong>
               </div>
               <hr style="margin: 5px 0; border: none; border-top: 1px solid var(--border);">
@@ -143,14 +143,14 @@
               </div>
             </div>
             <div class="alert alert-success mt-15" style="font-size: 0.875rem;">
-              <i class="bi bi-clock"></i> Previsao de deposito: <strong>Amanha, 20/01/2026</strong>
+              <i class="bi bi-clock"></i> Previsão de depósito: <strong>Amanha, 20/01/2026</strong>
             </div>
           </div>
 
-          <!-- Ultimos Saques -->
+          <!-- Últimos Saques -->
           <div class="card">
             <div class="card-header">
-              <h3 class="card-title"><i class="bi bi-clock-history"></i> Ultimos Saques</h3>
+              <h3 class="card-title"><i class="bi bi-clock-history"></i> Últimos Saques</h3>
             </div>
             <div style="display: flex; flex-direction: column; gap: 12px;">
               <div class="flex-between" style="padding: 10px; background: var(--bg); border-radius: var(--radius);">
@@ -158,34 +158,34 @@
                   <strong>R$ 1.500,00</strong>
                   <p class="text-muted" style="font-size: 0.75rem;">10/01/2026</p>
                 </div>
-                <span class="badge badge-success"><i class="bi bi-check"></i> Concluido</span>
+                <span class="badge badge-success"><i class="bi bi-check"></i> Concluído</span>
               </div>
               <div class="flex-between" style="padding: 10px; background: var(--bg); border-radius: var(--radius);">
                 <div>
                   <strong>R$ 800,00</strong>
                   <p class="text-muted" style="font-size: 0.75rem;">20/12/2024</p>
                 </div>
-                <span class="badge badge-success"><i class="bi bi-check"></i> Concluido</span>
+                <span class="badge badge-success"><i class="bi bi-check"></i> Concluído</span>
               </div>
               <div class="flex-between" style="padding: 10px; background: var(--bg); border-radius: var(--radius);">
                 <div>
                   <strong>R$ 2.000,00</strong>
                   <p class="text-muted" style="font-size: 0.75rem;">05/12/2024</p>
                 </div>
-                <span class="badge badge-success"><i class="bi bi-check"></i> Concluido</span>
+                <span class="badge badge-success"><i class="bi bi-check"></i> Concluído</span>
               </div>
             </div>
             <a href="extrato.html" class="btn btn-outline btn-sm mt-15" style="width: 100%;">Ver Extrato Completo</a>
           </div>
         </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
@@ -196,8 +196,8 @@
     <div class="modal text-center" style="max-width: 400px;">
       <div style="padding: 30px;">
         <i class="bi bi-bank" style="font-size: 3rem; color: var(--primary);"></i>
-        <h3 style="margin: 15px 0;">Editar Conta Bancaria</h3>
-        <p class="text-muted">Funcionalidade de edicao de conta bancaria.</p>
+        <h3 style="margin: 15px 0;">Editar Conta Bancária</h3>
+        <p class="text-muted">Funcionalidade de edição de conta bancária.</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('editarContaModal')">OK</button>
       </div>
     </div>
@@ -208,7 +208,7 @@
       <div style="padding: 30px;">
         <i class="bi bi-question-circle" style="font-size: 3rem; color: var(--warning);"></i>
         <h3 style="margin: 15px 0;">Confirmar Saque</h3>
-        <p class="text-muted">Confirma a solicitacao de saque de R$ 2.350,00 para a conta cadastrada?</p>
+        <p class="text-muted">Confirma a solicitação de saque de R$ 2.350,00 para a conta cadastrada?</p>
         <div class="flex gap-10 mt-20" style="justify-content: center;">
           <button class="btn btn-outline" onclick="hideModal('confirmarSaqueModal')">Cancelar</button>
           <button class="btn btn-primary" onclick="executarSaque()">Confirmar</button>
@@ -222,13 +222,14 @@
       <div style="padding: 30px;">
         <i class="bi bi-check-circle" style="font-size: 3rem; color: var(--success);"></i>
         <h3 style="margin: 15px 0;">Saque Solicitado</h3>
-        <p class="text-muted">Saque solicitado com sucesso! Voce sera redirecionado para a confirmacao.</p>
+        <p class="text-muted">Saque solicitado com sucesso! Você será redirecionado para a confirmação.</p>
         <button class="btn btn-primary mt-20" onclick="hideModal('saqueSucessoModal'); window.location.href = 'saque-confirmacao.html';">OK</button>
       </div>
     </div>
   </div>
 
   <script src="../../js/app.js"></script>
+  
   <script>
     function showModal(modalId) {
       document.getElementById(modalId).style.display = 'flex';
@@ -251,5 +252,10 @@
       showModal('saqueSucessoModal');
     }
   </script>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
