--- a/pages/parceiro/clientes.html
+++ b/pages/parceiro/clientes.html
@@ -10,13 +10,13 @@
 <body class="theme-parceiro">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar sidebar-green">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
         <span class="badge" style="background: white; color: #059669; margin-left: 10px;">Parceiro</span>
       </div>
       <!-- Profile Mode Card - Elegante -->
@@ -39,15 +39,18 @@
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
-        <li><a href="minhas-ofertas.html"><i class="bi bi-megaphone"></i> <span class="menu-text-emissor">Minhas Ofertas</span><span class="menu-text-distribuidor" style="display:none;">Ofertas Disponiveis</span></a></li>
+        <li class="hide-on-originador"><a href="minhas-ofertas.html"><i class="bi bi-megaphone"></i> <span class="menu-text-emissor">Minhas Ofertas</span><span class="menu-text-distribuidor" style="display:none;">Ofertas Disponíveis</span></a></li>
         <li><a href="comunicados.html"><i class="bi bi-chat-square-text"></i> Comunicados</a></li>
-        <li><a href="clientes.html" class="active"><i class="bi bi-people"></i> <span class="menu-text-emissor">Investidores</span><span class="menu-text-distribuidor" style="display:none;">Meus Clientes</span></a></li>
-        <li><a href="investimentos.html"><i class="bi bi-wallet2"></i> Investimentos</a></li>
-        <li class="distribuidor-content" style="display:none;"><a href="comissoes.html"><i class="bi bi-cash-stack"></i> Comissoes</a></li>
+        <li class="hide-on-originador"><a href="clientes.html" class="active"><i class="bi bi-people"></i> <span class="menu-text-emissor">Investidores</span><span class="menu-text-distribuidor" style="display:none;">Meus Clientes</span></a></li>
+        <li class="hide-on-originador"><a href="investimentos.html"><i class="bi bi-wallet2"></i> Investimentos</a></li>
+        <li class="distribuidor-content" style="display:none;"><a href="comissoes.html"><i class="bi bi-cash-stack"></i> Comissões</a></li>
+        <li class="originador-content" style="display:none;"><a href="meus-emissores.html"><i class="bi bi-building"></i> Meus Emissores</a></li>
+        <li class="originador-content" style="display:none;"><a href="minhas-ofertas.html"><i class="bi bi-megaphone"></i> Ofertas dos Emissores</a></li>
+        <li class="originador-content" style="display:none;"><a href="comissoes-originador.html"><i class="bi bi-cash-stack"></i> Comissões</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatorios</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatórios</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../parceiro-login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -62,19 +65,19 @@
           <h1 class="page-title">Clientes</h1>
           <p class="text-muted">127 clientes na sua oferta</p>
         </div>
-        <div class="flex gap-10">
+        <div class="header-user-info">
           <div class="dropdown" style="position: relative;">
             <button class="btn btn-outline" onclick="toggleDropdown('exportDropdown')">
               <i class="bi bi-download"></i> Exportar <i class="bi bi-chevron-down"></i>
             </button>
             <div id="exportDropdown" class="dropdown-menu" style="display: none; position: absolute; right: 0; top: 100%; background: white; border: 1px solid var(--border); border-radius: var(--radius); box-shadow: 0 4px 12px rgba(0,0,0,0.1); min-width: 160px; z-index: 100;">
-              <a href="#" onclick="showModal('exportExcelModal'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
+              <a href="#" onclick="Modals.export('excel', 'clientes'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
                 <i class="bi bi-file-earmark-excel" style="color: #217346;"></i> Excel (.xlsx)
               </a>
-              <a href="#" onclick="showModal('exportCsvModal'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
+              <a href="#" onclick="Modals.export('csv', 'clientes'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
                 <i class="bi bi-filetype-csv" style="color: #6c757d;"></i> CSV (.csv)
               </a>
-              <a href="#" onclick="showModal('exportPdfModal'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
+              <a href="#" onclick="Modals.export('pdf', 'clientes'); return false;" style="display: flex; align-items: center; gap: 10px; padding: 10px 15px; text-decoration: none; color: var(--text);">
                 <i class="bi bi-file-earmark-pdf" style="color: #dc3545;"></i> PDF (.pdf)
               </a>
             </div>
@@ -90,16 +93,16 @@
             <select class="form-input">
               <option>Todos</option>
               <option>Confirmados</option>
-              <option>Em desistencia</option>
+              <option>Em desistência</option>
               <option>Desistentes</option>
             </select>
           </div>
           <div class="form-group" style="margin-bottom: 0; flex: 1; min-width: 150px;">
-            <label class="form-label">Periodo</label>
+            <label class="form-label">Período</label>
             <select class="form-input">
-              <option>Todo o periodo</option>
-              <option>Ultima semana</option>
-              <option>Ultimo mes</option>
+              <option>Todo o período</option>
+              <option>Última semana</option>
+              <option>Último mês</option>
             </select>
           </div>
           <div class="form-group" style="margin-bottom: 0; flex: 2; min-width: 200px;">
@@ -120,7 +123,7 @@
           <div class="kpi-value" style="color: var(--success);">118</div>
         </div>
         <div class="kpi-card">
-          <div class="kpi-label">Em Desistencia</div>
+          <div class="kpi-label">Em Desistência</div>
           <div class="kpi-value" style="color: var(--warning);">6</div>
         </div>
         <div class="kpi-card">
@@ -131,7 +134,11 @@
 
       <!-- Alert for withdrawal period -->
       <div class="alert alert-warning">
-        <strong>Atencao:</strong> 6 clientes estao no periodo de desistencia (5 dias uteis). O valor de R$ 15.000 pode ser cancelado.
+        <i class="bi bi-exclamation-triangle"></i>
+        <div>
+          <strong>Atenção:</strong><br>
+          6 clientes estão no período de desistência (5 dias úteis). O valor de R$ 15.000 pode ser cancelado.
+        </div>
       </div>
 
       <!-- Investors Table -->
@@ -145,7 +152,7 @@
                 <th>Equity</th>
                 <th>Data</th>
                 <th>Status</th>
-                <th>Desistencia ate</th>
+                <th>Desistência ate</th>
               </tr>
             </thead>
             <tbody>
@@ -157,8 +164,8 @@
                 <td data-label="Valor">R$ 5.000</td>
                 <td data-label="Equity">1.5%</td>
                 <td data-label="Data">19/01/2026</td>
-                <td data-label="Status"><span class="badge badge-warning">Em desistencia</span></td>
-                <td data-label="Desistencia ate"><strong style="color: var(--warning);">24/01/2026</strong></td>
+                <td data-label="Status"><span class="badge badge-warning">Em desistência</span></td>
+                <td data-label="Desistência ate"><strong style="color: var(--warning);">24/01/2026</strong></td>
               </tr>
               <tr style="background: #fef3c7;">
                 <td data-label="Cliente">
@@ -168,8 +175,8 @@
                 <td data-label="Valor">R$ 2.000</td>
                 <td data-label="Equity">0.6%</td>
                 <td data-label="Data">18/01/2026</td>
-                <td data-label="Status"><span class="badge badge-warning">Em desistencia</span></td>
-                <td data-label="Desistencia ate"><strong style="color: var(--warning);">23/01/2026</strong></td>
+                <td data-label="Status"><span class="badge badge-warning">Em desistência</span></td>
+                <td data-label="Desistência ate"><strong style="color: var(--warning);">23/01/2026</strong></td>
               </tr>
               <tr style="background: #fef3c7;">
                 <td data-label="Cliente">
@@ -179,8 +186,8 @@
                 <td data-label="Valor">R$ 3.000</td>
                 <td data-label="Equity">0.9%</td>
                 <td data-label="Data">17/01/2026</td>
-                <td data-label="Status"><span class="badge badge-warning">Em desistencia</span></td>
-                <td data-label="Desistencia ate"><strong style="color: var(--warning);">22/01/2026</strong></td>
+                <td data-label="Status"><span class="badge badge-warning">Em desistência</span></td>
+                <td data-label="Desistência ate"><strong style="color: var(--warning);">22/01/2026</strong></td>
               </tr>
               <tr>
                 <td data-label="Cliente">
@@ -191,7 +198,7 @@
                 <td data-label="Equity">3.0%</td>
                 <td data-label="Data">15/01/2026</td>
                 <td data-label="Status"><span class="badge badge-success">Confirmado</span></td>
-                <td data-label="Desistencia ate"><span class="text-muted">Expirado</span></td>
+                <td data-label="Desistência ate"><span class="text-muted">Expirado</span></td>
               </tr>
               <tr>
                 <td data-label="Cliente">
@@ -202,7 +209,7 @@
                 <td data-label="Equity">0.6%</td>
                 <td data-label="Data">14/01/2026</td>
                 <td data-label="Status"><span class="badge badge-success">Confirmado</span></td>
-                <td data-label="Desistencia ate"><span class="text-muted">Expirado</span></td>
+                <td data-label="Desistência ate"><span class="text-muted">Expirado</span></td>
               </tr>
               <tr>
                 <td data-label="Cliente">
@@ -213,7 +220,7 @@
                 <td data-label="Equity">2.25%</td>
                 <td data-label="Data">12/01/2026</td>
                 <td data-label="Status"><span class="badge badge-success">Confirmado</span></td>
-                <td data-label="Desistencia ate"><span class="text-muted">Expirado</span></td>
+                <td data-label="Desistência ate"><span class="text-muted">Expirado</span></td>
               </tr>
               <tr style="background: #fee2e2;">
                 <td data-label="Cliente">
@@ -224,13 +231,13 @@
                 <td data-label="Equity">-</td>
                 <td data-label="Data">08/01/2026</td>
                 <td data-label="Status"><span class="badge badge-danger">Desistiu</span></td>
-                <td data-label="Desistencia ate"><span class="text-muted">13/01/2026</span></td>
+                <td data-label="Desistência ate"><span class="text-muted">13/01/2026</span></td>
               </tr>
             </tbody>
           </table>
         </div>
 
-        <!-- Pagination -->
+        <!-- Págination -->
         <div class="pagination-wrapper">
           <span class="pagination-info">Mostrando <strong>1-7</strong> de <strong>127</strong></span>
           <nav class="pagination-minimal">
@@ -245,55 +252,26 @@
 
       <!-- Info -->
       <div class="alert alert-info mt-20">
-        <strong>RCVM 88/2022:</strong> Os dados completos dos clientes so serao liberados apos o encerramento da oferta. Durante a captacao, apenas dados parciais sao exibidos para proteger a privacidade.
+        <i class="bi bi-info-circle"></i>
+        <div>
+          <strong>RCVM 88/2022:</strong><br>
+          Os dados completos dos clientes so serao liberados após o encerramento da oferta. Durante a captação, apenas dados parciais são exibidos para proteger a privacidade.
+        </div>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
-  <!-- Modals -->
-  <div class="modal-overlay" id="exportExcelModal" style="display: none;">
-    <div class="modal text-center" style="max-width: 400px;">
-      <div style="padding: 30px;">
-        <i class="bi bi-file-earmark-excel" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Exportando Excel</h3>
-        <p class="text-muted">O arquivo Excel esta sendo gerado para download.</p>
-        <button class="btn btn-primary mt-20" onclick="hideModal('exportExcelModal')">OK</button>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal-overlay" id="exportCsvModal" style="display: none;">
-    <div class="modal text-center" style="max-width: 400px;">
-      <div style="padding: 30px;">
-        <i class="bi bi-filetype-csv" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Exportando CSV</h3>
-        <p class="text-muted">O arquivo CSV esta sendo gerado para download.</p>
-        <button class="btn btn-primary mt-20" onclick="hideModal('exportCsvModal')">OK</button>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal-overlay" id="exportPdfModal" style="display: none;">
-    <div class="modal text-center" style="max-width: 400px;">
-      <div style="padding: 30px;">
-        <i class="bi bi-file-earmark-pdf" style="font-size: 3rem; color: var(--success);"></i>
-        <h3 style="margin: 15px 0;">Exportando PDF</h3>
-        <p class="text-muted">O arquivo PDF esta sendo gerado para download.</p>
-        <button class="btn btn-primary mt-20" onclick="hideModal('exportPdfModal')">OK</button>
-      </div>
-    </div>
-  </div>
-
   <script src="../../js/app.js"></script>
+  
 
 <!-- Modal Selecionar Perfil -->
 <div class="modal-overlay" id="selecionarPerfilModal" style="display: none;">
@@ -303,7 +281,7 @@
       <button class="modal-close" onclick="hideModal('selecionarPerfilModal')">&times;</button>
     </div>
     <p class="text-muted mb-20">Escolha como deseja visualizar e operar na plataforma.</p>
-    <!-- Opcao Emissor -->
+    <!-- Opção Emissor -->
     <div class="profile-option emissor active" id="optionEmissor" onclick="selectProfileOption('emissor')">
       <div class="profile-option-icon emissor"><i class="bi bi-broadcast"></i></div>
       <div class="profile-option-content">
@@ -312,7 +290,7 @@
       </div>
       <div class="profile-option-check"><i class="bi bi-check"></i></div>
     </div>
-    <!-- Opcao Distribuidor -->
+    <!-- Opção Distribuidor -->
     <div class="profile-option distribuidor" id="optionDistribuidor" onclick="selectProfileOption('distribuidor')">
       <div class="profile-option-icon distribuidor"><i class="bi bi-diagram-3"></i></div>
       <div class="profile-option-content">
@@ -321,12 +299,28 @@
       </div>
       <div class="profile-option-check"><i class="bi bi-check"></i></div>
     </div>
+    
+    <!-- Opcao Originador -->
+    <div class="profile-option originador" id="optionOriginador" onclick="selectProfileOption('originador')">
+      <div class="profile-option-icon originador"><i class="bi bi-lightning-charge"></i></div>
+      <div class="profile-option-content">
+        <div class="profile-option-title">Originador</div>
+        <p class="profile-option-desc">Traga novas empresas para captar recursos.</p>
+      </div>
+      <div class="profile-option-check"><i class="bi bi-check"></i></div>
+    </div>
+    
     <div class="flex gap-10 mt-20">
       <button class="btn btn-outline" onclick="hideModal('selecionarPerfilModal')" style="flex: 1;">Cancelar</button>
       <button class="btn btn-primary" onclick="confirmarPerfil()" style="flex: 1;"><i class="bi bi-check-lg"></i> Confirmar</button>
     </div>
   </div>
 </div>
+
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
 
 </body>
 </html>
