--- a/pages/parceiro/investimento-detalhe.html
+++ b/pages/parceiro/investimento-detalhe.html
@@ -10,13 +10,13 @@
 <body class="theme-parceiro">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar sidebar-green">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
         <span class="badge" style="background: white; color: #059669; margin-left: 10px;">Parceiro</span>
       </div>
       <!-- Profile Switcher na Sidebar -->
@@ -33,14 +33,16 @@
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
-        <li><a href="minhas-ofertas.html"><i class="bi bi-megaphone"></i> Minhas Ofertas</a></li>
+        <li class="hide-on-originador"><a href="minhas-ofertas.html"><i class="bi bi-megaphone"></i> Minhas Ofertas</a></li>
         <li><a href="comunicados.html"><i class="bi bi-chat-square-text"></i> Comunicados</a></li>
-        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
-        <li><a href="investimentos.html" class="active"><i class="bi bi-wallet2"></i> Investimentos</a></li>
+        <li class="hide-on-originador"><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
+        <li class="hide-on-originador"><a href="investimentos.html" class="active"><i class="bi bi-wallet2"></i> Investimentos</a></li>
+        <li class="originador-content" style="display:none;"><a href="meus-emissores.html"><i class="bi bi-building"></i> Meus Emissores</a></li>
+        <li class="originador-content" style="display:none;"><a href="comissoes-originador.html"><i class="bi bi-cash-stack"></i> Comissões</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatorios</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatórios</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../parceiro-login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -55,20 +57,20 @@
           <a href="investimentos.html" class="btn btn-outline btn-sm"><i class="bi bi-arrow-left"></i></a>
           <div>
             <div class="flex gap-10" style="align-items: center;">
-              <h1 class="page-title">Investimento #INV-2026-0127</h1>
-              <span class="badge badge-info"><i class="bi bi-hourglass-split"></i> Em Desistencia</span>
+              <h1 class="page-title">Investimento #INV-0127</h1>
+              <span class="badge badge-info"><i class="bi bi-hourglass-split"></i> Em Desistência</span>
             </div>
             <p class="text-muted">Realizado em 19/01/2026 as 10:22</p>
           </div>
         </div>
       </div>
 
-      <!-- Alert Desistencia -->
+      <!-- Alert Desistência -->
       <div class="alert alert-warning mb-20">
         <div class="flex-between" style="align-items: center;">
           <div>
-            <i class="bi bi-exclamation-triangle"></i> <strong>Periodo de Desistencia Ativo</strong>
-            <p style="margin-top: 5px;">O investidor pode exercer o direito de desistencia ate <strong>24/01/2026</strong> (5 dias uteis).</p>
+            <i class="bi bi-exclamation-triangle"></i> <strong>Período de Desistência Ativo</strong>
+            <p style="margin-top: 5px;">O investidor pode exercer o direito de desistência até <strong>24/01/2026</strong> (5 dias úteis).</p>
           </div>
           <div class="text-right">
             <div style="font-size: 2rem; font-weight: bold; color: var(--warning);">3</div>
@@ -89,7 +91,7 @@
               <p><strong style="font-size: 1.5rem; color: var(--success);">R$ 5.000,00</strong></p>
             </div>
             <div>
-              <p class="text-muted" style="font-size: 0.75rem;">Participacao (Equity)</p>
+              <p class="text-muted" style="font-size: 0.75rem;">Participação (Equity)</p>
               <p><strong style="font-size: 1.5rem; color: var(--primary);">1.5%</strong></p>
             </div>
             <div>
@@ -101,12 +103,12 @@
               <p><strong>19/01/2026 10:25</strong></p>
             </div>
             <div>
-              <p class="text-muted" style="font-size: 0.75rem;">ID Transacao PIX</p>
+              <p class="text-muted" style="font-size: 0.75rem;">ID Transação PIX</p>
               <p><code>E123456789202601191025</code></p>
             </div>
             <div>
               <p class="text-muted" style="font-size: 0.75rem;">Status</p>
-              <p><span class="badge badge-info"><i class="bi bi-hourglass-split"></i> Em Desistencia</span></p>
+              <p><span class="badge badge-info"><i class="bi bi-hourglass-split"></i> Em Desistência</span></p>
             </div>
           </div>
         </div>
@@ -131,11 +133,11 @@
             </div>
             <div>
               <p class="text-muted" style="font-size: 0.75rem;">Cidade/UF</p>
-              <p><strong>Sao Paulo/SP</strong></p>
+              <p><strong>São Paulo/SP</strong></p>
             </div>
           </div>
           <div class="alert alert-info mt-15" style="padding: 10px; font-size: 0.875rem;">
-            <i class="bi bi-info-circle"></i> Dados completos do investidor serao liberados apos o encerramento da oferta (RCVM 88/2022).
+            <i class="bi bi-info-circle"></i> Dados completos do investidor serao liberados após o encerramento da oferta (RCVM 88/2022).
           </div>
           <a href="clientes.html" class="btn btn-outline btn-sm mt-10"><i class="bi bi-person"></i> Ver Perfil do Investidor</a>
         </div>
@@ -144,7 +146,7 @@
       <!-- Timeline do Investimento -->
       <div class="card mt-20">
         <div class="card-header">
-          <h3 class="card-title"><i class="bi bi-clock-history"></i> Historico da Transacao</h3>
+          <h3 class="card-title"><i class="bi bi-clock-history"></i> Histórico da Transação</h3>
         </div>
         <div class="timeline" style="padding-left: 30px;">
           <div class="timeline-item">
@@ -157,7 +159,7 @@
             <div class="timeline-dot"></div>
             <div class="timeline-date">19/01/2026 10:23</div>
             <div class="timeline-title">QR Code PIX gerado</div>
-            <div class="timeline-desc">Codigo PIX gerado com validade de 30 minutos</div>
+            <div class="timeline-desc">Código PIX gerado com validade de 30 minutos</div>
           </div>
           <div class="timeline-item">
             <div class="timeline-dot success"></div>
@@ -168,16 +170,16 @@
           <div class="timeline-item">
             <div class="timeline-dot warning"></div>
             <div class="timeline-date">19/01/2026 10:25</div>
-            <div class="timeline-title">Periodo de desistencia iniciado</div>
-            <div class="timeline-desc">Investidor pode desistir ate 24/01/2026 (5 dias uteis)</div>
+            <div class="timeline-title">Período de desistência iniciado</div>
+            <div class="timeline-desc">Investidor pode desistir até 24/01/2026 (5 dias úteis)</div>
           </div>
         </div>
       </div>
 
-      <!-- Proximos Passos -->
+      <!-- Próximos Passos -->
       <div class="card mt-20">
         <div class="card-header">
-          <h3 class="card-title"><i class="bi bi-signpost-2"></i> Proximos Passos</h3>
+          <h3 class="card-title"><i class="bi bi-signpost-2"></i> Próximos Passos</h3>
         </div>
         <div style="display: flex; flex-direction: column; gap: 15px;">
           <div class="flex gap-15" style="padding: 15px; background: var(--bg); border-radius: var(--radius); align-items: center;">
@@ -185,8 +187,8 @@
               <i class="bi bi-hourglass-split"></i>
             </div>
             <div style="flex: 1;">
-              <strong>Aguardar periodo de desistencia</strong>
-              <p class="text-muted" style="font-size: 0.875rem;">Se o investidor nao desistir ate 24/01/2026, o investimento sera confirmado automaticamente.</p>
+              <strong>Águardar período de desistência</strong>
+              <p class="text-muted" style="font-size: 0.875rem;">Se o investidor não desistir até 24/01/2026, o investimento será confirmado automaticamente.</p>
             </div>
             <span class="badge badge-warning">3 dias</span>
           </div>
@@ -196,7 +198,7 @@
             </div>
             <div style="flex: 1;">
               <strong>Investimento confirmado</strong>
-              <p class="text-muted" style="font-size: 0.875rem;">Apos confirmacao, o investidor recebera o contrato assinado digitalmente.</p>
+              <p class="text-muted" style="font-size: 0.875rem;">Após confirmação, o investidor receberá o contrato assinado digitalmente.</p>
             </div>
             <span class="badge badge-secondary">Pendente</span>
           </div>
@@ -205,26 +207,26 @@
               <i class="bi bi-file-earmark-check"></i>
             </div>
             <div style="flex: 1;">
-              <strong>Atualizacao do cap table</strong>
-              <p class="text-muted" style="font-size: 0.875rem;">O investidor sera adicionado ao quadro societario com 1.5% de participacao.</p>
+              <strong>Atualização do cap table</strong>
+              <p class="text-muted" style="font-size: 0.875rem;">O investidor será adicionado ao quadro societario com 1.5% de participação.</p>
             </div>
             <span class="badge badge-secondary">Pendente</span>
           </div>
         </div>
       </div>
 
-      <!-- Acoes -->
+      <!-- Ações -->
       <div class="flex gap-10 mt-20">
         <a href="investimentos.html" class="btn btn-outline"><i class="bi bi-arrow-left"></i> Voltar</a>
         <button class="btn btn-outline" onclick="showModal('enviarMensagemModal')"><i class="bi bi-envelope"></i> Enviar Mensagem</button>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
@@ -243,6 +245,7 @@
   </div>
 
   <script src="../../js/app.js"></script>
+  
   <style>
     .timeline {
       position: relative;
@@ -277,7 +280,7 @@
     .timeline-dot.success { background: var(--success); }
     .timeline-dot.warning { background: var(--warning); }
     .timeline-dot.info { background: var(--primary); }
-    .timeline-date {
+    .timeline-daté {
       font-size: 0.75rem;
       color: var(--text-muted);
     }
@@ -290,5 +293,10 @@
       color: var(--text-muted);
     }
   </style>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
