--- a/pages/parceiro/nova-oferta-step2.html
+++ b/pages/parceiro/nova-oferta-step2.html
@@ -10,37 +10,46 @@
 <body class="theme-parceiro">
   <div class="dashboard">
     <div class="mobile-header">
-      <a href="../../index.html" class="logo">CrowdInvest</a>
+      <a href="dashboard.html" class="logo">Alba Invest</a>
     </div>
 
     <!-- Sidebar -->
     <aside class="sidebar sidebar-green">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo">CrowdInvest</a>
+        <a href="dashboard.html" class="logo">Alba Invest</a>
         <span class="badge" style="background: white; color: #059669; margin-left: 10px;">Parceiro</span>
       </div>
-      <!-- Profile Switcher na Sidebar -->
-      <div class="sidebar-profile-switcher">
-        <div class="switcher-label">Visualizar como:</div>
-        <div class="switcher-buttons">
-          <button class="switcher-btn active" onclick="switchProfile('emissor', this)">
+      <!-- Profile Mode Card -->
+      <div class="profile-mode-card" id="profileModeCard">
+        <div class="profile-mode-current">
+          <div class="profile-mode-icon emissor" id="profileIcon">
+            <i class="bi bi-broadcast"></i>
+          </div>
+          <div class="profile-mode-info">
+            <div class="profile-mode-label">Visualizando como</div>
+            <div class="profile-mode-name" id="profileName">Emissor</div>
+          </div>
+          <span class="profile-mode-tag emissor" id="profileTag">
             <i class="bi bi-broadcast"></i> Emissor
-          </button>
-          <button class="switcher-btn" onclick="switchProfile('distribuidor', this)">
-            <i class="bi bi-diagram-3"></i> Distrib.
-          </button>
+          </span>
         </div>
+        <button class="profile-mode-switch-btn" onclick="showModal('selecionarPerfilModal')">
+          <i class="bi bi-arrow-left-right"></i> Trocar modo de acesso
+        </button>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
-        <li><a href="minhas-ofertas.html" class="active"><i class="bi bi-megaphone"></i> Minhas Ofertas</a></li>
+        <li class="hide-on-originador"><a href="minhas-ofertas.html" class="active"><i class="bi bi-megaphone"></i> <span class="menu-text-emissor">Minhas Ofertas</span><span class="menu-text-distribuidor" style="display:none;">Ofertas Disponíveis</span></a></li>
         <li><a href="comunicados.html"><i class="bi bi-chat-square-text"></i> Comunicados</a></li>
-        <li><a href="clientes.html"><i class="bi bi-people"></i> Clientes</a></li>
-        <li><a href="investimentos.html"><i class="bi bi-wallet2"></i> Investimentos</a></li>
+        <li class="hide-on-originador"><a href="clientes.html"><i class="bi bi-people"></i> <span class="menu-text-emissor">Investidores</span><span class="menu-text-distribuidor" style="display:none;">Meus Clientes</span></a></li>
+        <li class="hide-on-originador"><a href="investimentos.html"><i class="bi bi-wallet2"></i> Investimentos</a></li>
+        <li class="distribuidor-content" style="display:none;"><a href="comissoes.html"><i class="bi bi-cash-stack"></i> Comissões</a></li>
+        <li class="originador-content" style="display:none;"><a href="meus-emissores.html"><i class="bi bi-building"></i> Meus Emissores</a></li>
+        <li class="originador-content" style="display:none;"><a href="comissoes-originador.html"><i class="bi bi-cash-stack"></i> Comissões</a></li>
         <li><a href="documentos.html"><i class="bi bi-folder"></i> Documentos</a></li>
         <li><a href="imposto-renda.html"><i class="bi bi-file-earmark-text"></i> Imposto de Renda</a></li>
-        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatorios</a></li>
-        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configuracoes</a></li>
+        <li><a href="relatorios.html"><i class="bi bi-bar-chart"></i> Relatórios</a></li>
+        <li><a href="configuracoes.html"><i class="bi bi-gear"></i> Configurações</a></li>
         <li><a href="../parceiro-login.html"><i class="bi bi-box-arrow-left"></i> Sair</a></li>
       </ul>
     </aside>
@@ -54,7 +63,7 @@
         <div class="flex gap-10" style="align-items: center;">
           <a href="nova-oferta.html" class="btn btn-outline btn-sm"><i class="bi bi-arrow-left"></i></a>
           <div>
-            <h1 class="page-title">Nova Oferta de Captacao</h1>
+            <h1 class="page-title">Nova Oferta de Captação</h1>
             <p class="text-muted">Defina os detalhes financeiros da oferta</p>
           </div>
         </div>
@@ -76,13 +85,17 @@
         </div>
         <div class="step">
           <div class="step-number">4</div>
-          <div class="step-label">Revisao</div>
+          <div class="step-label">Revisão</div>
         </div>
       </div>
 
       <!-- Alert Limite RCVM -->
       <div class="alert alert-warning mb-20">
-        <i class="bi bi-exclamation-triangle"></i> <strong>Limite RCVM 88:</strong> O valor maximo de captacao permitido e de R$ 15.000.000,00 por ano. Sociedades Anonimas podem captar ate R$ 10.000.000,00.
+        <i class="bi bi-exclamation-triangle"></i>
+        <div>
+          <strong>Limite RCVM 88:</strong><br>
+          O valor maximo de captacao permitido e de R$ 15.000.000,00 por ano. Sociedades Anonimas podem captar ate R$ 10.000.000,00.
+        </div>
       </div>
 
       <!-- Form Step 2 -->
@@ -94,36 +107,36 @@
         <form id="novaOfertaStep2">
           <div class="grid-2" style="gap: 20px;">
             <div class="form-group">
-              <label class="form-label">Meta de Captacao (R$) *</label>
+              <label class="form-label">Meta de Captação (R$) *</label>
               <input type="text" class="form-input" value="500.000,00" required placeholder="Ex: 500.000,00">
               <small class="text-muted">Valor total que deseja captar</small>
             </div>
             <div class="form-group">
               <label class="form-label">Meta Minima (R$) *</label>
               <input type="text" class="form-input" value="300.000,00" required placeholder="Ex: 300.000,00">
-              <small class="text-muted">Minimo para a oferta ser bem-sucedida</small>
+              <small class="text-muted">Mínimo para a oferta ser bem-sucedida</small>
             </div>
             <div class="form-group">
-              <label class="form-label">Investimento Minimo (R$) *</label>
+              <label class="form-label">Investimento Mínimo (R$) *</label>
               <input type="text" class="form-input" value="1.000,00" required placeholder="Ex: 1.000,00">
-              <small class="text-muted">Valor minimo por investidor</small>
+              <small class="text-muted">Valor mínimo por investidor</small>
             </div>
             <div class="form-group">
-              <label class="form-label">Investimento Maximo (R$) *</label>
+              <label class="form-label">Investimento Máximo (R$) *</label>
               <input type="text" class="form-input" value="20.000,00" required placeholder="Ex: 20.000,00">
-              <small class="text-muted">Valor maximo por investidor (limite RCVM: R$ 20.000)</small>
+              <small class="text-muted">Valor máximo por investidor (limite RCVM: R$ 20.000)</small>
             </div>
           </div>
 
           <hr style="margin: 30px 0; border: none; border-top: 1px solid var(--border);">
 
-          <h4 style="margin-bottom: 20px;"><i class="bi bi-pie-chart"></i> Participacao Societaria</h4>
+          <h4 style="margin-bottom: 20px;"><i class="bi bi-pie-chart"></i> Participação Societária</h4>
 
           <div class="grid-2" style="gap: 20px;">
             <div class="form-group">
               <label class="form-label">Equity Ofertado (%) *</label>
               <input type="number" class="form-input" value="15" min="0.1" max="100" step="0.1" required>
-              <small class="text-muted">Percentual de participacao oferecido</small>
+              <small class="text-muted">Percentual de participação oferecido</small>
             </div>
             <div class="form-group">
               <label class="form-label">Valuation Pre-Money (R$)</label>
@@ -131,12 +144,12 @@
               <small class="text-muted">Calculado automaticamente</small>
             </div>
             <div class="form-group">
-              <label class="form-label">Tipo de Titulo *</label>
+              <label class="form-label">Tipo de Título *</label>
               <select class="form-input" required>
                 <option value="">Selecione...</option>
-                <option value="equity" selected>Participacao Societaria (Equity)</option>
-                <option value="conversivel">Titulo Conversivel</option>
-                <option value="divida">Titulo de Divida</option>
+                <option value="equity" selected>Participação Societária (Equity)</option>
+                <option value="conversivel">Título Conversivel</option>
+                <option value="divida">Título de Divida</option>
               </select>
             </div>
             <div class="form-group">
@@ -145,34 +158,34 @@
                 <option value="">Selecione...</option>
                 <option value="tag-along" selected>Tag-Along + Voto em Assembleias</option>
                 <option value="dividendos">Dividendos Prioritarios</option>
-                <option value="conversao">Conversao em Acoes</option>
+                <option value="conversão">Conversão em Ações</option>
               </select>
             </div>
           </div>
 
           <hr style="margin: 30px 0; border: none; border-top: 1px solid var(--border);">
 
-          <h4 style="margin-bottom: 20px;"><i class="bi bi-calendar3"></i> Periodo da Oferta</h4>
+          <h4 style="margin-bottom: 20px;"><i class="bi bi-calendar3"></i> Período da Oferta</h4>
 
           <div class="grid-2" style="gap: 20px;">
             <div class="form-group">
-              <label class="form-label">Data de Inicio *</label>
+              <label class="form-label">Data de Início *</label>
               <input type="date" class="form-input" value="2026-02-01" required>
-              <small class="text-muted">Quando a oferta sera publicada</small>
+              <small class="text-muted">Quando a oferta será publicada</small>
             </div>
             <div class="form-group">
               <label class="form-label">Data de Encerramento *</label>
               <input type="date" class="form-input" value="2026-04-01" required>
-              <small class="text-muted">Prazo maximo: 180 dias (RCVM 88)</small>
+              <small class="text-muted">Prazo máximo: 180 dias (RCVM 88)</small>
             </div>
           </div>
 
           <div class="form-group mt-20">
-            <label class="form-label">Destinacao dos Recursos *</label>
+            <label class="form-label">Destinação dos Recursos *</label>
             <textarea class="form-input" rows="4" required placeholder="Descreva como os recursos captados serao utilizados...">Os recursos captados serao destinados para:
 - 40% Desenvolvimento de produto e tecnologia
 - 30% Marketing e aquisicao de clientes
-- 20% Contratacao de equipe
+- 20% Contratação de equipe
 - 10% Capital de giro e reserva</textarea>
           </div>
 
@@ -183,23 +196,29 @@
               <i class="bi bi-arrow-left"></i> Voltar
             </a>
             <a href="nova-oferta-step3.html" class="btn btn-primary">
-              Proximo: Documentos <i class="bi bi-arrow-right"></i>
+              Próximo: Documentos <i class="bi bi-arrow-right"></i>
             </a>
           </div>
         </form>
       </div>
-      <!-- Disclaimer Regulatorio CVM -->
+      <!-- Disclaimer Regulatório CVM -->
       <div class="dashboard-disclaimer">
         <div class="cvm-badge"><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</div>
-        <p>CrowdInvest Plataforma de Investimento Ltda. CNPJ: 00.000.000/0001-00. Plataforma de financiamento coletivo de investimento (crowdfunding) autorizada pela Comissao de Valores Mobiliarios (CVM) conforme Resolucao RCVM 88/2022.</p>
+        <p>ALBA PLATAFORMA DE INVESTIMENTOS ALTERNATIVOS LTDA (Alba Capital). CNPJ: 43.413.213/0001-58. Plataforma de investimentos alternativos autorizada pela Comissão de Valores Mobiliários (CVM) conforme Resolução RCVM 88/2022.</p><p style="font-size: 0.8rem; margin-top: 8px;"><i class="bi bi-envelope"></i> contato@albainvest.com.br | <i class="bi bi-whatsapp"></i> (11) 7380-9085</p>
         <div class="warning-text">
           <i class="bi bi-exclamation-triangle"></i>
-          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada nao garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
+          <span>Investimentos em startups e pequenas empresas envolvem riscos significativos, incluindo perda total do capital investido. Rentabilidade passada não garante rentabilidade futura. Leia atentamente o material da oferta antes de investir.</span>
         </div>
       </div>
     </main>
   </div>
 
   <script src="../../js/app.js"></script>
+  
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
